update po files
git-svn-id: file:///srv/svn/publican/trunk@517 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/content/common/bn-IN/Conventions.po
+++ b/publican/content/common/bn-IN/Conventions.po
@@ -1,13 +1,13 @@
 # translation of Conventions.po to Bengali INDIA
-# Runa Bhattacharjee <runab@redhat.com>, 2007.
+# Runa Bhattacharjee <runab@redhat.com>, 2007, 2008.
 msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2008-09-29 04:47+0000\n"
-"PO-Revision-Date: 2007-11-05 15:55+0530\n"
+"PO-Revision-Date: 2008-10-07 15:50+0530\n"
 "Last-Translator: Runa Bhattacharjee <runab@redhat.com>\n"
-"Language-Team: Bengali INDIA\n"
+"Language-Team: Bengali INDIA <fedora-trans-bn_IN@redhat.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -26,7 +26,7 @@ msgstr "ডকুমেন্টে ব্যবহৃত নিয়ম নীত
 msgid ""
 "This manual uses several conventions to highlight certain words and phrases "
 "and draw attention to specific pieces of information."
-msgstr ""
+msgstr "কোনো বিশেষ তথ্যের প্রতি আপনার দৃষ্টি আকর্ষণ করতে সহায়িকার মধ্যে শব্দ ও পংক্তিকে তথ্যের গুরুত্ব অনুযায়ী বিভিন্ন রূপে চিহ্নিত করা হয়েছে।"
 
 #. Tag: para
 #: Conventions.xml:11
@@ -39,12 +39,15 @@ msgid ""
 "displayed. Note: Red Hat Enterprise Linux 5 and later includes the "
 "Liberation Fonts set by default."
 msgstr ""
+"এই নথির PDF ও মুদ্রিত সংস্করণে <ulink "
+"url=\"https://fedorahosted.org/liberation-fonts/\">Liberation ফন্ট</ulink> "
+"সংকলনের মুদ্রাক্ষর ব্যবহার করা হবে। কম্পিউটারের মধ্যে Liberation ফন্ট ইনস্টল থাকলে এই নথির HTML সংস্করণেও তা ব্যবহৃত হবে। অন্যথা, সমতূল্য বিকল্প মুদ্রাক্ষর প্রয়োগ করা হবে। উল্লেখ্য: Red Hat Enterprise Linux 5 ও ঊর্ধ্বতন সংস্করণে ডিফল্টরূপে Liberation Fonts অন্তর্বুক্ত করা হয়।"
 
 #. Tag: title
 #: Conventions.xml:16
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Typographic Conventions"
-msgstr "ডকুমেন্টে ব্যবহৃত নিয়ম নীতি"
+msgstr "মুদ্রণ সংক্রান্ত নিয়মাবলী"
 
 #. Tag: para
 #: Conventions.xml:18
@@ -53,13 +56,13 @@ msgid ""
 "Four typographic conventions are used to call attention to specific words "
 "and phrases. These conventions, and the circumstances they apply to, are as "
 "follows."
-msgstr ""
+msgstr "কিছু শব্দ ও পংক্তির প্রতি পাঠকের দৃষ্টি আকর্ষণ করার জন্য সেগুলি লেখার সময় মুদ্রণ সংক্রান্ত চার ধরনের নিয়াম পালন করা হয়েছে। এই নিয়াবলী ও সেগুলি ব্যবহারের পরিস্থিতি সম্বন্ধে পরবর্তী অংশে আলোচনা করা হয়েছে।"
 
 #. Tag: literal
 #: Conventions.xml:23
 #, no-c-format
 msgid "Mono-spaced Bold"
-msgstr ""
+msgstr "মোনো-স্পেসড বোল্ড"
 
 #. Tag: para
 #: Conventions.xml:26
@@ -67,7 +70,7 @@ msgstr ""
 msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight key caps and key-combinations. For example:"
-msgstr ""
+msgstr "সিস্টেমের জন্য ইনপুট যেমন শেল কমান্ড, ফাইলের নাম ও পাথ লিখতে ব্যবহার করা হয়েছে। কি-র নাম অথবা কি সংকলন চিহ্নিত করার জন্যও ব্যবহৃত। উদাহরণস্বরূপ:"
 
 #. Tag: section
 #: Conventions.xml:28
@@ -155,12 +158,25 @@ msgid ""
 "firstterm>). Unlike other modules, only one module from the MPM group can be "
 "loaded by the Apache HTTP Server. </para> </blockquote>"
 msgstr ""
+"<blockquote> <para> কাজের জন্য ব্যবহৃত বর্তমান ডিরেক্টরির মধ্যে "
+"<filename>my_next_bestselling_novel</filename> ফাইলের বিষয়বস্তু প্রদর্শনের উদ্দেশ্যে, শেল প্রম্পটের মধ্যে <command>cat my_next_bestselling_novel</command> কমান্ড লিখুন ও <keycap>Enter</keycap> টিপে কমান্ডটি সঞ্চালন করুন। </para> </blockquote> <para> উপরোক্ত পংক্তির মধ্যে একটি ফাইলের নাম, শেল কমান্ড ও কি-র নাম মোনো-স্পেস্ড বোল্ডে লেখা হয়েছে এবং সেগুলি পৃথকরূপে চিহ্নিত করা সম্ভব। </para> <para> কি-সংকলনগুলির ক্ষেত্রে ব্যবহৃত হাইফেন চিহ্নের কারণে একক কি থেকে পৃথক রূপে সনাক্ত করা সম্ভব হবে। উদাহরণস্বরূপ: </para> <blockquote> <para> <keycap>Enter</"
+"keycap> টিপে কমান্ড সঞ্চালন করুন। </para> <para> প্রথম ভার্চুয়াল টার্মিনালে পরিবর্তন করার জন্য <keycombo><keycap>Ctrl</"
+"keycap><keycap>Alt</keycap><keycap>F1</keycap></keycombo> টিপুন। X-Windows সেশানে প্রত্যাবর্তনের জন্য <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></keycombo> টিপুন। </"
+"para> </blockquote> <para> প্রথম পংক্তিতে প্রযোজ্য কি-র অংশ উজ্জ্বল করা হয়। দ্বিতীয় পংক্তিটিতে তিনটি কি-র একত্রিত প্রয়োগের দুটি সংকলন উজ্জ্বল করা হয়। </para> <para> সোর্স কোড সম্পর্কে আলোচনার সময় অনুচ্ছেদের মধ্যে উল্লিখিত ক্লাসের নাম, মেথড, ফাংশান, ভেরিয়েবলের নাম ও প্রাপ্ত ফলাফলের মান <literal>মোনো-স্পেস্ড বোল্ড</"
+"literal>-এ লেখা হবে। উদাহরণস্বরূপ: </para> <blockquote> <para> ফাইল সম্পর্কিত ক্লাসের মধ্যে রয়েছে <classname>filesystem</classname> ফাইল-সিস্টেমের জন্য, <classname>file</"
+"classname> ফাইলের জন্য, এবং <classname>dir</classname> ডিরেক্টরির জন্য। প্রতিটি ক্লাসের ক্ষেত্রে প্রযোজ্য অনুমতি নির্ধারিত রয়েছে। </para> </blockquote> <para> <application>আপেক্ষিক বোল্ড</application> </para> <para> এই বিন্যাস দ্বারা সিস্টেমের মধ্যে প্রাপ্ত শব্দ অথবা পংক্তি যেমন অ্যাপ্লিকেশনের নাম; ডায়লগ বক্সের লেখা; লেবেল করা বাটন; চেক-বক্স ও রেডিও-বাটনের লেবেল; মেনু ও সাব-মেনুর শিরোনাম প্রভৃতি উল্লেখ করা হয়। উদাহরণস্বরূপ: </para> <blockquote> <para> <application>মাউস সম্পর্কিত পছন্দ</application> আরম্ভ করার জন্য প্রধান মেনু বার থেকে <guimenu>সিস্টেম > পছন্দ > মাউস</guimenu> নির্বাচন করুন। <guilabel>বাটন</guilabel> ট্যাবের মধ্যে <guilabel>বাঁহাতি মাউস</guilabel> শীর্ষক চেকবক্স নির্বাচন করুন ও <guibutton>বন্ধ করুন</guibutton> টিপে, মাউসের বাঁদিকের বাটনের পরিবর্তে ডানদিকের বাটনটিকে প্রধান বাটন রূপে নির্ধারণ করুন (এর ফলে মাউসটি বাঁ হাতে ব্যবহারের জন্য সুবিধাজনক হবে)। </para> <para> <application>gedit</application> ফাইলের মধ্যে কোনো বিশেষ অক্ষর অন্তর্ভুক্ত করা জন্য প্রধান মেনু বার থেকে <guimenu>অ্যাপ্লিকেশন তালিকা > আনুষঙ্গিক > অক্ষরের ম্যাপ</guimenu> নির্বাচন করুন। এর পরে <application>অক্ষরের ম্যাপ</application>-র প্রধান মেনু থেকে <guimenu>অনুসন্ধান > Find&hellip;</guimenu> নির্বাচন করুন ও <guilabel>অনুসন্ধান</guilabel> শীর্ষক ক্ষেত্রের মধ্যে প্রয়েজনীয় অক্ষরটি লিখে <guibutton>পরবর্তী</guibutton> শীর্ষক বাটন ক্লিক করুন। অনুসন্ধান করা অক্ষরটি <guilabel>অক্ষরের টেবিল</guilabel>-এ উজ্জ্বলিত করা হবে। উজ্জ্বলিত অক্ষরটি দুইবার ক্লিক করে "
+"<guilabel>কপি করার জন্য চিহ্নিত বিষয়বস্তু</guilabel> ক্ষেত্রে স্থাপন করে <guibutton>কপি করুন</"
+"guibutton> শীর্ষক বাটনটি ক্লিক করুন। এর পরে, এডিটরে প্রত্যাবর্তন করে <application>gedit</application>-র মেনু বার থেকে <guimenu>সম্পাদনা > পেস্ট করুন</guimenu> নির্বাচন করুন। </para> </blockquote> <para> উপরোক্ত অংশে রয়েছে অ্যাপ্লিকেশনের নাম; সিস্টেমের মেনু ও মেনুর বস্তুর নাম; অ্যাপ্লিকেশনের মেনুর নাম; ও GUI প্রেক্ষাপটে প্রদর্শিত বাটন ও টেক্সট। এই সমস্ত বস্তু আপেক্ষিক বোল্ড বিন্যাসে প্রদর্শিত হয়েছে ও সহজেই পৃথকরূপে সনাক্ত করা যাবে। </para> <para> মেনু ও সাব-মেনুর মধ্যে চলাচলের জন্য <guimenu>></guimenu> চিহ্ন প্রয়োগ করা হয়েছে। তূলনামূলকভাবে কঠিন নির্দেশাবলী পরিবর্তে এই প্রণালী ব্যবহার করা হয়েছে, যেমন 'প্রধান মেনু বারের মধ্যে <guimenu>সিস্টেম</guimenu> মেনুর মধ্যে উপস্থিত <guimenu>পছন্দ</guimenu> সাব-মেনু থেকে <guimenuitem>মাউস</guimenuitem> নির্বাচন করুন'। </para> <para> <command><replaceable>মোনো-স্পেস্ড বোল্ড আইটালিক</replaceable></command> অথবা <application><replaceable>আপেক্ষিক বোল্ড আইটালিক</replaceable></"
+"application> </para> <para> স্পেস্ড অথবা আপেক্ষিক বোল্ড নির্বিশেষে,আইটালিক দ্বারা চিহ্নিত লেখাগুলি পরিবর্তনযোগ্য মান নির্দেশ করে অর্থাৎ চিহ্নিত লেখাগুলি লেখা অথবা প্রদর্শন করা হবে না ও পরিস্থিতি অনুযায়ী পরিবর্তন করা হবে। উদাহরণস্বরূপ: </para> <blockquote> <para>  ssh সহযোগে কোনো দূরবর্তী মেশিনের সাথে সংযোগ স্থাপনের জন্য, শেল প্রম্পটে <command>ssh <replaceable>username</replaceable>@<replaceable>domain.name</replaceable></"
+"command> লিখুন। দূরবর্তী মেশিনের নাম <filename>example.com</filename> ও সেই মেশিনে আপনার অ্যাকাউন্টের নাম john হলে, <command>ssh john@example.com</command> লিখুন। </para> <para> <command>mount -o remount <replaceable>file-system</replaceable></command> কমান্ডের সাহায্যে সংশ্লিষ্ট ফাইল-সিস্টেম পুনরায় মাউন্ট করা হয়। উদাহরণস্বরূপ, <filename>/home</filename> ফাইল-সিস্টেম পুনরায় মাউন্ট করার জন্য, <command>mount -o remount /home</command> কমান্ড ব্যবহার করুন। </para> "
+"<para> ইনস্টল করা কোনো প্যাকেজের সংস্করণ সংখ্যা জানার জন্য <command>rpm -q <replaceable>package</replaceable></command> কমান্ড প্রয়োগ করুন। এর ফলে নিম্নলিখিত বিন্যাসে ফলাফল প্রদর্শিত হবে: <command><replaceable>package-version-release</replaceable></command>। </para> </blockquote> <para> গাঢ় ও আইটালিক বিন্যাসে চিহ্নিত শব্দগুলি লক্ষ্য করুন&mdash; username, domain.name, file-system, package, "
+"version ও release। প্রতিটি শব্দ একটি স্থানকে চিহ্নিত করছে এবং কমান্ড লেখার সময় অথবা সিস্টেমে দ্বারা প্রদর্শিত লেখা এই শব্দগুলির পরিবর্তে প্রদর্শিত হবে।  </para> <para> কোনো কাজের শিরোনামে আইটালিকের ব্যবহার ব্যতীত, কোনো নতুন ও গুরুত্বপূর্ণ অভিব্যক্তির প্রথম উল্লেখের সময় এই বিন্যাস প্রয়োগ করা হয়। উদাহরণস্বরূপ: </para> <blockquote> <para> Apache HTTP সার্ভার দ্বারা অনুরোধ গ্রহণ করা হলে, সেগুলির ব্যবস্থাপনার জন্য চাইল্ড প্রসেস অথবা থ্রেড আরম্ভ করা হয়। চাইল্ড প্রসেস অথবা থ্রেডের এই সংকলনটি  <firstterm>server-pool</firstterm> নামে পরিচিত। Apache HTTP Server 2.0-র অধীন, নির্মাণ ও পরিচালনার দায়িত্বভার <firstterm>Multi-Processing Modules</firstterm> (<firstterm>MPMs</firstterm>) নামক মডিউল সংকলেনর উপর ধার্য করা হয়েছে। অন্যান্য মডিউলের তুলনায় MPM সংকলনের শুধুমাত্র একটি মডিউল Apache HTTP সার্ভার মডিউলে লোড করা যাবে। </para> </blockquote>"
 
 #. Tag: title
 #: Conventions.xml:132
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Pull-quote Conventions"
-msgstr "ডকুমেন্টে ব্যবহৃত নিয়ম নীতি"
+msgstr ""
 
 #. Tag: para
 #: Conventions.xml:134
@@ -177,6 +193,8 @@ msgid ""
 "Output sent to a terminal is set in <computeroutput>Mono-spaced Roman</"
 "computeroutput> and presented thus:"
 msgstr ""
+"টার্মিনালে প্রদর্শিত আউটপুট <computeroutput>মোনো-স্পেস্ড রোমান</"
+"computeroutput> মুদ্রাক্ষরে নিম্নলিখিত রূপে প্রদর্শিত হবে:"
 
 #. Tag: screen
 #: Conventions.xml:142
@@ -185,6 +203,8 @@ msgid ""
 "books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
 "books_tests  Desktop1  downloads      images  notes  scripts  svgs"
 msgstr ""
+"books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
+"books_tests  Desktop1  downloads      images  notes  scripts  svgs"
 
 #. Tag: para
 #: Conventions.xml:144
@@ -193,6 +213,8 @@ msgid ""
 "Source-code listings are also set in <computeroutput>Mono-spaced Roman</"
 "computeroutput> but are presented and highlighted as follows:"
 msgstr ""
+"সোর্স কোডের অংশগুলিও <computeroutput>মোনো-স্পেস্ড রোমান</"
+"computeroutput> মুদ্রাক্ষরে লেখা হয় কিন্তু নিম্নলিখিত প্রণালীতে উজ্জ্বল করে চিহ্নিত করা হয়:"
 
 #. Tag: programlisting
 #: Conventions.xml:148
@@ -219,12 +241,32 @@ msgid ""
 "   \n"
 "}"
 msgstr ""
+"package org.jboss.book.jca.ex1;\n"
+"\n"
+"import javax.naming.InitialContext;\n"
+"\n"
+"public class ExClient\n"
+"{\n"
+"   public static void main(String args[]) \n"
+"       throws Exception\n"
+"   {\n"
+"      InitialContext iniCtx = new InitialContext();\n"
+"      Object         ref    = iniCtx.lookup(\"EchoBean\");\n"
+"      EchoHome       home   = (EchoHome) ref;\n"
+"      Echo           echo   = home.create();\n"
+"\n"
+"      System.out.println(\"Created Echo\");\n"
+"\n"
+"      System.out.println(\"Echo.echo('Hello') = \" + echo.echo(\"Hello\"));\n"
+"   }\n"
+"   \n"
+"}"
 
 #. Tag: title
 #: Conventions.xml:153
 #, no-c-format
 msgid "Notes and Warnings"
-msgstr ""
+msgstr "উল্লেখ্যবস্তু ও সতর্কবাণী"
 
 #. Tag: para
 #: Conventions.xml:155
@@ -232,7 +274,7 @@ msgstr ""
 msgid ""
 "Finally, we use three visual styles to draw attention to information that "
 "might otherwise be overlooked."
-msgstr ""
+msgstr "অবশেষে, সহজে উপেক্ষিত কিছু তথ্যের প্রতি পাঠকের দৃষ্টি আকর্ষণের উদ্দেশ্যে তিনটি ভিন্ন ধরনের বিন্যাস প্রয়োগ করা হয়।"
 
 #. Tag: title
 #: Conventions.xml:160
@@ -248,6 +290,8 @@ msgid ""
 "Ignoring a note should have no negative consequences, but you might miss out "
 "on a trick that makes your life easier."
 msgstr ""
+"উল্লেখ্য শীর্ষক লেখাগুলি মূলত কোনো ধরনের সহজ উপায় প্রভৃতি সম্পর্কে পাঠককে ওয়াকিবহাল করতে প্রয়োগ করা হয়।  "
+"এই ধরনের তথ্য উপেক্ষা করার ফলে কোনো ক্ষয়ক্ষতি না হলেও, পাঠকের কাজে সহায়ক তথ্যাদি তাদের অজানা থেকে যাবে।"
 
 #. Tag: title
 #: Conventions.xml:167
@@ -264,6 +308,9 @@ msgid ""
 "before an update will apply. Ignoring Important boxes won't cause data loss "
 "but may cause irritation and frustration."
 msgstr ""
+"ভুলবসত সহজেই উপেক্ষিত তথ্যগুলি গুরুত্বপূর্ণ শীর্ষক বাক্সগুলির মধ্যে লেখা হয়: configuration changes "
+"that only apply to the current session, or services that need restarting "
+"before an update will apply. গুরুত্বপূর্ণ শীর্ষক বাক্সের মধ্যে লেখা তথ্যগুলি উপেক্ষিত হলে তথ্য হারানোর সম্ভাবনা না থাকলেও অযথা বাধা বিঘ্ন সৃষ্টি হতে পারে।"
 
 #. Tag: title
 #: Conventions.xml:175
@@ -277,141 +324,5 @@ msgstr "সতর্কবাণী"
 msgid ""
 "A Warning should not be ignored. Ignoring warnings will most likely cause "
 "data loss."
-msgstr ""
+msgstr "সতর্কবাণী উপেক্ষা করা উচিত নয় এবং এটি উপেক্ষা করা হলে তথ্য হারানোর সম্ভাবনা রয়েছে।"
 
-#~ msgid ""
-#~ "Certain words in this manual are represented in different fonts, styles, "
-#~ "and weights. This highlighting indicates that the word is part of a "
-#~ "specific category. The categories include the following:"
-#~ msgstr ""
-#~ "এই সহায়ক-পুস্তিকাটিতে কিছু শব্দ ভিন্ন ফন্ট, মুদ্রাক্ষর, মাপ এবং আকার ব্যবহার করে "
-#~ "লেখা হয়েছে। কোনো নির্দিষ্ট শ্রেণীর তথ্য উল্লেখকারী বিভিন্ন শব্দ একই বিন্যাসে লেখা "
-#~ "হয়েছে। ব্যবহৃত শ্রেণীগুলি হল:"
-
-#~ msgid "Courier font"
-#~ msgstr "Courier ফন্ট"
-
-#~ msgid ""
-#~ "Courier font represents <command>commands</command>, <filename>file names "
-#~ "and paths</filename>, and <prompt>prompts</prompt> ."
-#~ msgstr ""
-#~ "Courier ফন্টের সাহায্যে <command>কমান্ড</command>, <filename>ফাইলের নাম ও "
-#~ "পাথ</filename> এবং <prompt>প্রম্পট</prompt> উল্লিখিত হয়েছে।"
-
-#, fuzzy
-#~ msgid ""
-#~ "Desktop       about.html       logs      paulwesterberg.png\n"
-#~ "Mail          backupfiles      mail      reports"
-#~ msgstr ""
-#~ "নিম্নলিখিত বিন্যাসে কম্পিউটার থেকে প্রাপ্ত আউটপুট নির্দিষ্ট হয়েছে: <screen>\n"
-#~ "Desktop       about.html       logs      paulwesterberg.png\n"
-#~ "Mail          backupfiles      mail      reports\n"
-#~ "</screen>"
-
-#~ msgid "bold Courier font"
-#~ msgstr "বোল্ড Courier ফন্ট"
-
-#~ msgid ""
-#~ "Bold Courier font represents text that you are to type, such as: "
-#~ "<userinput>service jonas start</userinput>"
-#~ msgstr ""
-#~ "বোল্ড Courier ফন্টের সাহায্যে ব্যবহারকারী দ্বারা লিখনযোগ্য তথ্য চিহ্নিত হবে, "
-#~ "যেমন: <userinput>service jonas start</userinput>"
-
-#~ msgid ""
-#~ "If you have to run a command as root, the root prompt (<literal>#</"
-#~ "literal>) precedes the command:"
-#~ msgstr ""
-#~ "root পরিচয়ে সঞ্চালনযোগ্য কমান্ডের ক্ষেত্রে কমান্ডের পূর্বে root prompt "
-#~ "(<literal>#</literal>) চিহ্ন উল্লিখিত হবে:"
-
-#~ msgid "italic Courier font"
-#~ msgstr "আইটালিক Courier ফন্ট"
-
-#, fuzzy
-#~ msgid ""
-#~ "Italic Courier font represents a variable, such as an installation "
-#~ "directory: <filename> <replaceable>install_dir</replaceable>/bin/</"
-#~ "filename>"
-#~ msgstr ""
-#~ "আইটালিক Courier ফন্ট দ্বারা পরিবর্তনযোগ্য কোনো তথ্য যেমন ইনস্টলেশন ডিরেক্টরির "
-#~ "পাথ প্রভৃতি চিহ্নিত হবে: <filename><replaceable>install_dir</replaceable>/"
-#~ "bin/</filename>"
-
-#~ msgid "bold font"
-#~ msgstr "বোল্ড ফন্ট"
-
-#~ msgid ""
-#~ "Bold font represents <application>application programs</application> and "
-#~ "<guilabel>text found on a graphical interface</guilabel>."
-#~ msgstr ""
-#~ "বোল্ড ফন্টের সাহায্যে <application>অ্যাপ্লিকেশন প্রোগ্রাম</application> ও "
-#~ "<guilabel>গ্রাফিক্যাল ইন্টারফেসে উপস্থিত লেখা</guilabel> উল্লিখিত হয়েছে।"
-
-#~ msgid ""
-#~ "When shown like this: <guibutton> OK </guibutton>, it indicates a button "
-#~ "on a graphical application interface."
-#~ msgstr ""
-#~ "<guibutton> ঠিক আছে</guibutton>: এই বিন্যাসে চিহ্নিত তথ্য গ্রাফিক্যাল "
-#~ "অ্যাপ্লিকেশন ইন্টারফেসের বাটনের ক্ষেত্রে ব্যবহৃত হয়েছে।"
-
-#~ msgid ""
-#~ "Additionally, the manual uses different strategies to draw your attention "
-#~ "to pieces of information. In order of how critical the information is to "
-#~ "you, these items are marked as follows:"
-#~ msgstr ""
-#~ "উপরন্তু, কোনো বিশেষ তথ্যের প্রতি আপনার দৃষ্টি আকর্ষণ করতে সহায়িকার মধ্যে একাধিক "
-#~ "উপায় অবলম্বন করা হয়েছে। আপনার সিস্টেমে ঐ তথ্যের গুরুত্ব অনুযায়ী সেগুলিকে বিভিন্ন "
-#~ "রূপে চিহ্নিত করা হয়েছে:"
-
-#~ msgid ""
-#~ "A note is typically information that you need to understand the behavior "
-#~ "of the system."
-#~ msgstr ""
-#~ "সিস্টেমের আচরণ সম্বন্ধে ব্যবহারকারীকে ওয়াকিবহল করার উদ্দেশ্যে 'উল্লেখ্য' শীর্ষক "
-#~ "তথ্য উপলব্ধ করা হয়েছে।"
-
-#~ msgid "A tip is typically an alternative way of performing a task."
-#~ msgstr "'উপদেশ' দ্বারা কোনো ধরনের কর্ম সঞ্চালনের ভিন্ন পদ্ধতি সম্পর্কে লেখা হয়েছে।"
-
-#~ msgid ""
-#~ "Important information is necessary, but possibly unexpected, such as a "
-#~ "configuration change that will not persist after a reboot."
-#~ msgstr ""
-#~ "'গুরুত্বপূর্ণ' রূপে চিহ্নিত তথ্যগুলি আবশ্যক হলেও সম্ভবত অপ্রত্যাশিত, যেমন কনফিগারেশন "
-#~ "সংক্রান্ত বিবিধ পরিবর্তন যেগুলি সিস্টেম পুনরায় বুট করার পরে মুছে ফেলা হবে।"
-
-#~ msgid "Caution"
-#~ msgstr "সাবধান"
-
-#~ msgid ""
-#~ "A caution indicates an act that would violate your support agreement, "
-#~ "such as recompiling the kernel."
-#~ msgstr ""
-#~ "'সাবধান' চিহ্ন দ্বারা উল্লিখিত তথ্যের সাহায্যে, আপনার ক্রয় করা সহায়তা চুক্তি "
-#~ "উল্লঙ্ঘনকারী কর্মগুলি নির্দেশ করা হয়, যেমন কার্নেল পুনরায় কম্পাইল করা হলে।"
-
-#~ msgid ""
-#~ "A warning indicates potential data loss, as may happen when tuning "
-#~ "hardware for maximum performance."
-#~ msgstr ""
-#~ "'সতর্কবাণী' চিহ্ন দ্বারা তথ্য ক্ষতিগ্রস্ত হওয়ার সম্ভাবনার ইঙ্গিত দেওয়া হয়, যেমন "
-#~ "সর্বোত্তম কর্মক্ষমতা প্রাপ্ত করার জন্য হার্ডওয়্যার পরিবর্তনের সময়।"
-
-#~ msgid "gconftool-2\n"
-#~ msgstr "gconftool-2\n"
-
-#~ msgid ""
-#~ "\n"
-#~ "# <placeholder-1/>\n"
-#~ "\t\t\t\t"
-#~ msgstr ""
-#~ "\n"
-#~ "# <placeholder-1/>\n"
-#~ "\t\t\t\t"
-
-#~ msgid "Tip"
-#~ msgstr "উপদেশ"
-
-#~ msgid "translator-credits"
-#~ msgstr "রুণা ভট্টাচার্য্য <runab@redhat.com> ২০০৭"
