--- a/publican/content/common/ru-RU/Feedback.po
+++ b/publican/content/common/ru-RU/Feedback.po
@@ -1,11 +1,11 @@
 # translation of Feedback.po to
-# Yulia Poyarkova <yulia.poyarkova@redhat.com>, 2007.
+# Yulia Poyarkova <yulia.poyarkova@redhat.com>, 2007, 2008.
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2008-01-02 06:17+0000\n"
-"PO-Revision-Date: 2007-11-21 12:35+1100\n"
+"PO-Revision-Date: 2008-10-09 12:36+1100\n"
 "Last-Translator: Yulia Poyarkova <yulia.poyarkova@redhat.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -35,39 +35,5 @@ msgstr "контактная информация для данного руко
 #: Feedback.xml:11
 #, no-c-format
 msgid "You should over ride this by creating your own local Feedback.xml file."
-msgstr ""
+msgstr "Переопределите этот файл, создав собственный локальный файл Feedback.xml."
 
-#~ msgid ""
-#~ "If you find a typographical error in this manual, or if you have thought "
-#~ "of a way to make this manual better, we would love to hear from you! "
-#~ "Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat."
-#~ "com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the "
-#~ "product <application>&PRODUCT;.</application>"
-#~ msgstr ""
-#~ "Если вы обнаружите ошибку в данном руководстве, или у вас есть "
-#~ "предложения по его усовершенствованию, мы бы хотели услышать об этом. "
-#~ "Отправьте сообщение в систему регистрации ошибок Bugzilla (<ulink url="
-#~ "\"http://bugzilla.redhat.com/bugzilla/\">http://bugzilla.redhat.com/"
-#~ "bugzilla/</ulink>), указав компонент <application>&PRODUCT;.</"
-#~ "application>."
-
-#~ msgid ""
-#~ "When submitting a bug report, be sure to mention the manual's identifier: "
-#~ "<citetitle>&BOOKID;</citetitle>"
-#~ msgstr ""
-#~ "Отправляя отчет, не забудьте указать идентификатор руководства, "
-#~ "<citetitle>&BOOKID;</citetitle>."
-
-#~ msgid ""
-#~ "If you have a suggestion for improving the documentation, try to be as "
-#~ "specific as possible when describing it. If you have found an error, "
-#~ "please include the section number and some of the surrounding text so we "
-#~ "can find it easily."
-#~ msgstr ""
-#~ "Если у вас есть предложения по улучшению документации, попытайтесь "
-#~ "описать их как можно более детально. Если вы нашли ошибку, пожалуйста, "
-#~ "укажите номер раздела и часть окружающего текста, чтобы облегчить ее "
-#~ "поиск."
-
-#~ msgid "translator-credits"
-#~ msgstr "translator-credits"
