--- a/publican/content/common/zh-TW/Conventions.po
+++ b/publican/content/common/zh-TW/Conventions.po
@@ -1,13 +1,14 @@
-# translation of Conventions.po to Traditional Chinese
+# translation of Conventions.po to
 # Terry Chuang <terry.chuang@redhat.com>, 2007.
+# Terry Chuang <tchuang@redhat.com>, 2008.
 msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2008-09-29 04:47+0000\n"
-"PO-Revision-Date: 2007-10-23 16:54+1000\n"
-"Last-Translator: Terry Chuang <terry.chuang@redhat.com>\n"
-"Language-Team: Traditional Chinese <zh-TW@li.org>\n"
+"PO-Revision-Date: 2008-10-09 12:58+1000\n"
+"Last-Translator: Terry Chuang <tchuang@redhat.com>\n"
+"Language-Team:  <zh@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -25,7 +26,7 @@ msgstr "文件常規"
 msgid ""
 "This manual uses several conventions to highlight certain words and phrases "
 "and draw attention to specific pieces of information."
-msgstr ""
+msgstr "本指南使用了幾種常規來強調特定文字與詞組並著重於特定的資訊。"
 
 #. Tag: para
 #: Conventions.xml:11
@@ -38,12 +39,14 @@ msgid ""
 "displayed. Note: Red Hat Enterprise Linux 5 and later includes the "
 "Liberation Fonts set by default."
 msgstr ""
+"在 PDF 和書面版本中，本指南使用了來自於 <ulink "
+"url=\"https://fedorahosted.org/liberation-fonts/\">Liberation Fonts</ulink> 字體組的 typefaces。倘若 Liberation Fonts 字體已安裝在您系統上的話，該字體也會被使用於 HTML 版本中。若是沒有的話，其它相等的 typefaces 便會被顯示。請注意：就預設值來講，Red Hat Enterprise Linux 5（與更新版本）已包含了 Liberation Fonts 字體。"
 
 #. Tag: title
 #: Conventions.xml:16
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Typographic Conventions"
-msgstr "文件常規"
+msgstr "排字上的常規"
 
 #. Tag: para
 #: Conventions.xml:18
@@ -52,13 +55,13 @@ msgid ""
 "Four typographic conventions are used to call attention to specific words "
 "and phrases. These conventions, and the circumstances they apply to, are as "
 "follows."
-msgstr ""
+msgstr "有四種被用來強調特定文字與詞組的排字常規。這些常規以及它們所適用於的情況如下。"
 
 #. Tag: literal
 #: Conventions.xml:23
 #, no-c-format
 msgid "Mono-spaced Bold"
-msgstr ""
+msgstr "固定粗體字型（Mono-spaced Bold）"
 
 #. Tag: para
 #: Conventions.xml:26
@@ -66,7 +69,7 @@ msgstr ""
 msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight key caps and key-combinations. For example:"
-msgstr ""
+msgstr "用來強調系統輸入，包括 shell 指令、檔案名稱與路徑。同時也被使用來強調 key caps 與按鍵組合。例如："
 
 #. Tag: section
 #: Conventions.xml:28
@@ -154,12 +157,14 @@ msgid ""
 "firstterm>). Unlike other modules, only one module from the MPM group can be "
 "loaded by the Apache HTTP Server. </para> </blockquote>"
 msgstr ""
+"<blockquote> <para> 若要查看位於您目前工作目錄中的 <filename>my_next_bestselling_novel</filename> 檔案的話，請在 shell 提示中輸入 <command>cat my_next_bestselling_novel</command> 指令並按下 <keycap>Enter</keycap> 來執行該指令。</para> </blockquote> <para>以上包含了一個檔案名稱、shell 指令，以及 key cap，並且全部以固定粗體字型來顯示。</para> <para>按鍵組合可透過 key caps 藉由連字符號連接按鍵組合鍵來辨別。例如：</para> <blockquote> <para> 請按下 <keycap>Enter</keycap> 來執行指令。</para> <para> 請按下 <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></keycombo> 來切換至第一個虛擬終端機。按下 <keycombo><keycap>Ctrl</keycap><keycap>Alt</"
+"keycap><keycap>F7</keycap></keycombo> 來返回您的 X-Windows session。</para> </blockquote> <para> 第一個句子強調了應輸入的特定 key cap。第二個句子強調了兩組含有三個 key caps 的組合，各個組合都是同時按下的。</para> <para> 若原始碼被討論到的話，某段落中所提及的 class 名稱、method、functions、variable 名稱與回傳值都將會如上一般地以 <literal>Mono-spaced Bold</literal> 顯示出。例如：</para> <blockquote> <para> 和檔案相關的 class，其中包含了<classname>filesystem</classname>（檔案系統）、<classname>file</classname>（檔案）以及 <classname>dir</classname>（目錄）。各個 class 都有和它關聯的權限組。</para> </blockquote> <para> <application>Proportional Bold</application> </para> <para> 這代表在系統上所會看見的文字或詞組，這包含了應用程式名稱；對話方塊文字；被標記的按鈕；核取方塊與 radio button 標籤；選單標題以及子選單標題。例如：</para> <blockquote> <para> 由主選單選取<guimenu>系統 > 偏好設定 > 滑鼠</guimenu> 來啟動<application>滑鼠偏好設定</application>. 請在<guialbel>按鈕</guilabel>分頁中點選<guilabel>左手操作滑鼠</guilabel>核取方塊並按下<guibutton>關閉</guibutton>來將主要滑鼠按鍵由左邊切換至右邊（這可讓滑鼠適合使用於左手）。</para> <para> 若要將特殊字元插入一個 <application>gedit</application> 檔案中的話，請由主選單中選擇<guimenu>應用程式 > 附屬應用程式 > 字元對應表</guimenu>。接下來，請由<application>字元對應表</application>的選單中選擇<guimenu>搜尋 > 尋找&hellip;</guimenu>，並在<guilabel>搜尋</guilabel>欄位中輸入字元的名稱然後按下<guibutton>下一個</guibutton>。您所選擇的字元將會顯示於<guilabel>字元表</guilabel>中。在被選定的字元上點兩下滑鼠左鍵便可將它放置在<guilabel>準備複製的文字</guilabel>欄位中，接下來請按下旁邊的<guibutton>複製</guibutton>按鈕。現在，請切換回您的文件並由 <application>gedit</application> 的選單上選擇<guimenu>編輯 > 貼上</guimenu>。</para> </blockquote> <para> 以上文字包含了應用程式名稱；系統全域的選單名稱與項目；應用程式特屬的選單名稱；以及在 GUI 介面中所看到的按鈕與文字全部都以 Proportional Bold 來顯示，並且可透過內文來辨別。</para> <para> 請注意：<guimenu>></guimenu> 是個用來表示瀏覽至某個選單以及它的子選單的縮寫。這是為了避免像是「由主選單的<guimenu>系統</guimenu>選單中的<guimenu>偏好設定</guimenu>子選單中選擇<guimenuitem>滑鼠</guimenuitem>」一般難以遵循的方式。</para> <para> <command><replaceable>Mono-spaced Bold Italic</replaceable></command>（固定粗體斜體字型）或是 <application><replaceable>Proportional Bold Italic</replaceable></application>（相稱粗體斜體字型）</para> <para> 無論是 Mono-spaced Bold 或是 Proportional Bold，額外的斜體字型便表示可替換或是變數文字。斜體字型代表您不會照字面地輸入的文字或是會依照情況而改變的文字。比方說：</para> <blockquote> <para> 若要透過使用 ssh 來連至一部遠端機器，請在 shell 提示中輸入 <command>ssh <replaceable>用戶名稱</replaceable>@<replaceable>網域.名稱</replaceable></command>。若遠端機器為 <filename>example.com</filename> 而您在該機器上的用戶名稱為 john 的話，請輸入 <command>ssh john@example.com</command>。</para> <para> <command>mount -o remount <replaceable>檔案系統</replaceable></command> 指令會將 named 檔案系統重新掛載。比方說，若要重新掛載 <filename>/home</filename> 檔案系統的話，該指令就會是 <command>mount -o remount /home</command>。</para> <para>使用 <command>rpm -q <replaceable>套件</replaceable></command> 指令來查看目前已安裝套件的版本。系統將會回傳此結果：<command><replaceable>套件發行版本</replaceable></command>。</para> </blockquote> <para>請注意以上以粗體斜體字型所表現出的文字 &mdash; 用戶名稱、網域.名稱、檔案系統、套件以及發行版本。各個文字都是個佔位符號，這可代表您提供一項指令時所輸入的文字或是系統所顯示的文字。</para> <para> 除了用來顯示一項作業標題這樣的標準用法，斜體字也可代表第一次使用的重要新詞彙。比方說：</para> <blockquote> <para> 當 Apache HTTP Server 接受了請求，它便會派遣子程序或是線程來處理它們。這組子程序或線程又被視為 <firstterm>server-pool</firstterm>。在 Apache HTTP Server 2.0 下，建立與維護這些 server-pool 的責任為一組稱為 <firstterm>多重處理模組</firstterm>（<firstterm>MPMs</firstterm>）的模組所屬。與其它模組不同，MPM 群組中只有一個模組可被 Apache HTTP Server 載入。</para> </blockquote>"
 
 #. Tag: title
 #: Conventions.xml:132
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Pull-quote Conventions"
-msgstr "文件常規"
+msgstr "引述常規"
 
 #. Tag: para
 #: Conventions.xml:134
@@ -167,7 +172,7 @@ msgstr "文件常規"
 msgid ""
 "Two, commonly multi-line, data types are set off visually from the "
 "surrounding text."
-msgstr ""
+msgstr "有兩種（一般多行的）資料類型會在圍繞它的文字中被強調出。"
 
 #. Tag: para
 #: Conventions.xml:138
@@ -175,7 +180,7 @@ msgstr ""
 msgid ""
 "Output sent to a terminal is set in <computeroutput>Mono-spaced Roman</"
 "computeroutput> and presented thus:"
-msgstr ""
+msgstr "傳送至終端機的輸出設置為 <computeroutput>Mono-spaced Roman</computeroutput> 並且以此方式顯示："
 
 #. Tag: screen
 #: Conventions.xml:142
@@ -184,6 +189,8 @@ msgid ""
 "books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
 "books_tests  Desktop1  downloads      images  notes  scripts  svgs"
 msgstr ""
+"books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
+"books_tests  Desktop1  downloads      images  notes  scripts  svgs"
 
 #. Tag: para
 #: Conventions.xml:144
@@ -191,7 +198,7 @@ msgstr ""
 msgid ""
 "Source-code listings are also set in <computeroutput>Mono-spaced Roman</"
 "computeroutput> but are presented and highlighted as follows:"
-msgstr ""
+msgstr "原始碼排列也設置為 <computeroutput>Mono-spaced Roman</computeroutput> 不過會被以下列方式顯示並強調："
 
 #. Tag: programlisting
 #: Conventions.xml:148
@@ -218,12 +225,32 @@ msgid ""
 "   \n"
 "}"
 msgstr ""
+"package org.jboss.book.jca.ex1;\n"
+"\n"
+"import javax.naming.InitialContext;\n"
+"\n"
+"public class ExClient\n"
+"{\n"
+"   public static void main(String args[]) \n"
+"       throws Exception\n"
+"   {\n"
+"      InitialContext iniCtx = new InitialContext();\n"
+"      Object         ref    = iniCtx.lookup(\"EchoBean\");\n"
+"      EchoHome       home   = (EchoHome) ref;\n"
+"      Echo           echo   = home.create();\n"
+"\n"
+"      System.out.println(\"Created Echo\");\n"
+"\n"
+"      System.out.println(\"Echo.echo('Hello') = \" + echo.echo(\"Hello\"));\n"
+"   }\n"
+"   \n"
+"}"
 
 #. Tag: title
 #: Conventions.xml:153
 #, no-c-format
 msgid "Notes and Warnings"
-msgstr ""
+msgstr "註解和警告"
 
 #. Tag: para
 #: Conventions.xml:155
@@ -231,7 +258,7 @@ msgstr ""
 msgid ""
 "Finally, we use three visual styles to draw attention to information that "
 "might otherwise be overlooked."
-msgstr ""
+msgstr "最後，我們會使用三種視覺上的形式來強調可能會被漏掉的資訊。"
 
 #. Tag: title
 #: Conventions.xml:160
@@ -246,13 +273,13 @@ msgid ""
 "A note is a tip or shortcut or alternative approach to the task at hand. "
 "Ignoring a note should have no negative consequences, but you might miss out "
 "on a trick that makes your life easier."
-msgstr ""
+msgstr "註解代表某些項目的提示、捷徑或是其它完成方式。忽略註解並不會有太大的影響，不過您可能會忽略掉某些能較輕鬆完成工作的方式。"
 
 #. Tag: title
 #: Conventions.xml:167
 #, no-c-format
 msgid "Important"
-msgstr "Important（重要）"
+msgstr "Important（重點）"
 
 #. Tag: para
 #: Conventions.xml:168
@@ -262,7 +289,7 @@ msgid ""
 "that only apply to the current session, or services that need restarting "
 "before an update will apply. Ignoring Important boxes won't cause data loss "
 "but may cause irritation and frustration."
-msgstr ""
+msgstr "重點方塊會將容易漏掉的項目詳細列出：只對應於當下 session 的配置變更，或是某些要套用更新前必須將之重新啟用的服務。倘若您忽略掉重點方塊，雖然不會造成資料遺失，不過卻會造成工作上的不便和其它影響。"
 
 #. Tag: title
 #: Conventions.xml:175
@@ -276,134 +303,5 @@ msgstr "Warning（警告）"
 msgid ""
 "A Warning should not be ignored. Ignoring warnings will most likely cause "
 "data loss."
-msgstr ""
+msgstr "任何警告都不該被忽略掉。忽略警告的話很有可能會造成資料上的遺失。"
 
-#~ msgid ""
-#~ "Certain words in this manual are represented in different fonts, styles, "
-#~ "and weights. This highlighting indicates that the word is part of a "
-#~ "specific category. The categories include the following:"
-#~ msgstr ""
-#~ "在本指南中，有些特定的字彙會被以不同的字型、樣式和權重來表現出。此反白表示"
-#~ "該文字為特定類別的一部分。這些類別包括："
-
-#~ msgid "Courier font"
-#~ msgstr "Courier 字型"
-
-#~ msgid ""
-#~ "Courier font represents <command>commands</command>, <filename>file names "
-#~ "and paths</filename>, and <prompt>prompts</prompt> ."
-#~ msgstr ""
-#~ "Courier 字型代表 <command>commands</command>（指令）、<filename>file "
-#~ "names and paths</filename>（檔案名稱與路徑）以及 <prompt>prompts</prompt>"
-#~ "（指令提示）。"
-
-#, fuzzy
-#~ msgid ""
-#~ "Desktop       about.html       logs      paulwesterberg.png\n"
-#~ "Mail          backupfiles      mail      reports"
-#~ msgstr ""
-#~ "When shown as below, it indicates computer output: <screen>\n"
-#~ "Desktop       about.html       logs      paulwesterberg.png\n"
-#~ "Mail          backupfiles      mail      reports\n"
-#~ "</screen>"
-
-#~ msgid "bold Courier font"
-#~ msgstr "粗體 Courier 字型"
-
-#~ msgid ""
-#~ "Bold Courier font represents text that you are to type, such as: "
-#~ "<userinput>service jonas start</userinput>"
-#~ msgstr ""
-#~ "粗體 Courier 字型代表您所要輸入的文字，例如：<userinput>service jonas "
-#~ "start</userinput>"
-
-#~ msgid ""
-#~ "If you have to run a command as root, the root prompt (<literal>#</"
-#~ "literal>) precedes the command:"
-#~ msgstr ""
-#~ "若您要以 root 身份來執行一項指令的話，root 提示（<literal>#</literal>）會"
-#~ "出現在指令之前："
-
-#~ msgid "italic Courier font"
-#~ msgstr "斜體 Courier 字型"
-
-#, fuzzy
-#~ msgid ""
-#~ "Italic Courier font represents a variable, such as an installation "
-#~ "directory: <filename> <replaceable>install_dir</replaceable>/bin/</"
-#~ "filename>"
-#~ msgstr ""
-#~ "斜體 Courier 字型代表變數，比方說安裝目錄："
-#~ "<filename><replaceable>install_dir</replaceable>/bin/</filename>"
-
-#~ msgid "bold font"
-#~ msgstr "粗體字型"
-
-#~ msgid ""
-#~ "Bold font represents <application>application programs</application> and "
-#~ "<guilabel>text found on a graphical interface</guilabel>."
-#~ msgstr ""
-#~ "粗體字型代表 <application>application programs</application>（應用程式）以"
-#~ "及<guilabel>圖形化介面上所看到的文字</guilabel>。"
-
-#~ msgid ""
-#~ "When shown like this: <guibutton> OK </guibutton>, it indicates a button "
-#~ "on a graphical application interface."
-#~ msgstr "<guibutton> OK </guibutton> 代表圖形化應用程式介面上的某個按鈕。"
-
-#~ msgid ""
-#~ "Additionally, the manual uses different strategies to draw your attention "
-#~ "to pieces of information. In order of how critical the information is to "
-#~ "you, these items are marked as follows:"
-#~ msgstr ""
-#~ "另外，本指南使用了不同的方式來引起您對於各項資訊上的注意。這些資訊的重要性"
-#~ "如下按照重要性順序所示："
-
-#~ msgid ""
-#~ "A note is typically information that you need to understand the behavior "
-#~ "of the system."
-#~ msgstr "註解通常代表您要了解系統行為之前所需理解的資訊。"
-
-#~ msgid "A tip is typically an alternative way of performing a task."
-#~ msgstr "秘訣通常是執行一項工作的另一種方式。"
-
-#~ msgid ""
-#~ "Important information is necessary, but possibly unexpected, such as a "
-#~ "configuration change that will not persist after a reboot."
-#~ msgstr ""
-#~ "重要資訊雖無可避免，不過也可能是無法預期的，例如無法在重新開機後保存的配置"
-#~ "變更。"
-
-#~ msgid "Caution"
-#~ msgstr "Caution（注意）"
-
-#~ msgid ""
-#~ "A caution indicates an act that would violate your support agreement, "
-#~ "such as recompiling the kernel."
-#~ msgstr ""
-#~ "注意訊息代表一項有可能會違反您支援合約的動作，比方說重新編譯 kernel。"
-
-#~ msgid ""
-#~ "A warning indicates potential data loss, as may happen when tuning "
-#~ "hardware for maximum performance."
-#~ msgstr ""
-#~ "警告訊息代表潛在的資料遺失，通常可能會在為了達到硬體最大效能而調整該硬體的"
-#~ "情況下發生。"
-
-#~ msgid "gconftool-2\n"
-#~ msgstr "gconftool-2\n"
-
-#~ msgid ""
-#~ "\n"
-#~ "# <placeholder-1/>\n"
-#~ "\t\t\t\t"
-#~ msgstr ""
-#~ "\n"
-#~ "# <placeholder-1/>\n"
-#~ "\t\t\t\t"
-
-#~ msgid "Tip"
-#~ msgstr "Tip（暗示 / 秘訣）"
-
-#~ msgid "translator-credits"
-#~ msgstr "譯者姓名︰莊佳儒（Terry Chuang）2007"
