--- a/publican/content/common/as-IN/Conventions.po
+++ b/publican/content/common/as-IN/Conventions.po
@@ -1,12 +1,13 @@
 # translation of Conventions.po to Assamese
 # Amitakhya Phukan <aphukan@fedoraproject.org>, 2007.
+# Amitakhya Phukan <aphukan@redhat.com>, 2008.
 msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2008-09-29 04:47+0000\n"
-"PO-Revision-Date: 2007-10-30 16:32+0530\n"
-"Last-Translator: Amitakhya Phukan <aphukan@fedoraproject.org>\n"
+"PO-Revision-Date: 2008-10-07 17:41+0530\n"
+"Last-Translator: Amitakhya Phukan <aphukan@redhat.com>\n"
 "Language-Team: Assamese\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -26,7 +27,7 @@ msgstr "আলেখ্যনৰ আচাৰ বিধি"
 msgid ""
 "This manual uses several conventions to highlight certain words and phrases "
 "and draw attention to specific pieces of information."
-msgstr ""
+msgstr "এই হাতপুথিয়ে কিছু শব্দ আৰু খণ্ডবাক্য আৰু তথ্যৰ কিছুমান নিৰ্দ্দিষ্ট অংশক আলোকপাত কৰিবলৈ বহুতো আচাৰ বিধি ব্যৱহাৰ কৰে ।"
 
 #. Tag: para
 #: Conventions.xml:11
@@ -38,13 +39,13 @@ msgid ""
 "installed on your system. If not, alternative but equivalent typefaces are "
 "displayed. Note: Red Hat Enterprise Linux 5 and later includes the "
 "Liberation Fonts set by default."
-msgstr ""
+msgstr "PDF আৰু কাগজৰ সংস্কৰণত, এই হাতপুথিয়ে <ulink url=\"https://fedorahosted.org/liberation-fonts/\">Liberation Fonts</ulink> গোটৰ পৰা আঁকি থোৱা typeface সমূহ ব্যৱহাৰ কৰে । আপোনাৰ ব্যৱস্থাপ্ৰণালীত সংস্থাপিত হ'লে Liberation Fonts ৰ গোটক HTML সংস্কৰণত ব্যৱহাৰ কৰা হয় । ন'হ'লে, বৈকল্পিক বা একে ধৰণৰ typeface সমূহক প্ৰদৰ্শন কৰা হয় । মন কৰিব: Red Hat Enterprise Linux 5 আৰু তাৰ পিছৰ সংস্কৰণে অবিকল্পিত ভাবে Liberation Fonts ৰ গোট ব্যৱহাৰ কৰে ।"
 
 #. Tag: title
 #: Conventions.xml:16
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Typographic Conventions"
-msgstr "আলেখ্যনৰ আচাৰ বিধি"
+msgstr "অক্ষৰমূদ্ৰণশালৰ আচাৰ বিধি"
 
 #. Tag: para
 #: Conventions.xml:18
@@ -53,13 +54,13 @@ msgid ""
 "Four typographic conventions are used to call attention to specific words "
 "and phrases. These conventions, and the circumstances they apply to, are as "
 "follows."
-msgstr ""
+msgstr "নিৰ্দ্দিষ্ট শব্দ আৰু খণ্ডবাক্যলৈ আকৰ্ষণ কৰিবলৈ চাৰিটা অক্ষৰমূদ্ৰণশালৰ আচাৰ বিধি ব্যৱহাৰ কৰা হয় । এই আচাৰ বিধি, আৰু সিহঁতক প্ৰয়োগ কৰাৰ পৰিস্থিতি, এনে ধৰণৰ ।"
 
 #. Tag: literal
 #: Conventions.xml:23
 #, no-c-format
 msgid "Mono-spaced Bold"
-msgstr ""
+msgstr "Mono-spaced Bold"
 
 #. Tag: para
 #: Conventions.xml:26
@@ -67,7 +68,7 @@ msgstr ""
 msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight key caps and key-combinations. For example:"
-msgstr ""
+msgstr "শ্বেল আদেশ নথিপত্ৰ নাম আৰু পথৰ সৈতে, ব্যৱস্থাপ্ৰণালীৰ নিবেশ আলোকপাত কৰিবলৈ, ব্যৱহাৰ কৰা হয় । ইয়াৰ উপৰিও key caps আৰু key-combinations আলোকপাত কৰিবলৈ ব্যৱহাৰ কৰা হয় । যেনে:"
 
 #. Tag: section
 #: Conventions.xml:28
@@ -155,12 +156,80 @@ msgid ""
 "firstterm>). Unlike other modules, only one module from the MPM group can be "
 "loaded by the Apache HTTP Server. </para> </blockquote>"
 msgstr ""
+"<blockquote> <para> আপোনাৰ বৰ্ত্তমানৰ পঞ্জিকাত"
+"<filename>my_next_bestselling_novel</filename> ৰ বিষয়বস্তু চাবলৈ"
+", শ্বেল প্ৰ'মপ্টত <command>cat my_next_bestselling_novel</command> লিখক"
+"আৰু আদেশ চলাবলৈ <keycap>Enter</keycap> টিপক ।"
+"</para> </blockquote> <para> ওপৰত এটা নথিপত্ৰৰ নাম, এটা শ্বেল আদেশ "
+"আৰু এটা key cap আছে, সকলো Mono-spaced Bold ত আৰু সকলো পৃথক, প্ৰসঙ্গৰ কাৰণে । "
+"</para> <para> Key-combinations সমূহক "
+"key caps ৰ পৰা বেলেগ বুলি চিনাকি কৰিব পাৰি key-combination ৰ প্ৰত্যেকটো অংশৰ মাজত থকা এটা হাইফেনৰ"
+"সংযোগেৰে । যেনে: </para> <blockquote> <para> আদেশ চলাবলৈ <keycap>Enter</"
+"keycap> টিপক । </para> <para> প্ৰথম বাৰ্চুৱেল টাৰ্মিনেললৈ যাবলৈ <keycombo><keycap>Ctrl</"
+"keycap><keycap>Alt</keycap><keycap>F1</keycap></keycombo> টিপক । "
+"আপোনাৰ X-Windows অধিবেশনলৈ যাবলৈ <keycombo><keycap>Ctrl</keycap><keycap>Alt</"
+"keycap><keycap>F7</keycap></keycombo> টিপক । </"
+"para> </blockquote> <para> প্ৰথম বাক্যই টিপিব লগা নিৰ্দ্দিষ্ট key "
+"cap দেখুৱাই । দ্বিতীয় বাক্যই তিনিটা key caps ৰ দুটা গোটক আলোকপাত কৰে, প্ৰত্যেক গোটক একেলগে টিপিব লাগে ।"
+"</para> <para> উৎসৰ কোডৰ কথা আলোচনা কৰিলে, এটা পৰিচ্ছেদত থকা class "
+"names, methods, functions, variable names আৰু returned values ওপৰৰ ধৰণে"
+"দেখুওৱা হ'ব, <literal>Mono-spaced Bold</"
+"literal> ত । যেনে: </para> <blockquote> <para> নথিপত্ৰ-সম্বন্ধীয় classes ত"
+"<classname>filesystem</classname> নথিপত্ৰপ্ৰণালী ৰ বাবে, <classname>file</"
+"classname> নথিপত্ৰৰ বাবে, আৰু <classname>dir</classname> পঞ্জিকাৰ বাবে । প্ৰত্যেক "
+"class ৰ নিজৰ আজ্ঞাৰ গোট থাকে । </para> </blockquote> "
+"<para> <application>Proportional Bold</application> </para> <para> এটা ব্যৱস্থাপ্ৰণালীত থকা "
+"শব্দ আৰু খণ্ডবাক্যৰ কথা কয়, আৰু তাত অনুপ্ৰয়োগৰ নাম;"
+"সম্বাদ বাকছৰ লিপি; লেবেল থকা বুটাম; ছেক বাকছ আৰু ৰেডিঅ' বুটামৰ লেবেল;"
+"মেনুৰ শিৰোনাম আৰু ছাব-মেনুৰ শিৰোনাম থাকে । যেনে: </para> <blockquote> "
+"<para> নিৰ্ব্বাচন কৰক <guimenu>ব্যৱস্থাপ্ৰণালী > পছন্দ > মাউছ</guimenu> মূখ্য তালিকাৰ বাৰৰ পৰা "
+"<application>মাউছৰ পছন্দ</application> আৰম্ভ কৰিবলৈ । "
+"<guilabel>বুটাম</guilabel> টেবত, <guilabel>Left-handed mouse</"
+"guilabel> ছেক বাকছ টিপক আৰু <guibutton>বন্ধ কৰক</guibutton> টিপক মূখ্য মাউছ বুটামক বাওঁৰ পৰা সোঁ-ফাললৈ"
+"সলনি কৰিবলৈ (বাওঁ হাতেৰে মাউছৰ ব্যৱহাৰ কৰা সুবিধা জনক কৰিবলৈ) ।"
+"</para> <para> এটা বিশেষ আখৰ "
+"এটা <application>gedit</application> নথিপত্ৰ ভৰাবলৈ, মূখ্য তালিকাৰ বাৰৰ পৰা <guimenu>অনুপ্ৰয়োগ > "
+"অতিৰিক্ত > কেৰেক্টাৰ মেৰ</guimenu> নিৰ্ব্বাচন কৰক । ইয়াৰ পিছত, choose "
+"<guimenu>বিচাৰক > Find&hellip;</guimenu> <application>কেৰেক্টাৰ মেপ"
+"</application> মেনু বাৰৰ পৰা নিৰ্ব্বাচন কৰক, <guilabel>Search</guilabel> ক্ষেত্ৰত আখৰৰ নাম লিখক"
+"আৰু <guibutton>পিছলৈ</guibutton> টিপক । <guilabel>কেৰেক্টাৰ টেবুল</guilabel> ত আপুনি বিচৰা "
+"আখৰক  আলোকপাত কৰা হ'ব ।"
+"<guilabel>নকল কৰিব লগা লিপি</guilabel> ক্ষেত্ৰত এই আখৰ ৰাখিবলৈ আলোকপাত কৰা এই আখৰক ডাবুল-ক্লিক কৰক"
+"আৰু তাৰ পিছত  <guibutton>নকল কৰক</"
+"guibutton> বুটাম টিপক । এতিয়া আপোনাৰ আলেখ্যনলৈ ওভতি আহক আৰু <guimenu>সম্পাদন কৰক "
+"> আঠা লগাওক</guimenu> নিৰ্ব্বাচন কৰক <application>gedit</application> তালিকা বাৰৰ পৰা । </"
+"para> </blockquote> <para> ওপৰৰ লিপিত অনুপ্ৰয়োগৰ নাম; ব্যৱস্থাপ্ৰণালৰ ব্যাপক"
+"তালিকাৰ নাম আৰু বস্তু ; অনুপ্ৰয়োগ বিশেষ তালিকাৰ নাম; আৰু বুটাম আৰু এটা GUI সংযোগমাধ্যমত থকা"
+"লিপি আছে, সকলোকে Proportional Bold ত দেখুওৱা হৈছে আৰু সকলোকে"
+"সন্দৰ্ভৰে পৃথক কৰিব পাৰি । </para> <para> মন কৰিব যে <guimenu>></guimenu> "
+"ব্যৱহাৰ কৰা হয় এটা তালিকাৰ পৰা উপ-তালিকালৈ যাবলৈ । ইয়াৰ ব্যৱহাৰ সহজে বুজি নোপোৱা"
+"'মূখ্য তালিকাৰ বাৰৰ পৰা <guimenu>ব্যৱস্থাপ্ৰণালী</"
+"guimenu> তালিকা ৰ পৰা <guimenu>পছন্দ</guimenu>উপ-তালিকাৰ পৰা <guimenuitem>মাউছ</guimenuitem> "
+"নিৰ্ব্বাচন কৰক' ক ব্যৱহাৰ নকৰিবলৈ ব্যৱহাৰ কৰা হয় । </para> <para> "
+"<command><replaceable>Mono-spaced Bold Italic</replaceable></command> বা "
+"<application><replaceable>Proportional Bold Italic</replaceable></"
+"application> </para> <para> Mono-spaced Bold বা Proportional Bold হ'লে, "
+"Italics যোগ কৰিলে সলনি কৰিব পৰা বা বিভিন্ন মান থকা লিপি বুজায় । Italics "
+"আপুনি নিবেশ নকৰা লিপি বুজায় বা পৰিস্থিতিৰ মতে সলনি হোৱা লিপি বুজায় । যেনে: </para> <blockquote> <para> দূৰৰ যন্ত্ৰত ssh ব্যৱহাৰ কৰি সংযোগ কৰিবলৈ, শ্বেল প্ৰমপ্টত <command>ssh "
+"<replaceable>username</replaceable>@<replaceable>domain.name</replaceable></"
+"command> লিখক । দূৰৰ যন্ত্ৰ <filename>example.com</"
+"filename> হ'লেল আৰু তাত আপোনাৰ ব্যৱহাৰকৰোঁতাৰ নাম john হ'লে , <command>ssh "
+"john@example.com</command> লিখক । </para> <para> <command>mount -o remount "
+"<replaceable>file-system</replaceable></command> আদেশে নাম দিয়া নথিপত্ৰৰপ্ৰণালী পুনঃ তুলি লয় । যেনে, <filename>/home</filename> নথিপত্ৰৰপ্ৰণালী পুনঃ তুলিবলৈ, আদেশ হ'ল <command>mount -o remount /home</command> । </para> "
+"<para> বৰ্ত্তমানে সংস্থাপিত সৰঞ্জামৰ সংস্কৰণ চাবলৈ, "
+"<command>rpm -q <replaceable>package</replaceable></command> আদেশ ব্যৱহাৰ কৰক । ইয়াৰ ফলাফল এনেধৰণৰ হ'ব: <command><replaceable>package-version-"
+"release</replaceable></command> । </para> </blockquote> <para> ওপৰত bold italics ত থকা শব্দত মন দিয়ক &mdash; username, domain.name, file-system, package, "
+"version আৰু release. প্ৰত্যেকটো এটা স্থান, হয়তো আপুনি আদেশ লিখোঁতে দিয়া লিপি বা ব্যৱস্থাপ্ৰণালীৰ দ্বাৰা প্ৰদৰ্শন কৰা লিপি । </para> <para> "
+"কোনো কাৰ্য্যৰ নাম প্ৰদৰ্শন কৰাৰ ওপৰিও, italics "
+"এ এটা নতুন আৰু গুৰুত্বপূৰ্ণ শব্দৰ প্ৰথম ব্যৱহাৰো বুজায় । যেনে: </para> "
+"<blockquote> <para> Apache HTTP সেৱকে অনুৰোধ গ্ৰহণ কৰিলে, সি child processes বা threads প্ৰেৰণ কৰে সিহঁতক নিয়ন্ত্ৰণ কৰিবলৈ । এই child processes বা threads ৰ সমষ্টিক <firstterm>server-pool</firstterm> বুলি কোৱা হয় । Apache HTTP Server 2.0 ত, এই server-pools ৰ সৃষ্টি কৰা আৰু ৰক্ষণাবেক্ষণৰ দায়িত্ব <firstterm>Multi-Processing Modules</firstterm> নামৰ এটা সমষ্টিৰ (<firstterm>MPMs</"
+"firstterm>) । অন্য অংশৰ বিপৰিতে, Apache HTTP Server এ MPM সমষ্টিৰ অকল এটা অংশহে তুলি ল'ব পাৰে ।</para> </blockquote>"
 
 #. Tag: title
 #: Conventions.xml:132
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Pull-quote Conventions"
-msgstr "আলেখ্যনৰ আচাৰ বিধি"
+msgstr "Pull-quote আচাৰ বিধি"
 
 #. Tag: para
 #: Conventions.xml:134
@@ -168,7 +237,7 @@ msgstr "আলেখ্যনৰ আচাৰ বিধি"
 msgid ""
 "Two, commonly multi-line, data types are set off visually from the "
 "surrounding text."
-msgstr ""
+msgstr "দুটা, সাধাৰণতে multi-line, তথ্যৰ ধৰণক ওচৰৰ লিপিৰ পৰা প্ৰত্যক্ষ ভাবে আঁতৰুৱা হয় ।"
 
 #. Tag: para
 #: Conventions.xml:138
@@ -176,7 +245,7 @@ msgstr ""
 msgid ""
 "Output sent to a terminal is set in <computeroutput>Mono-spaced Roman</"
 "computeroutput> and presented thus:"
-msgstr ""
+msgstr "এটা টাৰ্মিনেললৈ আগবঢ়োৱা নিৰ্গম <computeroutput>Mono-spaced Roman</computeroutput> ত নিৰ্ধাৰিত কৰা হয় আৰু এনেধৰণে দেখুওৱা হয়: "
 
 #. Tag: screen
 #: Conventions.xml:142
@@ -185,6 +254,8 @@ msgid ""
 "books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
 "books_tests  Desktop1  downloads      images  notes  scripts  svgs"
 msgstr ""
+"books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
+"books_tests  Desktop1  downloads      images  notes  scripts  svgs"
 
 #. Tag: para
 #: Conventions.xml:144
@@ -192,7 +263,7 @@ msgstr ""
 msgid ""
 "Source-code listings are also set in <computeroutput>Mono-spaced Roman</"
 "computeroutput> but are presented and highlighted as follows:"
-msgstr ""
+msgstr "উৎস-কোডৰ তালিকাও <computeroutput>Mono-spaced Roman</computeroutput> ত নিৰ্ধাৰিত কৰা হয় কিন্তু এনে ধৰণে দেখুৱা আৰু আলোকপাত কৰা হয়:"
 
 #. Tag: programlisting
 #: Conventions.xml:148
@@ -219,12 +290,32 @@ msgid ""
 "   \n"
 "}"
 msgstr ""
+"package org.jboss.book.jca.ex1;\n"
+"\n"
+"import javax.naming.InitialContext;\n"
+"\n"
+"public class ExClient\n"
+"{\n"
+"   public static void main(String args[]) \n"
+"       throws Exception\n"
+"   {\n"
+"      InitialContext iniCtx = new InitialContext();\n"
+"      Object         ref    = iniCtx.lookup(\"EchoBean\");\n"
+"      EchoHome       home   = (EchoHome) ref;\n"
+"      Echo           echo   = home.create();\n"
+"\n"
+"      System.out.println(\"Created Echo\");\n"
+"\n"
+"      System.out.println(\"Echo.echo('Hello') = \" + echo.echo(\"Hello\"));\n"
+"   }\n"
+"   \n"
+"}"
 
 #. Tag: title
 #: Conventions.xml:153
 #, no-c-format
 msgid "Notes and Warnings"
-msgstr ""
+msgstr "টোকা আৰু সঁকিয়নী"
 
 #. Tag: para
 #: Conventions.xml:155
@@ -232,7 +323,7 @@ msgstr ""
 msgid ""
 "Finally, we use three visual styles to draw attention to information that "
 "might otherwise be overlooked."
-msgstr ""
+msgstr "অৱশেষত, সাধাৰণতে আওকাণ কৰা তথ্যলৈ আকৰ্ষিত কৰিবলৈ আমি তিনিটা প্ৰদৰ্শনৰ ধৰণ ব্যৱহাৰ কৰোঁ ।"
 
 #. Tag: title
 #: Conventions.xml:160
@@ -247,7 +338,7 @@ msgid ""
 "A note is a tip or shortcut or alternative approach to the task at hand. "
 "Ignoring a note should have no negative consequences, but you might miss out "
 "on a trick that makes your life easier."
-msgstr ""
+msgstr "হাতত থকা কামৰ এটা সঙ্কেত, চমু পথ বা এটা বৈকল্পিক প্ৰৱেশ হৈছে এটা টোকা । এটা টোকা আওকাণ কৰিলে কোনো ক্ষতি হ'ব নালাগে, কিন্তু আপোনাৰ জীৱন সহজ কৰা এটা কায়দা আপুনি এৰি যাব পাৰে ।"
 
 #. Tag: title
 #: Conventions.xml:167
@@ -263,7 +354,7 @@ msgid ""
 "that only apply to the current session, or services that need restarting "
 "before an update will apply. Ignoring Important boxes won't cause data loss "
 "but may cause irritation and frustration."
-msgstr ""
+msgstr "গুৰুত্বপূৰ্ণ বাকছত সহজে এৰি যোৱা বস্তুৰ বিৱৰণ থাকে: অকল বৰ্ত্তমানৰ অধিবেশনত প্ৰভাৱ পেলোৱা বিন্যাসৰ সাল সলনি, বা এটা উন্নয়নৰ প্ৰভাৱ পেলোৱাৰ পূৰ্বে পুনৰাৰম্ভ কৰিব লগা সেৱাসমূহ । গুৰুত্বপূৰ্ণ বাকছক আওকাণ কৰিলে তথ্য নেহেৰায় কিন্তু পিছত বিৰক্ত বা নিৰুৎসাহ হ'ব পাৰে ।"
 
 #. Tag: title
 #: Conventions.xml:175
@@ -277,138 +368,5 @@ msgstr "সতৰ্কবাণী"
 msgid ""
 "A Warning should not be ignored. Ignoring warnings will most likely cause "
 "data loss."
-msgstr ""
+msgstr "এটা সতৰ্কবাণীক আওকাণ কৰিব নালাগে । সতৰ্কবাণী আওকাণ কৰিলে অতি সম্ভৱ তথ্য হেৰুৱাব পাৰে ।"
 
-#~ msgid ""
-#~ "Certain words in this manual are represented in different fonts, styles, "
-#~ "and weights. This highlighting indicates that the word is part of a "
-#~ "specific category. The categories include the following:"
-#~ msgstr ""
-#~ "এই হাতপুথিত কিছুমান শব্দ বিভিন্ন ফ'ন্ট,ধৰণ, আৰু ওজনত দেখুৱা হৈছে । এই আলোকপাতে "
-#~ "শব্দটোক এটা নিৰ্দ্দিষ্ট বিভাগৰ অংশ হিচাপে দেখুৱাই । বিভাগত এই নিম্নলিখিত সমূহ "
-#~ "থাকিব পাৰে:"
-
-#~ msgid "Courier font"
-#~ msgstr "Courier ফ'ন্ট"
-
-#~ msgid ""
-#~ "Courier font represents <command>commands</command>, <filename>file names "
-#~ "and paths</filename>, and <prompt>prompts</prompt> ."
-#~ msgstr ""
-#~ "Courier ফ'ন্টে <command>আদেশ</command>, <filename>নথিপত্ৰৰ নাম আৰু পথ</"
-#~ "filename>, আৰু <prompt>প্ৰ'মপ্ট</prompt> বুজাই ।"
-
-#, fuzzy
-#~ msgid ""
-#~ "Desktop       about.html       logs      paulwesterberg.png\n"
-#~ "Mail          backupfiles      mail      reports"
-#~ msgstr ""
-#~ "তলত দেখুৱাৰ মতে, এইটোৱে কম্পিউটাৰৰ নিৰ্গম বুজাই: <screen>\n"
-#~ "Desktop       about.html       logs      paulwesterberg.png\n"
-#~ "Mail          backupfiles      mail      reports\n"
-#~ "</screen>"
-
-#~ msgid "bold Courier font"
-#~ msgstr "ডাঠ Courier ফ'ন্ট"
-
-#~ msgid ""
-#~ "Bold Courier font represents text that you are to type, such as: "
-#~ "<userinput>service jonas start</userinput>"
-#~ msgstr ""
-#~ "ডাঠ Courier ফ'ন্টে আপুনি লিখিব লোৱা আখৰ বুজাই, যেনে: <userinput>service "
-#~ "jonas start</userinput>"
-
-#~ msgid ""
-#~ "If you have to run a command as root, the root prompt (<literal>#</"
-#~ "literal>) precedes the command:"
-#~ msgstr ""
-#~ "ৰূট হিচাপে আদেশ চলাব হ'লে, ৰূটৰ প্ৰ'মপ্ট (<literal>#</literal>) আদেশৰ আগত আহে:"
-
-#~ msgid "italic Courier font"
-#~ msgstr "সোঁফাললৈ হেলনীয়া Courier ফ'ন্ট"
-
-#, fuzzy
-#~ msgid ""
-#~ "Italic Courier font represents a variable, such as an installation "
-#~ "directory: <filename> <replaceable>install_dir</replaceable>/bin/</"
-#~ "filename>"
-#~ msgstr ""
-#~ "সোঁফাললৈ হেলনীয়া Courier ফ'ন্টে এটা চলক বুজাই, যেনে এটা সংস্থাপনৰ পঞ্জিকা: "
-#~ "<filename><replaceable>install_dir</replaceable>/bin/</filename>"
-
-#~ msgid "bold font"
-#~ msgstr "ডাঠ ফ'ন্ট"
-
-#~ msgid ""
-#~ "Bold font represents <application>application programs</application> and "
-#~ "<guilabel>text found on a graphical interface</guilabel>."
-#~ msgstr ""
-#~ "ডাঠ ফ'ন্টে <application>অনুপ্ৰয়োগ প্ৰ'গ্ৰাম</application> আৰু "
-#~ "<guilabel>চিত্ৰাঙ্কিত সংযোগমাধ্যমত পোৱা আখৰ</guilabel> বুজাই ।"
-
-#~ msgid ""
-#~ "When shown like this: <guibutton> OK </guibutton>, it indicates a button "
-#~ "on a graphical application interface."
-#~ msgstr ""
-#~ "এনেদৰে দেখুৱালে: <guibutton> ঠিক আছে </guibutton>, এইটোৱা চিত্ৰাঙ্কিত "
-#~ "অনুপ্ৰয়োগৰ সংযোগমাধ্যমত এটা বুটাম বুজাই ।"
-
-#~ msgid ""
-#~ "Additionally, the manual uses different strategies to draw your attention "
-#~ "to pieces of information. In order of how critical the information is to "
-#~ "you, these items are marked as follows:"
-#~ msgstr ""
-#~ "ইয়াৰ উপৰিও, এই হাতপুথিয়ে বিভিন্ন কৌশল ব্যৱহাৰ কৰে বিভিন্ন তথ্যৰ অংশলৈ আপোনাৰ "
-#~ "মনোযোগ আনিবলৈ । আপপোনাৰ বাবে এই তথ্য কিমান গুৰুত্বপূৰ্ণ হয় তাৰ মতে, এই "
-#~ "বিষয়বস্তুসমূহক চিহ্নিত কৰা হয়:"
-
-#~ msgid ""
-#~ "A note is typically information that you need to understand the behavior "
-#~ "of the system."
-#~ msgstr ""
-#~ "ব্যৱস্থাপ্ৰণালীৰ আচৰণ বুজিবলৈ আপোনাৰ বাবে প্ৰয়োজনীয় বিশেষ তথ্য হৈছে এটা টোকা ।"
-
-#~ msgid "A tip is typically an alternative way of performing a task."
-#~ msgstr "কোনো কাৰ্য্য কৰাৰ বৈকল্পিক ধৰণ হৈছে এটা ইঙ্গিত ।"
-
-#~ msgid ""
-#~ "Important information is necessary, but possibly unexpected, such as a "
-#~ "configuration change that will not persist after a reboot."
-#~ msgstr ""
-#~ "গুৰুত্বপূৰ্ণ তথ্য প্ৰয়োজনীয়, কিন্তু অপ্ৰত্যাসিত, যেনে পুনৰাৰম্ভৰ পিছত প্ৰযোজ্য নোহোৱা "
-#~ "বিন্যাসৰ সাল সলনি ।"
-
-#~ msgid "Caution"
-#~ msgstr "সাৱধান"
-
-#~ msgid ""
-#~ "A caution indicates an act that would violate your support agreement, "
-#~ "such as recompiling the kernel."
-#~ msgstr ""
-#~ "আপোনাৰ সমৰ্থনৰ সৰ্ত্তক বাধা দিব পৰা কোনো কাৰ্য্যৰ পৰা আপোনাক সাৱধান কৰা হয়, "
-#~ "যেনে কাৰ্ণেলক পুণঃ সঙ্কলন কৰা ।"
-
-#~ msgid ""
-#~ "A warning indicates potential data loss, as may happen when tuning "
-#~ "hardware for maximum performance."
-#~ msgstr ""
-#~ "সতৰ্কবানীয়ে সম্ভাৱনীয় তথ্যৰ ক্ষতি বুজাই, যি যান্ত্ৰিক সামগ্ৰীক সৰ্বোচ্চ কাৰ্য্যসাধনৰ "
-#~ "বাবে বিন্যাস কৰোঁতে হ'ব পাৰে ।"
-
-#~ msgid "gconftool-2\n"
-#~ msgstr "gconftool-2\n"
-
-#~ msgid ""
-#~ "\n"
-#~ "# <placeholder-1/>\n"
-#~ "\t\t\t\t"
-#~ msgstr ""
-#~ "\n"
-#~ "# <placeholder-1/>\n"
-#~ "\t\t\t\t"
-
-#~ msgid "Tip"
-#~ msgstr "ইঙ্গিত"
-
-#~ msgid "translator-credits"
-#~ msgstr "অমিতাক্ষ ফুকন <aphukan@redhat.com>"
