--- a/publican/content/common/de-DE/Feedback.po
+++ b/publican/content/common/de-DE/Feedback.po
@@ -1,13 +1,15 @@
-# translation of Feedback.po to
+# translation of Feedback.po to German
 # PGP-KeyID: 0x037FD3CF <ttrinks@redhat.com>, 2007.
+# Daniela Kugelmann <dkugelma@redhat.com >, 2008.
+# translation of Feedback.po to
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2008-01-02 06:17+0000\n"
-"PO-Revision-Date: 2007-10-22 09:45+1000\n"
-"Last-Translator: PGP-KeyID: 0x037FD3CF <ttrinks@redhat.com>\n"
-"Language-Team:  <de@li.org>\n"
+"PO-Revision-Date: 2008-10-08 14:39+1000\n"
+"Last-Translator: Daniela Kugelmann <dkugelma@redhat.com >\n"
+"Language-Team: German <i18@redhat.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -35,38 +37,5 @@ msgstr "Kontaktinformationen für dieses Handbuch"
 #: Feedback.xml:11
 #, no-c-format
 msgid "You should over ride this by creating your own local Feedback.xml file."
-msgstr ""
+msgstr "Sie sollten dies durch die Erstellung Ihrer eigenen lokalen Feedback.xml -Datei überschreiben."
 
-#~ msgid ""
-#~ "If you find a typographical error in this manual, or if you have thought "
-#~ "of a way to make this manual better, we would love to hear from you! "
-#~ "Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat."
-#~ "com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the "
-#~ "product <application>&PRODUCT;.</application>"
-#~ msgstr ""
-#~ "Wenn Sie einen Fehler in diesem Handbuch finden oder eine Idee haben, wie "
-#~ "dieses verbessert werden könnte, freuen wir uns über Ihr Feedback! "
-#~ "Reichen Sie einen Fehlerbericht für die Komponente <application>&PRODUCT;."
-#~ "</application> in Bugzilla unter <ulink url=\"http://bugzilla.redhat.com/"
-#~ "bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> ein."
-
-#~ msgid ""
-#~ "When submitting a bug report, be sure to mention the manual's identifier: "
-#~ "<citetitle>&BOOKID;</citetitle>"
-#~ msgstr ""
-#~ "Vergewissern Sie sich beim Einreichen eines Fehlerberichts die Kennung "
-#~ "des Handbuchs mit anzugeben: <citetitle>&BOOKID;</citetitle>"
-
-#~ msgid ""
-#~ "If you have a suggestion for improving the documentation, try to be as "
-#~ "specific as possible when describing it. If you have found an error, "
-#~ "please include the section number and some of the surrounding text so we "
-#~ "can find it easily."
-#~ msgstr ""
-#~ "Falls Sie uns einen Vorschlag zur Verbesserung der Dokumentation senden "
-#~ "möchten, sollten Sie hierzu möglichst genaue Angaben machen. Wenn Sie "
-#~ "einen Fehler gefunden haben, geben Sie bitte die Nummer des Abschnitts "
-#~ "und einen Ausschnitt des Textes an, damit wir diesen leicht finden können."
-
-#~ msgid "translator-credits"
-#~ msgstr "N/A"
