--- a/publican/content/common/es-ES/Feedback.po
+++ b/publican/content/common/es-ES/Feedback.po
@@ -1,13 +1,14 @@
-# translation of Feedback.po to Español
+# translation of Feedback.po to Spanish
 # Manuel Ospina <mospina@redhat.com>, 2007.
+# Gladys Guerrero Lozano <gguerrer@redhat.com>, 2008.
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2008-01-02 06:17+0000\n"
-"PO-Revision-Date: 2007-10-23 14:10+1000\n"
-"Last-Translator: Manuel Ospina <mospina@redhat.com>\n"
-"Language-Team: Español <en@li.org>\n"
+"PO-Revision-Date: 2008-10-02 14:52+1000\n"
+"Last-Translator: Gladys Guerrero Lozano <gguerrer@redhat.com>\n"
+"Language-Team: Spanish <fedora-trans-es@redhat.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -35,38 +36,5 @@ msgstr "información de contacto para este manual"
 #: Feedback.xml:11
 #, no-c-format
 msgid "You should over ride this by creating your own local Feedback.xml file."
-msgstr ""
+msgstr "Usted debe anular este archivo de comentarios creando su propio archivo local Feedback.xml."
 
-#~ msgid ""
-#~ "If you find a typographical error in this manual, or if you have thought "
-#~ "of a way to make this manual better, we would love to hear from you! "
-#~ "Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat."
-#~ "com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the "
-#~ "product <application>&PRODUCT;.</application>"
-#~ msgstr ""
-#~ "Si encuentra un error tipográfico en este manual o si sabe de alguna "
-#~ "manera de mejorarlo, nos gustaría escuchar sus sugerencias. Por favor "
-#~ "complete un reporte en Bugzilla: <ulink url=\"http://bugzilla.redhat.com/"
-#~ "bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> usando el "
-#~ "producto <application>&PRODUCT;</application>."
-
-#~ msgid ""
-#~ "When submitting a bug report, be sure to mention the manual's identifier: "
-#~ "<citetitle>&BOOKID;</citetitle>"
-#~ msgstr ""
-#~ "Cuando envíe un reporte de error no olvide mencionar el identificador del "
-#~ "manual: <citetitle>&BOOKID;</citetitle>"
-
-#~ msgid ""
-#~ "If you have a suggestion for improving the documentation, try to be as "
-#~ "specific as possible when describing it. If you have found an error, "
-#~ "please include the section number and some of the surrounding text so we "
-#~ "can find it easily."
-#~ msgstr ""
-#~ "Si tiene una sugerencia para mejorar la documentación, intente ser tan "
-#~ "específico como sea posible cuando describa su sugerencia. Si ha "
-#~ "encontrado un error, por favor incluya el número de sección y parte del "
-#~ "texto que rodea el error para que podamos encontrarlo más fácilmente."
-
-#~ msgid "translator-credits"
-#~ msgstr "Manuel Ospina (mospina@redhat.com) 2007"
