--- a/publican/content/common/fr-FR/Feedback.po
+++ b/publican/content/common/fr-FR/Feedback.po
@@ -1,13 +1,14 @@
 # translation of Feedback.po to French
 # Decroux Fabien <fdecroux@redhat.com>, 2007.
+# Corina Roe <croe@redhat.com>, 2008.
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2008-01-02 06:17+0000\n"
-"PO-Revision-Date: 2007-10-23 11:01+1000\n"
-"Last-Translator: Decroux Fabien <fdecroux@redhat.com>\n"
-"Language-Team: French <fr@li.org>\n"
+"PO-Revision-Date: 2008-10-10 14:46+1000\n"
+"Last-Translator: Corina Roe <croe@redhat.com>\n"
+"Language-Team: French <i18@redhat.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -35,39 +36,5 @@ msgstr "coordonnées pour ce manuel"
 #: Feedback.xml:11
 #, no-c-format
 msgid "You should over ride this by creating your own local Feedback.xml file."
-msgstr ""
+msgstr "Vous devriez passer outre en créant votre propre fichier local pour vos commentaires: Feedback.xml."
 
-#~ msgid ""
-#~ "If you find a typographical error in this manual, or if you have thought "
-#~ "of a way to make this manual better, we would love to hear from you! "
-#~ "Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat."
-#~ "com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the "
-#~ "product <application>&PRODUCT;.</application>"
-#~ msgstr ""
-#~ "Si vous trouvez des fautes de frappe ou si vous avez des suggestions pour "
-#~ "améliorer ce manuel, n'hésitez surtout pas à nous en faire part&nbsp;! "
-#~ "Veuillez envoyer vos remarques par l'entremise de Bugzilla (<ulink url="
-#~ "\"http://bugzilla.redhat.com/bugzilla/\">http://bugzilla.redhat.com/"
-#~ "bugzilla/</ulink>) pour le produit <application>&PRODUCT;.</application>"
-
-#~ msgid ""
-#~ "When submitting a bug report, be sure to mention the manual's identifier: "
-#~ "<citetitle>&BOOKID;</citetitle>"
-#~ msgstr ""
-#~ "Lorsque vous soumettez un rapport d'erreurs, veuillez indiquer clairement "
-#~ "les références du manuel&nbsp;: <citetitle>&BOOKID;</citetitle>"
-
-#~ msgid ""
-#~ "If you have a suggestion for improving the documentation, try to be as "
-#~ "specific as possible when describing it. If you have found an error, "
-#~ "please include the section number and some of the surrounding text so we "
-#~ "can find it easily."
-#~ msgstr ""
-#~ "Si vous avez des suggestions pour améliorer la documentation, essayez de "
-#~ "les décrire le plus précisément possible. Si vous avez trouvé une erreur, "
-#~ "veuillez non seulement indiquer le numéro de section où elle se trouve "
-#~ "mais également ajouter un extrait du texte qui l'entoure, afin que nous "
-#~ "puissions la retrouver facilement."
-
-#~ msgid "translator-credits"
-#~ msgstr "translator-credits"
