--- a/publican/content/common/gu-IN/Conventions.po
+++ b/publican/content/common/gu-IN/Conventions.po
@@ -1,18 +1,19 @@
 # translation of Conventions.po to Gujarati
 # Ankit Patel <ankit@redhat.com>, 2007.
+# Sweta Kothari <swkothar@redhat.com>, 2008.
 msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2008-09-29 04:47+0000\n"
-"PO-Revision-Date: 2007-10-29 13:21+0530\n"
-"Last-Translator: Ankit Patel <ankit@redhat.com>\n"
-"Language-Team: Gujarati <fedora-trans-gu@redhat.com>\n"
+"PO-Revision-Date: 2008-10-07 13:32+0530\n"
+"Last-Translator: Sweta Kothari <swkothar@redhat.com>\n"
+"Language-Team: Gujarati\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
-"Plural-Forms:  nplurals=2; plural=(n!=1);\n"
+"Plural-Forms: nplurals=2; plural=(n!=1);\n"
 "\n"
 
 #. Tag: title
@@ -28,6 +29,8 @@ msgid ""
 "This manual uses several conventions to highlight certain words and phrases "
 "and draw attention to specific pieces of information."
 msgstr ""
+"આ પુસ્તિકા કેટલાક શબ્દો અને શબ્દ સમૂહ ને પ્રકાશિત કરવા માટે ઘણાબધા પરિચલો વપરાય છે અને "
+"જાણકારીનાં ચોક્કસ ટૂકડાઓ કરવા માટે ધ્યાન ખેંચાય છે."
 
 #. Tag: para
 #: Conventions.xml:11
@@ -40,12 +43,16 @@ msgid ""
 "displayed. Note: Red Hat Enterprise Linux 5 and later includes the "
 "Liberation Fonts set by default."
 msgstr ""
+"PDF અને પેપર સંપાદકોમાં, આ પુસ્તિકા <ulink url=\"https://fedorahosted.org/liberation-fonts/\">"
+"Liberation Fonts</ulink> સમૂહ માંથી દોરેલા ટાઇપફેસોને વાપરે છે. મુક્ત કરેલ ફોન્ટોનો સમૂહ HTML સંપાદકોમાં "
+"પણ વાપરેલ છે જો સમૂહ તમારી સિસ્ટમમાં સ્થાપિત થયેલ હોય તો, જો ન હોય તો, વૈકલ્પિક પરંતુ એના જેવુ ટાઇપફેસો "
+"દર્શાવેલા છે. નોંધો: Red Hat Enterprise Linux 5 અને પછીથી મુક્ત કરેલ ફોન્ટો મૂળભૂત દ્દારા સુયોજિત છે."
 
 #. Tag: title
 #: Conventions.xml:16
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Typographic Conventions"
-msgstr "દસ્તાવેજ પરિચલો"
+msgstr "ટાઇપોગ્રાફિક પરિચલો"
 
 #. Tag: para
 #: Conventions.xml:18
@@ -55,12 +62,14 @@ msgid ""
 "and phrases. These conventions, and the circumstances they apply to, are as "
 "follows."
 msgstr ""
+"ચાર ટાઇપોગ્રાફિક પરિચલો ચોક્કસ શબ્દો અને શબ્દ સમૂહો ને ધ્યાન આપવા કોલને વાપરેલ છે. "
+"આ પરિચલો, અને પરિસ્થિતિઓ માટે તેઓ આ તરીકે લાગુ કરવાનું અનુસરે છે."
 
 #. Tag: literal
 #: Conventions.xml:23
 #, no-c-format
 msgid "Mono-spaced Bold"
-msgstr ""
+msgstr "એક જ-જગ્યા થયેલ બોલ્ડ"
 
 #. Tag: para
 #: Conventions.xml:26
@@ -69,6 +78,8 @@ msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight key caps and key-combinations. For example:"
 msgstr ""
+"પ્રકાશિત સિસ્ટમ ઇનપુટને વાપરેલ છે, શેલ આદેશો, ફાઇલ નામો અને પાથોને સમાવી રહયા છે. "
+"પ્રકાશિત કી કેપો અને કી-સંયોજનને પણ વાપરેલ છે. ઉદાહરણ તરીકે:"
 
 #. Tag: section
 #: Conventions.xml:28
@@ -156,12 +167,77 @@ msgid ""
 "firstterm>). Unlike other modules, only one module from the MPM group can be "
 "loaded by the Apache HTTP Server. </para> </blockquote>"
 msgstr ""
+"<blockquote> <para> તમારી તાજેતરની કામ કરતી ડિરેક્ટરીમાં ફાઇલ "
+"<filename>my_next_bestselling_novel</filename> નાં સમાવિષ્ટોને જોવા "
+"માટે, શેલ પ્રોમ્પ્ટ પર <command>cat my_next_bestselling_novel</command> આ આદેશને "
+"દાખલ કરો અને આદેશને ચલાવવા માટે <keycap>Enter</keycap> દબાવો. </para> </blockquote> "
+"<para> ઉપર સમાવેલ ફાઇલ નામ, શેલ આદેશ અને કી કેપ, બધા એક જ-જગ્યા થયેલ બોલ્ડ અને બધા "
+"વિશિષ્ટ સંદર્ભને આભાર આપે છે. </para> <para> કી-સંયોજનો એ કી સંયોજનનાં હાઇફન જોડાણનાં દરેક "
+"ભાગ વડે કી કેપો માંથી અલગ કરી શકાય છે. ઉદાહરણ માટે: </para> <blockquote> <para> "
+"આદેશને ચલાવવા માટે <keycap>Enter</keycap> ને દબાવો. </para> <para> પહેલા વર્ચ્યુલ "
+"ટર્મિનલમાં ફેરબદલ માટે <keycombo><keycap>Ctrl</"
+"keycap><keycap>Alt</keycap><keycap>F1</keycap></keycombo> દબાવો. તમારી "
+"X-વિન્ડો સત્રો ને પાછા લાવવા માટે <keycombo><keycap>Ctrl</keycap><keycap>Alt</"
+"keycap><keycap>F7</keycap></keycombo> દબાવો. </para> </blockquote> "
+"<para> પહેલું વાક્ય ચોક્કસ કી કેપને દબાવવા માટે પ્રકાશિત કરેલ છે. બીજુ ત્રણ કી કેપોનાં બે સમૂહોને "
+"પ્રકાશિત કરે છે, દરેક સમૂહ એકસાથે દબાવેલ છે.</para> <para> જો સ્ત્રોત કોડ ચર્ચા કરેલ હોય તો, "
+"વર્ગ નામો, પદ્દત્તિઓ, વિધેયો, ચલ નામો અને પાછી મળેલ કિંમતો પ્રકરણ માં વર્ણન કરેલ છે "
+"<literal>એક જ-જગ્યા થયેલ બોલ્ડ</literal> માં ઉપર પ્રમાણે રજૂ થયેલ હશે. ઉદાહરણ તરીકે: "
+"</para> <blockquote> <para> ફાઇલ સંબધિત વર્ગો ફાઇલ સિસ્ટમો માટે <classname>filesystem"
+"</classname>, ફાઇલો માટે <classname>file</classname>, અને ડિરેક્ટરીઓ માટે <classname>dir"
+"</classname> સમાવે છે. દરેક વર્ગ પાસે તેનાં પોતાનાં સબંધિત પરવાનગીઓનાં સમૂહ છે. </para> </blockquote> "
+"<para> <application>પ્રમાણસરનું બોલ્ડ</application> </para> <para> આ સિસ્ટમ પર સૂચક થયેલ "
+"શબ્દો અથવા શોધાયેલ શબ્દ સમૂહ છે, કાર્યક્રમ નામો; સંવાદ બોક્સ લખાણ; લેબલ થયેલ બટનો; ચેક-બોક્સ અને "
+"રેડિઓ બટન લેબલો; મેનુ શિર્ષકો અને ઉપ-મેનુ શિર્ષકોને સમાવી રહ્યા છે. ઉદાહરણ માટે: </para> <blockquote> "
+"<para> <application>માઉસ પસંદગીઓ</application> ને પ્રકાશિત કરવા માટે મુખ્ય મેનુ પટ્ટી માંથી "
+"<guimenu>સિસ્ટમ > પસંદગીઓ > માઉસ</guimenu> ને પસંદ કરો. <guilabel>બટનો</guilabel> ટેબમાં, "
+"<guilabel>ડાબા-હાથવાળુ માઉસ</guilabel> ચેક બોક્સ પર ક્લિક કરો અને ડાબેથી જમણે પ્રાથમિક માઉસ બટનને "
+"ફેરબદલ કરવા માટે <guibutton>બંધ કરો</guibutton> પર ક્લિક કરો (ડાબા હાથમાં વાપરવા માટે માઉસને બંધબેસતુ "
+"બનાવી રહ્યા છે). </para> <para> <application>gedit</application> ફાઇલ માં ચોક્કસ અક્ષર દાખલ કરવા "
+"માટે, મુખ્ય મેનુ પટ્ટીમાંથી <guimenu>કાર્યક્રમો > સહાયક સામગ્રી > અક્ષર નક્ષો</guimenu> ને પસંદ કરો. પછીનું, "
+"<application>અક્ષર નક્ષો</application> મેનુ પટ્ટી માંથી <guimenu>શોધો > Find&hellip;</guimenu> "
+"ને પસંદ કરો, <guilabel>શોધો</guilabel> ક્ષેત્ર માં અક્ષરનું નામ ટાઇપ કરો અને <guibutton>પછી</guibutton> "
+"પર ક્લિક કરો. અક્ષર તમે <guilabel>અક્ષર ટેબલ</guilabel> માં શોધી કાઢ્યુ છે તે પ્રકાશિત થયેલ છે. ડબલ-ક્લિક આ "
+"પ્રકાશિત થયેલ અક્ષર <guilabel>નકલ કરવા માટે લખાણ</guilabel> ક્ષેત્રમાં તેને રાખેલ છે અને "
+"<guibutton>નકલ</guibutton> બટન પર ક્લિક કરો. હવે તમારા દસ્તાવેજ પર પાછા ફેરબદલ કરો અને "
+"<application>gedit</application> મેનુ પટ્ટી માંથી <guimenu>ફેરફાર કરો > ચોંટાડો</guimenu> ને "
+"પસંદ કરો. </para> </blockquote> <para> ઉપરનું લખાણ એ કાર્યક્રમ નામો; સિસ્ટમ વિશાળ મેનુ નામો અને વસ્તુઓ; "
+"કાર્યક્રમ-ચોક્કસ મોનુ નામો; અને બટનો અને GUI ઇન્ટરફેસમાં શોધાયેલ લખાણ સમાવે છે, બધુ પ્રમાણસરનું બોલ્ડ અને "
+"બધુ સંદર્ભ દ્દારા અલગ થયેલમાં રજૂ થયેલ છે. </para> <para> નોંધો કે <guimenu>></guimenu> શોર્ટહેન્ડ એ મેનુ અને "
+"તેનાં ઉપ-મેનુઓ મારફતે એક જગ્યાથી બીજી જગ્યાએ સૂચન કરવા માટે વાપરેલ છે. આ અવગણવા માટે 'મુખ્ય મેનુ પટ્ટીનાં "
+"<guimenu>સિસ્ટમ</guimenu> મેનુ માં <guimenu>પસંદગીઓ</guimenu> ઉપ-મેનુ માંથી "
+"<guimenuitem>માઉસ</guimenuitem> ને પસંદ કરવુ' મુશ્કેલ છે. </para> <para> "
+"<command><replaceable>Mono-spaced Bold Italic</replaceable></command> or "
+"<application><replaceable>Proportional Bold Italic</replaceable></"
+"application> </para> <para> ક્યાંતો Mono-spaced Bold અથવા Proportional Bold, "
+"ઇટાલિકનાં વધારાનાં બદલી શકાય તેવા અથવા ચલ લખાણનું સૂચન કરે છે. ઇટાલિકો તમે અક્ષરનું ઇનપુટ નથી તે "
+"લકાણનું સૂચક કરે છે અથવા લખાણને દર્શાવેલ છે કે જે બદલાવો પરિસ્થિતિઓ પર આધાર રાખે છે. ઉદાહરણ તરીકે: "
+"</para> <blockquote> <para> ssh મદદથી દૂરસ્થ મશીનને જોડાવા માટે, શેલ પ્રોમ્પ્ટ પર "
+"<command>ssh <replaceable>username</replaceable>@<replaceable>domain.name"
+"</replaceable></command> ને ટાઇપ કરો. જો દૂરસ્થ મશીન એ <filename>example.com</"
+"filename> છે અને તમારા વપરાશકર્તા પેલા મશીન પર john છે, <command>ssh john@example.com</command> "
+"ને ટાઇપ કરો. </para> <para> <command>mount -o remount <replaceable>file-system"
+"</replaceable></command> આદેશ નામ થયેલ ફાઇલ સિસ્ટમને પુન:માઉન્ટ કરે છે, આદેશ "
+"<command>mount -o remount /home</command> છે. </para> <para> તાજેતરની સ્થાપિત થયેલ "
+"પેકેજની આવૃત્તિ જોવા માટે, <command>rpm -q <replaceable>package</replaceable></command> "
+"આદેશ ને વાપરો. તે નીચે પ્રમાણે પરિણામ આપશે: <command><replaceable>package-version-"
+"release</replaceable></command>. </para> </blockquote> <para> નોંધો કે બોલ્ડ ઇટાલિકમાં "
+"ઉપર &mdash; વપરાશકર્તાનામ, domain.name, ફાઇલ-સિસ્ટમ, પેકેજ, આવૃત્તિ અને પ્રકાશનમાં છે. દરેક શબ્દ એ "
+"પ્લેસહોલ્ડર છે, ક્યાં તો જ્યારે આદેશને તમે દાખલ કરી રહ્યા હોય છે તે લખાણ માટે અથવા સિસ્ટમ દ્દારા દર્શાવેલ વખાણ માટે છે. "
+"</para> <para> કામનાં શિર્ષકની રજૂઆત માટે પ્રમાણભૂત વપરાશમાંથા એક બાજુએ છે, ઇટાલિકો નવી અને મહત્વની "
+"ટર્મ ને પહેલા વાપરવાનું સૂચન કરે છે. ઉદાહરણ તરીકે: </para> <blockquote> <para> જ્યારે Apache HTTP Server "
+"સૂચનોને સ્વીકારે છે, તે બાળક પ્રક્રિયાઓને મોકલી દે છે અથવા તેઓને સંભાળવા માટે થ્રેડો કરે છે. આ બાળ પ્રક્રિયાઓનું જૂથ "
+"અથવા <firstterm>server-pool</firstterm> તરીકે થ્રેડો જાણીતા છે. Apache HTTP Server 2.0 નીચે, "
+"બનાવવા અને જાળવી રાખવા માટે જવાબદારીઓ મોડ્યુલનાં જૂથમાં બેધ્યાન કરી દેવામાં આવી છે તેને "
+"<firstterm>Multi-Processing Modules</firstterm> (<firstterm>MPMs</"
+"firstterm>) કહેવાયું છે. ના ગમતા બીજા મોડ્યુલો, ફક્ત એક મોડ્યુલ MPM જૂથમાંથી Apache HTTP Server દ્દારા "
+"લોડ કરી શકાય છે. </para> </blockquote>"
 
 #. Tag: title
 #: Conventions.xml:132
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Pull-quote Conventions"
-msgstr "દસ્તાવેજ પરિચલો"
+msgstr "પુલ-કોટ પરિચલો"
 
 #. Tag: para
 #: Conventions.xml:134
@@ -170,6 +246,8 @@ msgid ""
 "Two, commonly multi-line, data types are set off visually from the "
 "surrounding text."
 msgstr ""
+"બે, સામાન્ય રીતે ઘણી-લીટી, માહિતી પ્રકારો એ આસપાસનાં લખાણો માંથી દેખાતુ "
+"બંધ હોય એવી રીતે સુયોજિત કરેલ છે."
 
 #. Tag: para
 #: Conventions.xml:138
@@ -178,6 +256,8 @@ msgid ""
 "Output sent to a terminal is set in <computeroutput>Mono-spaced Roman</"
 "computeroutput> and presented thus:"
 msgstr ""
+"આઉટપુટ ટર્મિનલમાં મોકલેલ <computeroutput>Mono-spaced Roman</"
+"computeroutput> માં સુયોજિત છે અને આ પ્રકારથી પ્રસ્તુત કરેલ છે:"
 
 #. Tag: screen
 #: Conventions.xml:142
@@ -186,6 +266,8 @@ msgid ""
 "books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
 "books_tests  Desktop1  downloads      images  notes  scripts  svgs"
 msgstr ""
+"books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
+"books_tests  Desktop1  downloads      images  notes  scripts  svgs"
 
 #. Tag: para
 #: Conventions.xml:144
@@ -194,6 +276,9 @@ msgid ""
 "Source-code listings are also set in <computeroutput>Mono-spaced Roman</"
 "computeroutput> but are presented and highlighted as follows:"
 msgstr ""
+"સ્ત્રોત-કોડ યાદીઓ <computeroutput>Mono-spaced Roman</"
+"computeroutput> માં પણ સુયોજિત છે પરંતુ નીચે પ્રમાણે પ્રકાશિત થયેલ અને "
+"રજૂ થયેલ છે:"
 
 #. Tag: programlisting
 #: Conventions.xml:148
@@ -220,12 +305,32 @@ msgid ""
 "   \n"
 "}"
 msgstr ""
+"package org.jboss.book.jca.ex1;\n"
+"\n"
+"import javax.naming.InitialContext;\n"
+"\n"
+"public class ExClient\n"
+"{\n"
+"   public static void main(String args[]) \n"
+"       throws Exception\n"
+"   {\n"
+"      InitialContext iniCtx = new InitialContext();\n"
+"      Object         ref    = iniCtx.lookup(\"EchoBean\");\n"
+"      EchoHome       home   = (EchoHome) ref;\n"
+"      Echo           echo   = home.create();\n"
+"\n"
+"      System.out.println(\"Created Echo\");\n"
+"\n"
+"      System.out.println(\"Echo.echo('Hello') = \" + echo.echo(\"Hello\"));\n"
+"   }\n"
+"   \n"
+"}"
 
 #. Tag: title
 #: Conventions.xml:153
 #, no-c-format
 msgid "Notes and Warnings"
-msgstr ""
+msgstr "નોંધો અને ચેતવણી"
 
 #. Tag: para
 #: Conventions.xml:155
@@ -234,6 +339,8 @@ msgid ""
 "Finally, we use three visual styles to draw attention to information that "
 "might otherwise be overlooked."
 msgstr ""
+"અંત મા, આપણે જાણકારી માટે ધ્યાન ખેંચવા માટે ત્રણ દ્રષ્ટિની શૈલીઓ વાપરીએ છે કે જે "
+"કદાચ ચકાસેલ છે."
 
 #. Tag: title
 #: Conventions.xml:160
@@ -249,6 +356,9 @@ msgid ""
 "Ignoring a note should have no negative consequences, but you might miss out "
 "on a trick that makes your life easier."
 msgstr ""
+"નોંધ ટીપ છે અથવા ટૂંકો રસ્તો અથવા હાથ પર કામની પાસેનો વિકલ્પ છે. "
+"અવગણેલી નોંધ નું પરિણામ નકારાત્મક ન હોવુ જોઇએ, પરંતુ તમારે "
+"યુક્તિ પર ચૂક થઇ શકે છે કે જે તમને સરળ જિંદગી બનાવે છે."
 
 #. Tag: title
 #: Conventions.xml:167
@@ -265,6 +375,10 @@ msgid ""
 "before an update will apply. Ignoring Important boxes won't cause data loss "
 "but may cause irritation and frustration."
 msgstr ""
+"મહત્વનાં બોક્સો માહિતી વસ્તુઓ જે કે સહેલાઇથી ગુમ થયેલ છે: રૂપરેખાંકન બદલાવો કે જે "
+"ફક્ત તાજેતરનાં સત્ર પર લાગુ કરાય છે, અથવા સેવાઓ કે જે સુધારા લાગુ કરશે તે પહેલા "
+"પુન:શરૂ કરવાની જરૂર પડશે. અવગણેલા મહત્વનાં બોક્સો માહિતી નુકશાનનું કારણ "
+"થશે નહિં પરંતુ પજવવું અને હતાશા નું કારણ થઇ શકે છે."
 
 #. Tag: title
 #: Conventions.xml:175
@@ -278,137 +392,5 @@ msgstr "ચેતવણી"
 msgid ""
 "A Warning should not be ignored. Ignoring warnings will most likely cause "
 "data loss."
-msgstr ""
+msgstr "ચેતવણી ને અવગણેલ ન હોવી જોઇએ. અવગણેલી ચેતવણીઓ માહિતી નુકશાન નું કારણ થશે."
 
-#~ msgid ""
-#~ "Certain words in this manual are represented in different fonts, styles, "
-#~ "and weights. This highlighting indicates that the word is part of a "
-#~ "specific category. The categories include the following:"
-#~ msgstr ""
-#~ "ચોક્કસ શબ્દો આ માર્ગદર્શિકામાં અલગ ફોન્ટ, શૈલીઓ, અને વજનમાં રજૂ થાય છે. આ પ્રકાશન સૂચવે "
-#~ "છે કે શબ્દ એ ચોક્કસ વર્ગનો ભાગ છે. વર્ગો આનો સમાવેશ કરે છે:"
-
-#~ msgid "Courier font"
-#~ msgstr "Courier ફોન્ટ"
-
-#~ msgid ""
-#~ "Courier font represents <command>commands</command>, <filename>file names "
-#~ "and paths</filename>, and <prompt>prompts</prompt> ."
-#~ msgstr ""
-#~ "Courier ફોન્ટ <command>આદેશો</command>, <filename>ફાઈલ નામો અને પાથ</"
-#~ "filename>, અને <prompt>પ્રોમ્પ્ટ</prompt> રજૂ કરે છે."
-
-#, fuzzy
-#~ msgid ""
-#~ "Desktop       about.html       logs      paulwesterberg.png\n"
-#~ "Mail          backupfiles      mail      reports"
-#~ msgstr ""
-#~ "જ્યારે નીચે પ્રમાણે બતાવવામાં આવે, ત્યારે તે કમ્પ્યૂટર આઉટપુટ સૂચવે છે: <screen>\n"
-#~ "Desktop       about.html       logs      paulwesterberg.png\n"
-#~ "Mail          backupfiles      mail      reports\n"
-#~ "</screen>"
-
-#~ msgid "bold Courier font"
-#~ msgstr "ઘાટા Courier ફોન્ટ"
-
-#~ msgid ""
-#~ "Bold Courier font represents text that you are to type, such as: "
-#~ "<userinput>service jonas start</userinput>"
-#~ msgstr ""
-#~ "ઘાટા Courier ફોન્ટ લખાણ રજૂ કરે છે કે જે તમે લખવા જાવ છો, જેમ કે: "
-#~ "<userinput>service jonas start</userinput>"
-
-#~ msgid ""
-#~ "If you have to run a command as root, the root prompt (<literal>#</"
-#~ "literal>) precedes the command:"
-#~ msgstr ""
-#~ "જો તમારે રુટ તરીકે આદેશ ચલાવવાનો હોય, તો રુટ પ્રોમ્પ્ટ (<literal>#</literal>) આદેશ "
-#~ "પહેલાં આવે છે:"
-
-#~ msgid "italic Courier font"
-#~ msgstr "ત્રાંસા Courier ફોન્ટ"
-
-#, fuzzy
-#~ msgid ""
-#~ "Italic Courier font represents a variable, such as an installation "
-#~ "directory: <filename> <replaceable>install_dir</replaceable>/bin/</"
-#~ "filename>"
-#~ msgstr ""
-#~ "ત્રાંસા Courier ફોન્ટ ચલ રજૂ કરે છે, જેમ કે સ્થાપન ડિરેક્ટરી: "
-#~ "<filename><replaceable>install_dir</replaceable>/bin/</filename>"
-
-#~ msgid "bold font"
-#~ msgstr "ઘાટો ફોન્ટ"
-
-#~ msgid ""
-#~ "Bold font represents <application>application programs</application> and "
-#~ "<guilabel>text found on a graphical interface</guilabel>."
-#~ msgstr ""
-#~ "ઘાટા ફોન્ટ <application>કાર્યક્રમ પ્રોગ્રામો</application> અને "
-#~ "<guilabel>ગ્રાફિકવાળા ઈન્ટરફેસ પર લખાણ મળ્યું</guilabel> રજૂ કરે છે."
-
-#~ msgid ""
-#~ "When shown like this: <guibutton> OK </guibutton>, it indicates a button "
-#~ "on a graphical application interface."
-#~ msgstr ""
-#~ "જ્યારે આની જેમ બતાવવામાં આવે: <guibutton> બરાબર </guibutton>, તે ગ્રાફિકવાળા "
-#~ "કાર્યક્રમ ઈન્ટરફેસ પર બટન સૂચવે છે."
-
-#~ msgid ""
-#~ "Additionally, the manual uses different strategies to draw your attention "
-#~ "to pieces of information. In order of how critical the information is to "
-#~ "you, these items are marked as follows:"
-#~ msgstr ""
-#~ "વધુમાં, માર્ગદર્શિકા અમુક ચોક્કસ ભાગ પર તમારું ધ્યાન દોરવા માટે વિવિધ વિચારધારાઓ "
-#~ "વાપરે છે. તમારા માટે જાણકારી કેટલી જટિલ છે તે નક્કી કરવા માટે, આ વસ્તુઓ નીચે પ્રમાણે "
-#~ "ચિહ્નિત થાય છે:"
-
-#~ msgid ""
-#~ "A note is typically information that you need to understand the behavior "
-#~ "of the system."
-#~ msgstr "નોંધ એ વિશિષ્ટ જાણકારી છે કે જે તમને સિસ્ટમની વર્તણૂકને સમજવા માટે જરૂરી છે."
-
-#~ msgid "A tip is typically an alternative way of performing a task."
-#~ msgstr "ટિપ્પણી ખાસ કરીને ક્રિયા કરવાનો વૈકલ્પિક રસ્તો છે."
-
-#~ msgid ""
-#~ "Important information is necessary, but possibly unexpected, such as a "
-#~ "configuration change that will not persist after a reboot."
-#~ msgstr ""
-#~ "મહત્વની જાણકારી જરૂરી છે, પરંતુ અનિચ્છનીય હોય તેની શક્યતા પણ હોઈ શકે, જેમ કે રૂપરેખાંકન "
-#~ "ફેરફાર કે જે રીબુટ પછી હાજર નહિં રહે."
-
-#~ msgid "Caution"
-#~ msgstr "સાવધાની"
-
-#~ msgid ""
-#~ "A caution indicates an act that would violate your support agreement, "
-#~ "such as recompiling the kernel."
-#~ msgstr ""
-#~ "સાવધાની ક્રિયા સૂચવે છે કે જે તમારું આધાર મંજૂરીપત્ર બગાડી નાંખે, જેમ કે કર્નલ પુનઃકમ્પાઈલ "
-#~ "કરવી."
-
-#~ msgid ""
-#~ "A warning indicates potential data loss, as may happen when tuning "
-#~ "hardware for maximum performance."
-#~ msgstr ""
-#~ "ચેતવણી સંભવિત માહિતી નાશ સૂચવે છે, કારણ કે તે જ્યારે હાર્ડવેરને મહત્તમ પ્રભાવ માટે ટ્યુન "
-#~ "કરી રહ્યા હોય ત્યારે થશે."
-
-#~ msgid "gconftool-2\n"
-#~ msgstr "gconftool-2\n"
-
-#~ msgid ""
-#~ "\n"
-#~ "# <placeholder-1/>\n"
-#~ "\t\t\t\t"
-#~ msgstr ""
-#~ "\n"
-#~ "# <placeholder-1/>\n"
-#~ "\t\t\t\t"
-
-#~ msgid "Tip"
-#~ msgstr "ટિપ્પણી"
-
-#~ msgid "translator-credits"
-#~ msgstr "અંકિત પટેલ <ankit@redhat.com>"
