--- a/publican/content/common/hi-IN/Conventions.po
+++ b/publican/content/common/hi-IN/Conventions.po
@@ -1,18 +1,18 @@
 # translation of Conventions.po to Hindi
-# Rajesh Ranjan <rranjan@redhat.com>, 2007.
+# Rajesh Ranjan <rranjan@redhat.com>, 2007, 2008.
 msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2008-09-29 04:47+0000\n"
-"PO-Revision-Date: 2007-10-30 15:05+0530\n"
+"PO-Revision-Date: 2008-10-08 16:01+0530\n"
 "Last-Translator: Rajesh Ranjan <rranjan@redhat.com>\n"
 "Language-Team: Hindi <hindi.sf.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
-"Plural-Forms: nplurals=2; plural=(n!=1);\n"
+"Plural-Forms: nplurals=2; plural=(n!=1);\n\n\n"
 "\n"
 "\n"
 
@@ -28,7 +28,7 @@ msgstr "दस्तावेज परिपाटी"
 msgid ""
 "This manual uses several conventions to highlight certain words and phrases "
 "and draw attention to specific pieces of information."
-msgstr ""
+msgstr "यह मैनुअल कई परिपाटियों का प्रयोग करता है कुछ खास शब्दों व वाक्यांशों को आलोकित करने के लिए और किसी खास सूचना के लिए ध्यान खींचता है."
 
 #. Tag: para
 #: Conventions.xml:11
@@ -41,12 +41,15 @@ msgid ""
 "displayed. Note: Red Hat Enterprise Linux 5 and later includes the "
 "Liberation Fonts set by default."
 msgstr ""
+"PDF और कागजी संस्करण में, यह मैनुअल टाइपफेस का प्रयोग करता है जो कि <ulink "
+"url=\"https://fedorahosted.org/liberation-fonts/\">Liberation Fonts</ulink> "
+"सेट से खींचा गया है. लिबरेशन फ़ॉन्ट को HTML संस्करण में भी प्रयोग किया जाता है यदि सेट आपके सिस्टम पर संस्थापित है. यदि नहीं, वैकल्पिक लेकिन समान टाइपफेस प्रदर्शित किया जाता है. नोट: Red Hat Enterprise Linux 5 और बाद के संस्करण तयशुदा रूप से लिबरेशन फ़ॉन्ट शामिल करते हैं."
 
 #. Tag: title
 #: Conventions.xml:16
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Typographic Conventions"
-msgstr "दस्तावेज परिपाटी"
+msgstr "टाइपोग्राफी परिपाटी"
 
 #. Tag: para
 #: Conventions.xml:18
@@ -55,13 +58,13 @@ msgid ""
 "Four typographic conventions are used to call attention to specific words "
 "and phrases. These conventions, and the circumstances they apply to, are as "
 "follows."
-msgstr ""
+msgstr "चार टाइपोग्राफी परिपाटियों को विशेष शब्द या वाक्यांश का ध्यान खींचने के लिए प्रयोग किया जाता है. ये परिपाटी, और परिस्थितियां जिसमें लागू किया जाता है, इस प्रकार हैं."
 
 #. Tag: literal
 #: Conventions.xml:23
 #, no-c-format
 msgid "Mono-spaced Bold"
-msgstr ""
+msgstr "मोनो स्पेस्ड बोल्ड"
 
 #. Tag: para
 #: Conventions.xml:26
@@ -69,7 +72,7 @@ msgstr ""
 msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight key caps and key-combinations. For example:"
-msgstr ""
+msgstr "शेल कमांड, फाइल नाम पथ सहित सिस्टम इनपुट आलोकित करने के लिए प्रयोग किया जाता है. कुंजी कैप्स और कुंजी युग्म को आलोकित करने के लिए प्रयुक्त. उदाहरण के लिए:"
 
 #. Tag: section
 #: Conventions.xml:28
@@ -157,12 +160,38 @@ msgid ""
 "firstterm>). Unlike other modules, only one module from the MPM group can be "
 "loaded by the Apache HTTP Server. </para> </blockquote>"
 msgstr ""
+"<blockquote> <para> फाइल <filename>my_next_bestselling_novel</filename> की सामग्री को अपने मौजूदा कार्यशील निर्देशिका में देखने के लिए, <command>cat my_next_bestselling_novel</command> "
+"कमांड को शेल प्रांप्ट पर देखें और <keycap>Enter</keycap> को कमांड को चलाने के लिए दबाएँ. </para> </blockquote> <para> ऊपर में फाइल नाम, शेल कमांड और एक कुंजी कैप शामिल है, जिसमें सभी मोनो स्पेस्ड बोल्ड में प्रस्तुत हैं और सभी विशेष धन्यवाद संदर्भ को जाता है. </para> <para> कुंजी युग्म को कुंजी कैप से अलग हाइफन से किया जा सकता है जो कुंजी युग्म के हर हिस्से को कनेक्ट करता है. उदाहरण के लिए: </para> <blockquote> <para>  <keycap>Enter</"
+"keycap> को कमांड को चलाने के लिए दबाएँ. </para> <para> <keycombo><keycap>Ctrl</"
+"keycap><keycap>Alt</keycap><keycap>F1</keycap></keycombo> को पहले आभासी टर्मिनल में जाने के लिए दबाएँ. <keycombo><keycap>Ctrl</keycap><keycap>Alt</"
+"keycap><keycap>F7</keycap></keycombo> को अपने X-Windows सत्र में वापस लौटने के लिए दबाएँ. </"
+"para> </blockquote> <para> पहला वाक्य खास कुंजी कैप को दबाने के लिए आलोकित करता है. दूसरा तीन कुंजी कैप के दो सेट को आलोकित करता है, हर सेट एक साथ दबाया जाता है. </para> <para> यदि स्रोत कोड पर चर्चा की जाती है, तो किसी अनुच्छेद के अंदर वर्ग नाम, विधि, फंक्शन, चर नाम, और वापस आया मान को उपर्युक्त के अनुसार प्रस्तुत किया जाएगा, <literal>Mono-spaced Bold</"
+"literal> में. उदाहरण के लिए: </para> <blockquote> <para> फाइल संबंधित वर्ग में <classname>filesystem</classname> फाइल सिस्टम के लिए, <classname>file</classname> फाइलों के लिए, और <classname>dir</classname> निर्देशिकाओं के लिए शामिल है. हर वर्ग के पास इसकी अपनी अनुमतियों का संबद्ध सेट है. </para> </blockquote> <para> <application>आनुपातिक बोल्ड</application> </para> <para> यह शब्दों व वाक्यांशों को दिखाता है जो किसी सिस्टम पर आया है, अनुप्रयोग नाम; संवाद बाक्स पाठ; स्तरित बटन; जाँच-पेटी और रेडियो बटन लेबल; मेन्यू शीर्षक और उप-मेन्यू शीर्षक के साथ. उदाहरण के लिए: </para> <blockquote> <para> चुनें <guimenu>सिस्टम > वरीयताएँ > माउस</guimenu> मुख्य मेन्यू पट्टी से <application>माउस वरीयताएँ</application> को लॉन्च करने के लिए. <guilabel>बटन</guilabel> टैब में,  <guilabel>बाएँ हाथ का माउस</"
+"guilabel> जाँच-पेटी को क्लिक करें और <guibutton>बंद करें</guibutton> को प्राथमिक माउस बटन को बाएं से दाएं बदलने के लिए क्लिक करें (माउस को बायें हाथ में प्रयोग के लिए उपयुक्त बनाते हुए). </para> <para> किसी विशेष संप्रतीक को <application>gedit</application> फाइल में जोड़ने के लिए, <guimenu>अनुप्रयोग > सहायक > वर्ण मैप</guimenu> को मुख्य मेन्यू बार से चुनें. आगे, <guimenu>खोजें > ढूँढ़ें&hellip;</guimenu> को <application>वर्ण मानचित्र</application> मेन्यू बार से चुनें, वर्ण का नाम <guilabel>खोजें</guilabel> क्षेत्र में टाइप करें और <guibutton>आगे</guibutton> क्लिक करें. वर्ण जिसे आपने चाहा है को <guilabel>वर्ण सारणी</"
+"guilabel> में हाइलाइटेड किया जाएगा. इस हाइलाइटेड वर्ण को दोबार क्लिक करें <guilabel>नक़ल के लिए पाठ</guilabel> क्षेत्र में इसे रखने के लिए और तब <guibutton>नक़ल करें</guibutton> बटन फिर क्लिक करें. अब अपने दस्तावेज में वापस जाएँ और <guimenu>संपादन "
+"> चिपकाएँ</guimenu> को <application>gedit</application> मेन्यू बार से चुनें. </para> </blockquote> <para> उपर्युक्त पाठ में अनुप्रयोग नाम; सिस्टम व्यापक मेन्यू नाम व मद; अनुप्रयोग विशिष्ट मेन्यू नाम; और बटन और किसी GUI अंतरफलक के अंदर मिला पाठ शामिल है, सभी आनुपातिक बोल्ड में प्रस्तुत है और सभी संदर्भ के आधार पर भिन्न किए जा सकते हैं. </para> <para> नोट करें कि <guimenu>></guimenu> शॉर्टहैंड जो एक मेन्यू और इसके उप-मेन्यू से होकर आनेजाने के लिए प्रयोग किए जाते हैं. यह अनुसरण में कठिनाई से बचने के लिए है 'चुनें <guimenuitem>माउस</guimenuitem> को"
+" <guimenu>वरीयताएँ</guimenu> उप-मेन्यू से  <guimenu>सिस्टम</"
+"guimenu> मुख्य मेन्यू बार उपागम के मेन्यू में. </para> <para> "
+"<command><replaceable>Mono-spaced Bold Italic</replaceable></command> या "
+"<application><replaceable>Proportional Bold Italic</replaceable></"
+"application> </para> <para> जहाँ मोनो-स्पेस्ड बोल्ड या आनुपातिक बोल्ड, "
+"इटालिक का योग बताता है विस्थापनीय या चर पाठ के अलावे. इटालिक बताता है उन पाठ के बारे में जो आप शब्दशः इनपुट नहीं करते हैं या प्रदर्शित पाठ जो परिस्थिति के आधार पर बदलता है. उदाहरण के लिए: </para> <blockquote> <para> किसी दूरस्थ मशीन से ssh के प्रयोग से जुड़ने के लिए, <command>ssh "
+"<replaceable>username</replaceable>@<replaceable>domain.name</replaceable></"
+"command> को शेल प्रांप्ट पर टाइप करें. यदि दूरस्थ मशीन <filename>example.com</"
+"filename> है और उस मशीन पर आपका उपयोक्ता नाम john है,  <command>ssh "
+"john@example.com</command> करें. </para> <para>  <command>mount -o remount "
+"<replaceable>file-system</replaceable></command> कमांड नामित फाइल सिस्टम को फिर माउंट करता है. उदाहरण के लिए, <filename>/home</filename> फाइल सिस्टम, कमांड <command>mount -o remount /home</command> है. </para> "
+"<para> अभी संस्थापित संकुल के संस्करण को देखने के लिए, <command>rpm -q <replaceable>package</replaceable></command> कमांड का प्रयोग करें. यह परिणाम ऐसे देगा: <command><replaceable>package-version-"
+"release</replaceable></command>. </para> </blockquote> <para> नोट करें कि बोल्ड इटालिक में शब्द ऊपर &mdash; प्रयोक्तानाम, डोमेननाम, फाइल-सिस्टम, संकुल, संस्करण और रिलीज. हर शब्द एक प्लेसहोल्डर है, या पाठ के लिए जो आप दाखिल करते हैं जब किसी कमांड को निर्गत किया जाता है और सिस्टम के द्वारा प्रदर्शित पाठ के लिए. </para> <para> "
+"किसी काम के लिए शीर्षक के प्रस्तुत करने के लिए मानक प्रयोग के अलावे, इटालिक नये व महत्वपूर्ण पद के प्रयोग के बारे में बताता है. उदाहरण के लिए: </para> "
+"<blockquote> <para> जब एपाची HTTP सर्वर आग्रह स्वीकार करता है, यह उन्हें नियंत्रित करने के लिए संतति प्रक्रिया या लड़ी डिस्पैच करता है. संतति प्रक्रिया का समूह या लड़ी को <firstterm>सर्वर-पुल</firstterm> के रूप में जाना जाता है. Apache HTTP सर्वर 2.0 के अंतर्गत, इन सर्वर पुल के निर्माण व देखभाल का दायित्व को माड्यूल के समूह से सारांश किया जाता है जो कि <firstterm>मल्टी प्रोसेसिंग मॉड्यूल</firstterm> (<firstterm>MPM</"
+"firstterm>) कहलाता है. दूसरे मॉड्यूल से भिन्न, MPM समूह से सिर्फ एक माड्यूल को Apache HTTP सर्वर के द्वारा लोड किया जाता है. </para> </blockquote>े"
 
 #. Tag: title
 #: Conventions.xml:132
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Pull-quote Conventions"
-msgstr "दस्तावेज परिपाटी"
+msgstr "पुल कोट परिपाटी"
 
 #. Tag: para
 #: Conventions.xml:134
@@ -170,7 +199,7 @@ msgstr "दस्तावेज परिपाटी"
 msgid ""
 "Two, commonly multi-line, data types are set off visually from the "
 "surrounding text."
-msgstr ""
+msgstr "दो, सामान्य रूप से मल्टी लाइन, डेटा टाइप चारों ओर के पाठ से सेट ऑफ किया जाता है."
 
 #. Tag: para
 #: Conventions.xml:138
@@ -179,6 +208,8 @@ msgid ""
 "Output sent to a terminal is set in <computeroutput>Mono-spaced Roman</"
 "computeroutput> and presented thus:"
 msgstr ""
+"टर्मिनल में भेजा आउटपुट को <computeroutput>Mono-spaced Roman</"
+"computeroutput> में सेट किया जाता है और इस प्रकार प्रस्तुत किया जाता है:"
 
 #. Tag: screen
 #: Conventions.xml:142
@@ -187,6 +218,8 @@ msgid ""
 "books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
 "books_tests  Desktop1  downloads      images  notes  scripts  svgs"
 msgstr ""
+"books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
+"books_tests  Desktop1  downloads      images  notes  scripts  svgs"
 
 #. Tag: para
 #: Conventions.xml:144
@@ -195,6 +228,8 @@ msgid ""
 "Source-code listings are also set in <computeroutput>Mono-spaced Roman</"
 "computeroutput> but are presented and highlighted as follows:"
 msgstr ""
+"स्रोत कोड लिस्टिंग को <computeroutput>Mono-spaced Roman</"
+"computeroutput> में भी सेट किया जाता है लेकिन निम्नानुसार प्रस्तुत व हाइलाइट किया जाता है:"
 
 #. Tag: programlisting
 #: Conventions.xml:148
@@ -221,12 +256,32 @@ msgid ""
 "   \n"
 "}"
 msgstr ""
+"package org.jboss.book.jca.ex1;\n"
+"\n"
+"import javax.naming.InitialContext;\n"
+"\n"
+"public class ExClient\n"
+"{\n"
+"   public static void main(String args[]) \n"
+"       throws Exception\n"
+"   {\n"
+"      InitialContext iniCtx = new InitialContext();\n"
+"      Object         ref    = iniCtx.lookup(\"EchoBean\");\n"
+"      EchoHome       home   = (EchoHome) ref;\n"
+"      Echo           echo   = home.create();\n"
+"\n"
+"      System.out.println(\"Created Echo\");\n"
+"\n"
+"      System.out.println(\"Echo.echo('Hello') = \" + echo.echo(\"Hello\"));\n"
+"   }\n"
+"   \n"
+"}"
 
 #. Tag: title
 #: Conventions.xml:153
 #, no-c-format
 msgid "Notes and Warnings"
-msgstr ""
+msgstr "नोट्स व चेतावनी"
 
 #. Tag: para
 #: Conventions.xml:155
@@ -234,7 +289,7 @@ msgstr ""
 msgid ""
 "Finally, we use three visual styles to draw attention to information that "
 "might otherwise be overlooked."
-msgstr ""
+msgstr "अंततः, हम तीन विजुअल शैली का प्रयोग करते हैं उन सूचनाओं पर ध्यान खींचने के लिए जो अन्यथा रूप से अनदेखा कर दिया जा सकता है."
 
 #. Tag: title
 #: Conventions.xml:160
@@ -250,6 +305,8 @@ msgid ""
 "Ignoring a note should have no negative consequences, but you might miss out "
 "on a trick that makes your life easier."
 msgstr ""
+"एक नोट किसी कार्य के लिए एक संकेत, शॉर्टकट, या वैकल्पिक तरीके हैं. "
+"किसी नोट को अनदेखा करना कोई नकारात्मक परिणाम नहीं देना चाहिए, लेकिन किसी ट्रिक मिस कर सकते हैं जो आपके जीवन को आसान बनाता है."
 
 #. Tag: title
 #: Conventions.xml:167
@@ -265,7 +322,7 @@ msgid ""
 "that only apply to the current session, or services that need restarting "
 "before an update will apply. Ignoring Important boxes won't cause data loss "
 "but may cause irritation and frustration."
-msgstr ""
+msgstr "महत्वपूर्ण बाक्स उन चीजों को विस्तार से बताता है जो आसानी से मिस किया जा सकते हैं: विन्यास बदलाव जो कि सिर्फ मौजूदा सत्र में लागू होते हैं, या सेवाएं जिसे किसी अद्यतन के फिर लागू होने के पहले फिर आरंभ करने की जरूरत है. किसी महत्वपूर्ण बाक्स को अनदेखा करना डेटा क्षति का कारण नहीं बनेगा लेकिन परेशानी व खिन्नता का कारण बन सकता है."
 
 #. Tag: title
 #: Conventions.xml:175
@@ -279,137 +336,5 @@ msgstr "चेतावनी"
 msgid ""
 "A Warning should not be ignored. Ignoring warnings will most likely cause "
 "data loss."
-msgstr ""
+msgstr "एक चेतावनी को अनदेखा नहीं किया जाना चाहिए. चेतावनी अनदेखा करना अधिक संभव रूप से डेटा क्षति का कारण बनेगा."
 
-#~ msgid ""
-#~ "Certain words in this manual are represented in different fonts, styles, "
-#~ "and weights. This highlighting indicates that the word is part of a "
-#~ "specific category. The categories include the following:"
-#~ msgstr ""
-#~ "इस मैनुअल में कुछ शब्द दूसरे फाँट, शैली व महत्वक्रम में दिखाये गये हैं. इस प्रकार हाइलाइट "
-#~ "किया जाना दिखाता है कि शब्द विशेष श्रेणी के हिस्से हैं. इस श्रेणी में निम्नलिखित शामिल है:"
-
-#~ msgid "Courier font"
-#~ msgstr "कूरियर फाँट"
-
-#~ msgid ""
-#~ "Courier font represents <command>commands</command>, <filename>file names "
-#~ "and paths</filename>, and <prompt>prompts</prompt> ."
-#~ msgstr ""
-#~ "कूरियर फाँट <command>commands</command>, <filename>file names and paths</"
-#~ "filename>, और <prompt>prompts</prompt> को दिखाता है."
-
-#, fuzzy
-#~ msgid ""
-#~ "Desktop       about.html       logs      paulwesterberg.png\n"
-#~ "Mail          backupfiles      mail      reports"
-#~ msgstr ""
-#~ "जब नीचे इस तरह दिखाया गया, यह कंप्यूटर आउटपुट को संकेत करता है: <screen>\n"
-#~ "Desktop       about.html       logs      paulwesterberg.png\n"
-#~ "Mail          backupfiles      mail      reports\n"
-#~ "</screen>"
-
-#~ msgid "bold Courier font"
-#~ msgstr "बोल्ड कूरियर फाँट"
-
-#~ msgid ""
-#~ "Bold Courier font represents text that you are to type, such as: "
-#~ "<userinput>service jonas start</userinput>"
-#~ msgstr ""
-#~ "बोल्ड कूरियर फाँट पाठ को दिखाता है जो आप टाइप करते हैं, जैसे कि: "
-#~ "<userinput>service jonas start</userinput>"
-
-#~ msgid ""
-#~ "If you have to run a command as root, the root prompt (<literal>#</"
-#~ "literal>) precedes the command:"
-#~ msgstr ""
-#~ "यदि आपको बतौर रूट कमांड चलाना है, रूट प्रांप्ट (<literal>#</literal>) कमांड को आगे "
-#~ "बढ़ाती है:"
-
-#~ msgid "italic Courier font"
-#~ msgstr "इटालिक कूरियर फाँट"
-
-#, fuzzy
-#~ msgid ""
-#~ "Italic Courier font represents a variable, such as an installation "
-#~ "directory: <filename> <replaceable>install_dir</replaceable>/bin/</"
-#~ "filename>"
-#~ msgstr ""
-#~ "इटालिक कूरियर एक चर को प्रतिबिंबित करता है, जैसे कि एक अधिष्ठापन निर्देशिका: "
-#~ "<filename><replaceable>install_dir</replaceable>/bin/</filename>"
-
-#~ msgid "bold font"
-#~ msgstr "बोल्ड फाँट"
-
-#~ msgid ""
-#~ "Bold font represents <application>application programs</application> and "
-#~ "<guilabel>text found on a graphical interface</guilabel>."
-#~ msgstr ""
-#~ "बोल्ड फाँट <application>application programs</application> और "
-#~ "<guilabel>आलेखीय अंतरफलक पर पाठ मिला</guilabel> को प्रतिरूपित करता है."
-
-#~ msgid ""
-#~ "When shown like this: <guibutton> OK </guibutton>, it indicates a button "
-#~ "on a graphical application interface."
-#~ msgstr ""
-#~ "जब इस तरह से दिखाया जाये: <guibutton> ठीक </guibutton>, यह आलेखीय अनुप्रयोग "
-#~ "अंतरफलक पर एक बटन को संकेत करता है."
-
-#~ msgid ""
-#~ "Additionally, the manual uses different strategies to draw your attention "
-#~ "to pieces of information. In order of how critical the information is to "
-#~ "you, these items are marked as follows:"
-#~ msgstr ""
-#~ "इसके अलावे, मैनुअल भिन्न रणनीति का प्रयोग सूचना के विभिन्न हिस्सों पर आपके ध्यान को "
-#~ "खीचने के लिए करता है. इसके लिए कि कितना गंभीर यह सूचना आपके लिए है, ये मद इस रूप में "
-#~ "चिह्नित किये जाते हैं:"
-
-#~ msgid ""
-#~ "A note is typically information that you need to understand the behavior "
-#~ "of the system."
-#~ msgstr "नोट एक खास सूचना है जिसकी आपको सिस्टम को समझने में जरूरत पड़ेगीपड़ेगी."
-
-#~ msgid "A tip is typically an alternative way of performing a task."
-#~ msgstr "संकेत किसी कार्य को करने का एक वैकल्पिक तरीका है."
-
-#~ msgid ""
-#~ "Important information is necessary, but possibly unexpected, such as a "
-#~ "configuration change that will not persist after a reboot."
-#~ msgstr ""
-#~ "महत्वपूर्ण सूचना जरूरी है, लेकिन अप्रत्याशित है, जैसे कि एक विन्यास परिवर्तन जो कि रिबूट "
-#~ "के बाद नहीं बना रहेगा."
-
-#~ msgid "Caution"
-#~ msgstr "सावधानी"
-
-#~ msgid ""
-#~ "A caution indicates an act that would violate your support agreement, "
-#~ "such as recompiling the kernel."
-#~ msgstr ""
-#~ "सावधानी से तात्पर्य ऐसे काम से है जो आपके समर्थन अनुबंध का उल्लंघन करता है, जैसे कि कर्नेल "
-#~ "को रिकंपाइल करना."
-
-#~ msgid ""
-#~ "A warning indicates potential data loss, as may happen when tuning "
-#~ "hardware for maximum performance."
-#~ msgstr ""
-#~ "चेतावनी से मतलब संभावित आंकड़ा नुकसान से है, संभव है जब हार्डवेयर को अधिकतम प्रदर्शन देने "
-#~ "के लिए ट्यून किया जाता है."
-
-#~ msgid "gconftool-2\n"
-#~ msgstr "gconftool-2\n"
-
-#~ msgid ""
-#~ "\n"
-#~ "# <placeholder-1/>\n"
-#~ "\t\t\t\t"
-#~ msgstr ""
-#~ "\n"
-#~ "# <placeholder-1/>\n"
-#~ "\t\t\t\t"
-
-#~ msgid "Tip"
-#~ msgstr "संकेत"
-
-#~ msgid "translator-credits"
-#~ msgstr "Rajesh Ranjan (rranjan@redhat.com)"
