--- a/publican/content/common/it-IT/Conventions.po
+++ b/publican/content/common/it-IT/Conventions.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2008-09-29 04:47+0000\n"
-"PO-Revision-Date: 2007-11-12 15:40+1000\n"
+"PO-Revision-Date: 2008-10-10 15:35+1000\n"
 "Last-Translator: \n"
 "Language-Team:  <it@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -25,6 +25,8 @@ msgid ""
 "This manual uses several conventions to highlight certain words and phrases "
 "and draw attention to specific pieces of information."
 msgstr ""
+"Questo manuale utilizza numerose convenzioni per evidenziare parole e frasi, "
+"ponendo attenzione su informazioni specifiche."
 
 #. Tag: para
 #: Conventions.xml:11
@@ -37,12 +39,14 @@ msgid ""
 "displayed. Note: Red Hat Enterprise Linux 5 and later includes the "
 "Liberation Fonts set by default."
 msgstr ""
+"Nelle edizioni PDF e cartacea questo manuale utilizza caratteri presenti nel set <ulink "
+"url=\"https://fedorahosted.org/liberation-fonts/\">Font Liberation</ulink>. Il set Font Liberation viene anche utilizzato nelle edizioni HTML se il set stesso è stato installato sul vostro sistema. In caso contrario, verranno mostrati caratteri alternativi ma equivalenti. Da notare: Red Hat Enterprise Linux 5 e versioni più recenti, includono per default il set Font Liberation."
 
 #. Tag: title
 #: Conventions.xml:16
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Typographic Conventions"
-msgstr "Convenzioni del documento"
+msgstr "Convenzioni tipografiche"
 
 #. Tag: para
 #: Conventions.xml:18
@@ -52,12 +56,15 @@ msgid ""
 "and phrases. These conventions, and the circumstances they apply to, are as "
 "follows."
 msgstr ""
+"Vengono utilizzate quattro convenzioni tipografiche per richiamare l'attenzione "
+"su parole e frasi specifiche. Queste convenzioni, e le circostanze alle quali "
+"vengono applicate, sono le seguenti."
 
 #. Tag: literal
 #: Conventions.xml:23
 #, no-c-format
 msgid "Mono-spaced Bold"
-msgstr ""
+msgstr "Neretto monospazio"
 
 #. Tag: para
 #: Conventions.xml:26
@@ -65,7 +72,7 @@ msgstr ""
 msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight key caps and key-combinations. For example:"
-msgstr ""
+msgstr "Usato per evidenziare l'input del sistema, incluso i comandi della shell, i nomi dei file ed i percorsi. Utilizzato anche per evidenziare tasti singoli e combinazione di tasti. Per esempio:"
 
 #. Tag: section
 #: Conventions.xml:28
@@ -153,10 +160,37 @@ msgid ""
 "firstterm>). Unlike other modules, only one module from the MPM group can be "
 "loaded by the Apache HTTP Server. </para> </blockquote>"
 msgstr ""
+"<blockquote> <para> Per visualizzare i contenuti del file "
+"<filename>my_next_bestselling_novel</filename> nella vostra directory di lavoro corrente, "
+"inserire il comando <command>cat my_next_bestselling_novel</command> "
+"al prompt della shell e premere <keycap>Invio</keycap> per eseguire il comando. "
+"</para> </blockquote> <para> Quanto sopra riportato include un nome del file, un "
+"comando della shell ed un tasto, il tutto riportato in Neretto monospazio e "
+"distinguibile grazie al contesto. </para> <para> Le combinazioni di tasti possono essere distinte dalle chiavi singole, tramite il trattino che collega ogni parte della combinazione di tasti. Per esempio: </para> <blockquote> <para> Premere <keycap>Invio</"
+"keycap> per eseguire il comando. </para> <para> Premere <keycombo><keycap>Ctrl</"
+"keycap><keycap>Alt</keycap><keycap>F1</keycap></keycombo> per smistarsi sul primo "
+"virtual terminal. Premere <keycombo><keycap>Ctrl</keycap><keycap>Alt</"
+"keycap><keycap>F7</keycap></keycombo> per ritornare alla sessione X-Windows. </"
+"para> </blockquote> <para> La prima frase evidenzia il tasto specifico singolo da premere. La seconda evidenzia due set di tre tasti, ogni set viene premuto simultaneamente. </para> <para> Se si affronta il codice sorgente, i nomi della classe, i metodi, le funzioni i nomi della variabile ed i valori ritornati indicati all'interno di un paragrafo, essi verranno indicati come sopra, e cioè in <literal>Neretto monospazio</literal>. Per esempio: </para> <blockquote> <para> Le classi relative ad un file "
+"includono <classname>filesystem</classname> per file system, <classname>file</"
+"classname> per file, e <classname>dir</classname> per directory. Ogni classe "
+"possiede il proprio set associato di permessi. </para> </blockquote> "
+"<para> <application>Neretto proporzionale</application> </para> <para> Ciò denota le parole e le frasi incontrate su di un sistema, incluso i nomi delle applicazioni; il testo delle caselle di dialogo; i pulsanti etichettati; le caselle e le etichette per pulsanti radio, titoli del menu e dei sottomenu. Per esempio: </para> <blockquote> <para> Selezionare <guimenu>Sistema > Preferenze > Mouse</guimenu> dalla barra del menu principale per lanciare <application>Preferenze del mouse</application>. Nella scheda  "
+"<guilabel>Pulsanti</guilabel>, fate clic sulla casella di dialogo <guilabel>mouse per mancini</"
+"guilabel>, e successivamente fate clic su <guibutton>Chiudi</guibutton> per cambiare il pulsante primario del mouse da sinistra a destra (rendendo così il mouse idoneo per un utilizzo con la mano sinistra). </para> <para> Per inserire un carattere speciale in un file <application>gedit</application>, selezionare <guimenu>Applicazioni > Accessori > Mappa carattere</guimenu> dalla barra menu principale. Successivamente, selezionare <guimenu>Cerca > Trova&hellip;</guimenu> dalla barra del menu <application>Mappa carattere</application>, inserire il nome del carattere nel campo <guilabel>Cerca</guilabel> e cliccare <guibutton>Successivo</guibutton>. Il carattere "
+"ricercato verrà evidenziato nella <guilabel>Tabella caratteri</guilabel>. Fate un doppio clic sul carattere evidenziato per posizionarlo nel campo <guilabel>Testo da copiare</guilabel>, e successivamente fate clic sul pulsante <guibutton>Copia</guibutton>. Ora ritornate al vostro documento e selezionate <guimenu>Modifica > Incolla</guimenu> dalla barra del menu di <application>gedit</application>. </"
+"para> </blockquote> <para> Il testo sopra riportato include i nomi delle applicazioni; nomi ed oggetti del menu per l'intero sistema; nomi del menu specifici alle applicazioni; e pulsanti e testo trovati all'interno di una interfaccia GUI, tutti presentati in Neretto proporzionale e distinguibili dal contesto. </para> <para> Da notare <guimenu>></guimenu> l'abbreviazione usata per andare da un menu e sottomenu relativi. Tale operazione viene eseguita per evitare l'uso di 'Seleziona <guimenuitem>Mouse</guimenuitem> dal sottomenu <guimenu>Preferenze</guimenu> nel menu <guimenu>Sistema</guimenu> della barra principale del menu. </para> <para> "
+"<command><replaceable>Corsivo neretto monospazio</replaceable></command> o "
+"<application><replaceable>Corsivo neretto proporzionale</replaceable></"
+"application> </para> <para> Sia se si tratta di Corsivo neretto monospazio o Corsivo neretto proporzionale, l'aggiunta del carattere Corsivo indica un testo variabile o sostituibile . Il carattere Corsivo denota un testo che non viene inserito letteralmente, o visualizzato che varia a seconda delle circostanze. Per esempio: </para> <blockquote> <para> Per collegarsi ad una macchina remota utilizzando ssh, digitare <command>ssh <replaceable>username</replaceable>@<replaceable>domain.name</replaceable></"
+"command> al prompt della shell. Se la macchina remota è <filename>example.com</filename> ed il nome utente sulla macchina interessata è john, digitare <command>ssh john@example.com</command>. </para> <para> Il comando <command>mount -o remount <replaceable>file-system</replaceable></command> rimonta il file system indicato. Per esempio, per rimontare il file system <filename>/home</filename>, il comando è <command>mount -o remount /home</command>. </para> <para> Per visualizzare la versione di un pacchetto attualmente installato, utilizzare il comando <command>rpm -q <replaceable>package</replaceable></command>. Esso ritornerà il seguente risultato: <command><replaceable>package-version-release</replaceable></command>. </para> </blockquote> <para> Da notare la parola in Corsivo neretto &mdash; nome utente, domain.name, file-system, pacchetto, "
+"versione e release. Ogni parola racchiude il testo da voi inserito durante l'emissione di un comando o per il testo mostrato dal sistema. </para> <para> Oltre all'utilizzo normale per la presentazione di un titolo, il carattere Corsivo denota il primo utilizzo di un termine nuovo ed importante. Per esempio: </para> "
+"<blockquote> <para> Quando il server HTTP Apache accetta le richieste, esso invia "
+"i processi figlio o thread per la loro gestione. Questo gruppo di processi figlio o thread è conosciuto come <firstterm>server-pool</firstterm>. Con Apache HTTP Server 2.0, la responsabilità per la creazione e gestione di questi server-pool si riassume in un gruppo di moduli chiamati <firstterm>Multi-Processing Modules</firstterm> (<firstterm>MPMs</firstterm>). Diversamente da altri moduli, solo un modulo dal gruppo MPM può essere caricato del server HTTP Apache . </para> </blockquote>"
 
 #. Tag: title
 #: Conventions.xml:132
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Pull-quote Conventions"
 msgstr "Convenzioni del documento"
 
@@ -167,6 +201,8 @@ msgid ""
 "Two, commonly multi-line, data types are set off visually from the "
 "surrounding text."
 msgstr ""
+"Due tipi di dati, comunemente con più righe, vengono evidenziati rispetto al testo "
+"circostante."
 
 #. Tag: para
 #: Conventions.xml:138
@@ -175,6 +211,8 @@ msgid ""
 "Output sent to a terminal is set in <computeroutput>Mono-spaced Roman</"
 "computeroutput> and presented thus:"
 msgstr ""
+"L'output inviato ad un terminale è impostato su <computeroutput>Tondo monospazio</"
+"computeroutput> e così presentato:"
 
 #. Tag: screen
 #: Conventions.xml:142
@@ -183,6 +221,8 @@ msgid ""
 "books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
 "books_tests  Desktop1  downloads      images  notes  scripts  svgs"
 msgstr ""
+"books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
+"books_tests  Desktop1  downloads      images  notes  scripts  svgs"
 
 #. Tag: para
 #: Conventions.xml:144
@@ -191,6 +231,8 @@ msgid ""
 "Source-code listings are also set in <computeroutput>Mono-spaced Roman</"
 "computeroutput> but are presented and highlighted as follows:"
 msgstr ""
+"Gli elenchi del codice sorgente sono impostati in <computeroutput>Mono-spaced Roman</"
+"computeroutput> ma vengono presentati ed evidenziati nel modo seguente:"
 
 #. Tag: programlisting
 #: Conventions.xml:148
@@ -217,12 +259,32 @@ msgid ""
 "   \n"
 "}"
 msgstr ""
+"package org.jboss.book.jca.ex1;\n"
+"\n"
+"import javax.naming.InitialContext;\n"
+"\n"
+"public class ExClient\n"
+"{\n"
+"   public static void main(String args[]) \n"
+"       throws Exception\n"
+"   {\n"
+"      InitialContext iniCtx = new InitialContext();\n"
+"      Object         ref    = iniCtx.lookup(\"EchoBean\");\n"
+"      EchoHome       home   = (EchoHome) ref;\n"
+"      Echo           echo   = home.create();\n"
+"\n"
+"      System.out.println(\"Created Echo\");\n"
+"\n"
+"      System.out.println(\"Echo.echo('Hello') = \" + echo.echo(\"Hello\"));\n"
+"   }\n"
+"   \n"
+"}"
 
 #. Tag: title
 #: Conventions.xml:153
 #, no-c-format
 msgid "Notes and Warnings"
-msgstr ""
+msgstr "Note ed avvertimenti"
 
 #. Tag: para
 #: Conventions.xml:155
@@ -231,6 +293,8 @@ msgid ""
 "Finally, we use three visual styles to draw attention to information that "
 "might otherwise be overlooked."
 msgstr ""
+"E per finire, tre stili vengono usati per richiamare l'attenzione su informazioni che in caso contrario "
+"potrebbero essere ignorate."
 
 #. Tag: title
 #: Conventions.xml:160
@@ -246,6 +310,8 @@ msgid ""
 "Ignoring a note should have no negative consequences, but you might miss out "
 "on a trick that makes your life easier."
 msgstr ""
+"Una nota è un suggerimento o un approccio alternativo per il compito da svolgere. "
+"Non dovrebbe verificarsi alcuna conseguenza negativa se la nota viene ignorata, ma al tempo stesso potreste non usufruire di qualche trucco in grado di facilitarvi il compito."
 
 #. Tag: title
 #: Conventions.xml:167
@@ -261,7 +327,7 @@ msgid ""
 "that only apply to the current session, or services that need restarting "
 "before an update will apply. Ignoring Important boxes won't cause data loss "
 "but may cause irritation and frustration."
-msgstr ""
+msgstr "Caselle importanti riportano informazioni che potrebbero passare facilmente inosservate: modifiche alla configurazione applicabili solo alla sessione corrente, o servizi i quali necessitano di un riavvio prima di applicare un aggiornamento. Ignorare queste caselle non causa alcuna perdita di dati, ma potrebbe causare irritazione e frustrazione da parte dell'utente."
 
 #. Tag: title
 #: Conventions.xml:175
@@ -276,146 +342,6 @@ msgid ""
 "A Warning should not be ignored. Ignoring warnings will most likely cause "
 "data loss."
 msgstr ""
+"Un avvertimento non dovrebbe essere ignorato. Se ignorato, potrebbe verificarsi "
+"una perdita di dati."
 
-#~ msgid ""
-#~ "Certain words in this manual are represented in different fonts, styles, "
-#~ "and weights. This highlighting indicates that the word is part of a "
-#~ "specific category. The categories include the following:"
-#~ msgstr ""
-#~ "Consultando il presente manuale, vedrete alcune parole rappresentate con "
-#~ "caratteri, dimensioni e stili differenti. Ciò indica l'appartenenza da "
-#~ "parte di una parola ad una categoria specifica. Le categorie includono "
-#~ "quanto segue:"
-
-#~ msgid "Courier font"
-#~ msgstr "Carattere Courier"
-
-#~ msgid ""
-#~ "Courier font represents <command>commands</command>, <filename>file names "
-#~ "and paths</filename>, and <prompt>prompts</prompt> ."
-#~ msgstr ""
-#~ "Il suddetto carattere rappresenta <command>commands</command>, "
-#~ "<filename>file names and paths</filename>, e <prompt>prompts</prompt> ."
-
-#, fuzzy
-#~ msgid ""
-#~ "Desktop       about.html       logs      paulwesterberg.png\n"
-#~ "Mail          backupfiles      mail      reports"
-#~ msgstr ""
-#~ "Quando visualizzato nella forma seguente, indica un output del computer: "
-#~ "<screen>\n"
-#~ "Desktop       about.html       logs      paulwesterberg.png\n"
-#~ "Mail          backupfiles      mail      reports\n"
-#~ "</screen>"
-
-#~ msgid "bold Courier font"
-#~ msgstr "Carattere bold Courier"
-
-#~ msgid ""
-#~ "Bold Courier font represents text that you are to type, such as: "
-#~ "<userinput>service jonas start</userinput>"
-#~ msgstr ""
-#~ "Questo carattere rappresenta il testo digitato dall'utente, come ad "
-#~ "esempio: <userinput>service jonas start</userinput>"
-
-#~ msgid ""
-#~ "If you have to run a command as root, the root prompt (<literal>#</"
-#~ "literal>) precedes the command:"
-#~ msgstr ""
-#~ "Se desiderate eseguire un comando come utente root, il prompt root "
-#~ "(<literal>#</literal>) precede il comando:"
-
-#~ msgid "italic Courier font"
-#~ msgstr "Carattere italic Courier"
-
-#, fuzzy
-#~ msgid ""
-#~ "Italic Courier font represents a variable, such as an installation "
-#~ "directory: <filename> <replaceable>install_dir</replaceable>/bin/</"
-#~ "filename>"
-#~ msgstr ""
-#~ "Questo carattere rappresenta una variabile come ad esempio una directory "
-#~ "d'installazione: <filename><replaceable>install_dir</replaceable>/bin/</"
-#~ "filename>"
-
-#~ msgid "bold font"
-#~ msgstr "Carattere grassetto"
-
-#~ msgid ""
-#~ "Bold font represents <application>application programs</application> and "
-#~ "<guilabel>text found on a graphical interface</guilabel>."
-#~ msgstr ""
-#~ "Questo carattere rappresenta gli <application>application programs</"
-#~ "application> ed<guilabel>i testi trovati su di una interfaccia grafica</"
-#~ "guilabel>."
-
-#~ msgid ""
-#~ "When shown like this: <guibutton> OK </guibutton>, it indicates a button "
-#~ "on a graphical application interface."
-#~ msgstr ""
-#~ "Quando mostrato in questo modo: <guibutton> OK </guibutton>, stà ad "
-#~ "indicare un pulsante su di una interfaccia grafica dell'applicazione."
-
-#~ msgid ""
-#~ "Additionally, the manual uses different strategies to draw your attention "
-#~ "to pieces of information. In order of how critical the information is to "
-#~ "you, these items are marked as follows:"
-#~ msgstr ""
-#~ "In aggiunta, il manuale utilizza diverse strategie per ottenere la vostra "
-#~ "attenzione su determinate informazioni. In base all'importanza delle "
-#~ "informazioni, questi oggetti vengono contrassegnati nel modo seguente:"
-
-#~ msgid ""
-#~ "A note is typically information that you need to understand the behavior "
-#~ "of the system."
-#~ msgstr ""
-#~ "Una nota rappresenta una informazione da comprendere riguardante il "
-#~ "comportamento del sistema."
-
-#~ msgid "A tip is typically an alternative way of performing a task."
-#~ msgstr ""
-#~ "Un suggerimento rappresenta generalmente un modo alternativo per eseguire "
-#~ "un compito."
-
-#~ msgid ""
-#~ "Important information is necessary, but possibly unexpected, such as a "
-#~ "configuration change that will not persist after a reboot."
-#~ msgstr ""
-#~ "Rappresenta una informazione importante e quindi necessaria, ma "
-#~ "possibilmente inaspettata, come ad esempio una modifica nella "
-#~ "configurazione dopo un processo di riavvio."
-
-#~ msgid "Caution"
-#~ msgstr "Attenzione"
-
-#~ msgid ""
-#~ "A caution indicates an act that would violate your support agreement, "
-#~ "such as recompiling the kernel."
-#~ msgstr ""
-#~ "Indica un'azione in grado di violare l'agreement del vostro supporto, "
-#~ "come ad esempio la ricompilazione del kernel."
-
-#~ msgid ""
-#~ "A warning indicates potential data loss, as may happen when tuning "
-#~ "hardware for maximum performance."
-#~ msgstr ""
-#~ "Tale avvertenza può indicare una potenziale perdita di dati, ad esempio "
-#~ "durante la regolazione hardware per una prestazione più elevata."
-
-#~ msgid "gconftool-2\n"
-#~ msgstr "gconftool-2\n"
-
-#~ msgid ""
-#~ "\n"
-#~ "# <placeholder-1/>\n"
-#~ "\t\t\t\t"
-#~ msgstr ""
-#~ "\n"
-#~ "# <placeholder-1/>\n"
-#~ "\t\t\t\t"
-
-#~ msgid "Tip"
-#~ msgstr "Suggerimento"
-
-#~ msgid "translator-credits"
-#~ msgstr "crediti-traduttore"
