--- a/publican/content/common/it-IT/Feedback.po
+++ b/publican/content/common/it-IT/Feedback.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2008-01-02 06:17+0000\n"
-"PO-Revision-Date: 2007-10-23 12:28+1000\n"
+"PO-Revision-Date: 2008-10-08 15:20+1000\n"
 "Last-Translator: \n"
 "Language-Team:  <it@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -34,38 +34,5 @@ msgstr "informazioni di contatto per questo manuale"
 #: Feedback.xml:11
 #, no-c-format
 msgid "You should over ride this by creating your own local Feedback.xml file."
-msgstr ""
+msgstr "Potreste sovrascriverlo tramite la creazione di un vostro file Feedback.xml locale."
 
-#~ msgid ""
-#~ "If you find a typographical error in this manual, or if you have thought "
-#~ "of a way to make this manual better, we would love to hear from you! "
-#~ "Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat."
-#~ "com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the "
-#~ "product <application>&PRODUCT;.</application>"
-#~ msgstr ""
-#~ "Se individuate degli errori di battitura in questo manuale, o se pensate "
-#~ "di poter contribuire al suo miglioramento, contattateci subito! Inviate i "
-#~ "vostri suggerimenti tramite Bugzilla: <ulink url=\"http://bugzilla.redhat."
-#~ "com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> sul "
-#~ "componente <application>&PRODUCT;.</application>"
-
-#~ msgid ""
-#~ "When submitting a bug report, be sure to mention the manual's identifier: "
-#~ "<citetitle>&BOOKID;</citetitle>"
-#~ msgstr ""
-#~ "Quando inviate un bug report, assicuratevi di indicare l'identificatore "
-#~ "del manuale: <citetitle>&BOOKID;</citetitle>"
-
-#~ msgid ""
-#~ "If you have a suggestion for improving the documentation, try to be as "
-#~ "specific as possible when describing it. If you have found an error, "
-#~ "please include the section number and some of the surrounding text so we "
-#~ "can find it easily."
-#~ msgstr ""
-#~ "Se inviate un suggerimento per contribuire al miglioramento della guida, "
-#~ "cercate di essere il più specifici possibile. Se avete individuato un "
-#~ "errore, indicate il numero della sezione e alcune righe di testo, in modo "
-#~ "da agevolare la ricerca dell'errore."
-
-#~ msgid "translator-credits"
-#~ msgstr "crediti-traduttore"
