--- a/publican/content/common/kn-IN/Feedback.po
+++ b/publican/content/common/kn-IN/Feedback.po
@@ -1,11 +1,11 @@
 # translation of Feedback.po to Kannada
-# Shankar Prasad <svenkate@redhat.com>, 2007.
+# Shankar Prasad <svenkate@redhat.com>, 2007, 2008.
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2008-01-02 06:17+0000\n"
-"PO-Revision-Date: 2007-10-30 17:06+0530\n"
+"PO-Revision-Date: 2008-10-07 16:40+0530\n"
 "Last-Translator: Shankar Prasad <svenkate@redhat.com>\n"
 "Language-Team: Kannada <en@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -18,56 +18,23 @@ msgstr ""
 #: Feedback.xml:6
 #, no-c-format
 msgid "We Need Feedback!"
-msgstr "ನಮಗೆ ನಿಮ್ಮ ಫೀಡ್-ಬ್ಯಾಕಿನ ಬೇಕಿದೆ!"
+msgstr "ನಮಗೆ ನಿಮ್ಮ ಅಭಿಪ್ರಾಯದ ಅಗತ್ಯವಿದೆ!"
 
 #. Tag: primary
 #: Feedback.xml:8
 #, no-c-format
 msgid "feedback"
-msgstr "ಫೀಡ್-ಬ್ಯಾಕ್"
+msgstr "ಅಭಿಪ್ರಾಯ"
 
 #. Tag: secondary
 #: Feedback.xml:9
 #, no-c-format
 msgid "contact information for this manual"
-msgstr "ಈ ಕೈಪಿಡಿಗಾಗಿ ಸಂಪರ್ಕ ಮಾಹಿತಿ"
+msgstr "ಈ ಕೈಪಿಡಿಗಾಗಿನ ಸಂಪರ್ಕ ಮಾಹಿತಿ"
 
 #. Tag: para
 #: Feedback.xml:11
 #, no-c-format
 msgid "You should over ride this by creating your own local Feedback.xml file."
-msgstr ""
+msgstr "ನಿಮ್ಮದೆ ಆದಂತಹ ಸ್ಥಳೀಯವಾದ Feedback.xml ಕಡವನ್ನು ಸೃಷ್ಟಿಸುವ ಮೂಲಕ ಇದನ್ನು ಅತಿಕ್ರಮಿಸಬೇಕು."
 
-#~ msgid ""
-#~ "If you find a typographical error in this manual, or if you have thought "
-#~ "of a way to make this manual better, we would love to hear from you! "
-#~ "Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat."
-#~ "com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the "
-#~ "product <application>&PRODUCT;.</application>"
-#~ msgstr ""
-#~ "ಈ ಕೈಪಿಡಿಯಲ್ಲಿ ನಿಮಗೆ ಬೆರಳಚ್ಚು ದೋಷ ಕಂಡು ಬಂದರೆ, ಅಥವ ಈ ಕೈಪಿಡಿಯನ್ನು ಇನ್ನಷ್ಟು "
-#~ "ಉತ್ತಮಗೊಳಿಸಲು ನಿಮ್ಮಲ್ಲಿ ಸಲಹೆಗಳಿದ್ದರೆ, ನಾವು ಅದನ್ನು ತಿಳಿಯಲು ಉತ್ಸುಕರಾಗಿದ್ದೇವೆ! "
-#~ "ದಯವಿಟ್ಟು ಬಗ್-ಝಿಲ್ಲಾದಲ್ಲಿ : <ulink url=\"http://bugzilla.redhat.com/bugzilla/"
-#~ "\">http://bugzilla.redhat.com/bugzilla/</ulink> ನಲ್ಲಿನ "
-#~ "<application>&PRODUCT;.</application> ನಲ್ಲಿ ಒಂದು ವರದಿಯನ್ನು ಸಲ್ಲಿಸಿ."
-
-#~ msgid ""
-#~ "When submitting a bug report, be sure to mention the manual's identifier: "
-#~ "<citetitle>&BOOKID;</citetitle>"
-#~ msgstr ""
-#~ "ಒಂದು ದೋಷ ವರದಿಯನ್ನು ಸಲ್ಲಿಸುವಾಗ, ಕೈಪಿಡಿಯ ಈ ಕೆಳಗಿನ ಐಡೆಂಟಿಫಯರನ್ನು ನಮೂದಿಸುವುದನ್ನು "
-#~ "ಮರೆಯಬೇಡಿ: <citetitle>&BOOKID;</citetitle>"
-
-#~ msgid ""
-#~ "If you have a suggestion for improving the documentation, try to be as "
-#~ "specific as possible when describing it. If you have found an error, "
-#~ "please include the section number and some of the surrounding text so we "
-#~ "can find it easily."
-#~ msgstr ""
-#~ "ದಸ್ತಾವೇಜನ್ನು ಉತ್ತಮಗೊಳಿಸುವ ಬಗ್ಗೆ ನೀವು ಸಲಹೆ ನೀಡುವಂತಿದ್ದರೆ, ಅದನ್ನು ವಿವರಿಸುವಾಗ "
-#~ "ಆದಷ್ಟು ಮಟ್ಟಿಗೆ ನಿರ್ದಿಷ್ಟವಾಗಿರಲಿ. ನಿಮಗೆ ಒಂದು ದೋಷ ಕಂಡು ಬಂದಲ್ಲಿ, ದಯವಿಟ್ಟು ನಮಗೆ "
-#~ "ಅದನ್ನು ಪತ್ತೆ ಹಚ್ಚಲು ಸುಲಭವಾಗುವಂತೆ ಅಧ್ಯಾಯದ ಸಂಖ್ಯೆಯನ್ನು ಹಾಗು ಅದರ ಸುತ್ತಮುತ್ತಲಿರುವ "
-#~ "ಒಂದಿಷ್ಟು ಪಠ್ಯವನ್ನು ನಮೂದಿಸಿ."
-
-#~ msgid "translator-credits"
-#~ msgstr "ಶಂಕರ್ ಪ್ರಸಾದ್ ಎಂ. ವಿ."
