--- a/publican/content/common/ko-KR/Conventions.po
+++ b/publican/content/common/ko-KR/Conventions.po
@@ -1,17 +1,22 @@
 # translation of Conventions.po to Korean
-# Eunju Kim <eukim@redhat.com>, 2007.
+# Eunju Kim <eukim@redhat.com>, 2007, 2008.
 msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2008-09-29 04:47+0000\n"
-"PO-Revision-Date: 2007-10-25 12:00+1000\n"
+"PO-Revision-Date: 2008-10-10 15:22+1000\n"
 "Last-Translator: Eunju Kim <eukim@redhat.com>\n"
 "Language-Team: Korean <ko@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
+"Plural-Forms:  nplurals=2; plural=(n!=1);\n\n"
+"\n"
+"\n"
+"\n"
+"\n"
 
 #. Tag: title
 #: Conventions.xml:5
@@ -25,7 +30,7 @@ msgstr "문서화 규정 "
 msgid ""
 "This manual uses several conventions to highlight certain words and phrases "
 "and draw attention to specific pieces of information."
-msgstr ""
+msgstr "이 메뉴얼에서는 특정 단어 및 구문을 강조 표시하여 특정 정보 부분에 주의를 집중시키기 위해 문서화 규정을 사용하고 있습니다. "
 
 #. Tag: para
 #: Conventions.xml:11
@@ -38,12 +43,14 @@ msgid ""
 "displayed. Note: Red Hat Enterprise Linux 5 and later includes the "
 "Liberation Fonts set by default."
 msgstr ""
+"PDF 및 문서 편집에서 이 메뉴얼은 <ulink "
+"url=\"https://fedorahosted.org/liberation-fonts/\">Liberation 글꼴</ulink> 모음에 있는 서체를 사용합니다. 시스템에 Liberation 글꼴 모음이 설치되어 있을 경우 이는 HTML 편집에서도 사용되지만 설치되어 있지 않을 경우, 다른 동일한 서체로 나타나게 됩니다. 알림: Red Hat Enterprise Linux 5 및 이후 버전에는 기본값으로 Liberation 글꼴 모음이 들어 있습니다.       "
 
 #. Tag: title
 #: Conventions.xml:16
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Typographic Conventions"
-msgstr "문서화 규정 "
+msgstr "표기 규정 "
 
 #. Tag: para
 #: Conventions.xml:18
@@ -52,13 +59,13 @@ msgid ""
 "Four typographic conventions are used to call attention to specific words "
 "and phrases. These conventions, and the circumstances they apply to, are as "
 "follows."
-msgstr ""
+msgstr "네 가지 표기 규정을 사용하여 특정 단어 및 구문에 주의를 집중시킵니다. 이러한 규정 및 적용 방식은 다음과 같습니다.   "
 
 #. Tag: literal
 #: Conventions.xml:23
 #, no-c-format
 msgid "Mono-spaced Bold"
-msgstr ""
+msgstr "고정폭 굵은 글꼴 "
 
 #. Tag: para
 #: Conventions.xml:26
@@ -66,7 +73,7 @@ msgstr ""
 msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight key caps and key-combinations. For example:"
-msgstr ""
+msgstr "쉘 명령어, 파일 이름 및 경로를 포함한 시스템 입력을 강조하기 위해 사용됩니다. 키 캡 및 키 조합을 강조하기 위해 사용되기도 합니다. 예: "
 
 #. Tag: section
 #: Conventions.xml:28
@@ -154,12 +161,23 @@ msgid ""
 "firstterm>). Unlike other modules, only one module from the MPM group can be "
 "loaded by the Apache HTTP Server. </para> </blockquote>"
 msgstr ""
+"<blockquote> <para> 현재 작업 중인 디렉토리에 있는 <filename>my_next_bestselling_novel</filename> 파일 내용을 확인하려면, 쉘 프롬프트에서 <command>cat my_next_bestselling_novel</command> 명령을 입력하고 <keycap>Enter</keycap> 키를 눌러 명령을 실행합니다. </para> </blockquote> <para> 위에서 파일 이름, 쉘 명령어, 키 캡 모두는 고정폭 굵은체로 나타나 있어 내용과 구별될 수 있습니다. </para> <para> 키 조합은 키 조합의 각 부분을 하이픈으로 연결하여 키 캡과 구별되게 할 수 있습니다. 예: </para> <blockquote> <para> <keycap>Enter</keycap> 키를 눌러 명령을 실행합니다. </para> <para> <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></keycombo>을 눌러 첫번째 가상 터미널로 전환합니다. <keycombo><keycap>Ctrl</keycap><keycap>Alt</"
+"keycap><keycap>F7</keycap></keycombo>을 눌러 X-윈도우 세션으로 돌아갑니다. </para> </blockquote> <para> 첫 번째 문장에서는 눌러야 하는 특정 키 캡을 강조하고 있습니다. 두 번째 문장에서는 동시에 눌러야 하는 세 개의 키 캡 두 묶음을 강조하고 있습니다. </para> <para> 소스 코드를 설명해야 할 경우, 문장에서 언급된 클래스 이름, 방식, 기능, 변수 이름 및 반환값은 위와 같이 <literal>고정폭 굵은체</literal>로 나타나게 됩니다. 예: </para> <blockquote> <para> 파일 관련 클래스에는 파일 시스템의 경우 <classname>filesystem</classname>, 파일의 경우 <classname>file</classname>, 디렉토리의 경우 <classname>dir</classname>가 포함됩니다. 각각의 클래스에는 자체의 권한 설정이 있습니다. </para> </blockquote> "
+"<para> <application>가변폭 굵은체</application> </para> <para> 이는 프로그램 이름; 대화 상자 텍스트; 레이블된 버튼; 체크 박스 및 라디오 버튼 레이블; 메뉴 제목; 하부 메뉴 제목을 포함하여 시스템에 있는 단어 또는 구문을 나타냅니다. 예: </para> <blockquote> <para> 주 메뉴 바에서 <guimenu>시스템 > 기본설정 > 마우스</guimenu>를 선택하여 <application>마우스 기본 설정</application>을 시작합니다. <guilabel>버튼</guilabel> 탭에서, <guilabel>왼손 잡이 마우스</"
+"guilabel> 체크 상자를 선택하고 <guibutton>닫기</guibutton>를 클릭하여 주요 마우스 버튼을 왼쪽에서 오른쪽으로 전환합니다 (왼손 잡이일 경우 보다 적절하게 마우스 사용을 할 수 있게 함). </para> <para> <application>gedit</application> 파일에 특수 문자를 삽입하려면, 주 메뉴 바에서 <guimenu>프로그램 > 보조 프로그램 > 글자 표</guimenu>를 선택합니다. 다음으로 <application>글자 표</application>에서 <guimenu>찾기 > &hellip; 찾기</guimenu>를 선택하고, <guilabel>찾기</guilabel>란에 글자 이름을 입력한 후 <guibutton>다음</guibutton> 버튼을 클릭합니다. 찾으려는 글자가 <guilabel>글자 표</guilabel>에 표시되면, 이를 더블 클릭하여 <guilabel>복사할 글자</guilabel>란에 위치하게 한 후, <guibutton>복사</guibutton> 버튼을 클릭합니다. 그 후 문서로 다시 돌아와서 <application>gedit</application> 메뉴 바에서 <guimenu>편집 > 붙이기</guimenu>를 선택합니다. </para> </blockquote> <para> 위의 내용에는 프로그램 이름, 다양한 시스템 메뉴 이름 및 항목; 특정 프로그램 메뉴 이름; GUI 인터페이스에 있는 버튼 및 텍스트가 포함되어 있으며, 텍스트와 구별 가능하도록 모두 가변폭 굵은체로 되어 있습니다. </para> <para> <guimenu>></guimenu> 표시는 메뉴 및 서부 메뉴에서 실행 순서를 나타내기 위해 사용되고 있음에 유의합니다. 이는 '주 메뉴 바의 <guimenu>시스템</guimenu> 메뉴에 있는 <guimenu>기본 설정</guimenu> 하부 메뉴에서 <guimenuitem>마우스</guimenuitem>를 선택합니다'와 같이 실행 순서를 따라하기 어렵게 되지 않도록 하기 위함입니다. </para> <para> <command><replaceable>고정폭 굵은 이텔릭체</replaceable></command> 또는 <application><replaceable>가변폭 굵은 이텔릭체</replaceable></application> </para> <para> 고정폭 굵은체이던 가변폭 굵은체이던지 간에 이텔릭체가 추가될 경우 이는 교체 또는 변경 가능한 텍스트를 나타내는 것입니다. 글자 그대로 입력하지 말아야 할 텍스트나 또는 상황에 따라 변경해야 하는 텍스트의 경우 이텔릭체로 나타냅니다. 예: </para> <blockquote> <para> ssh를 사용하여 원격 컴퓨터에 연결하려면, 쉘 프롬프트에 <command>ssh "
+"<replaceable>username</replaceable>@<replaceable>domain.name</replaceable></"
+"command>을 입력합니다. 원격 컴퓨터가 <filename>example.com</"
+"filename>이고 사용자 이름이 john일 경우, <command>ssh "
+"john@example.com</command>을 입력합니다. </para> <para> <command>mount -o remount "
+"<replaceable>file-system</replaceable></command> 명령은 지정한 파일 시스템을 다시 마운트합니다. 예를 들어, <filename>/home</filename> 파일 시스템을 다시 마운트하려면 <command>mount -o remount /home</command> 명령을 사용합니다. </para> <para> 현재 설치된 패키지 버전을 보려면, <command>rpm -q <replaceable>package</replaceable></command> 명령을 사용합니다. 그러면 다음과 같은 값이 출력됩니다: <command><replaceable>package-version-"
+"release</replaceable></command>. </para> </blockquote> <para> 위에서 굵은 이텔릭체로 나타나는 단어 &mdash; username, domain.name, file-system, package, "
+"version 및 release에 유의합니다. 각 단어는 임의의 단어로, 명령을 실행할 때 입력해야 할 텍스트이거나 또는 시스템에 의해 나타나는 텍스트입니다. </para> <para> 작업 제목을 표시하기 위한 기본적인 사용을 제외하고 중요한 새로운 용어를 처음 사용할 때 이텔릭체로 표시합니다. 예: </para> <blockquote> <para> Apache HTTP 서버가 요청을 허용하면, 이를 처리하기 위해 자식 프로세스 또는 스레드를 디스패치합니다. 이러한 자식 프로세스 또는 스레드 그룹은 <firstterm>server-pool</firstterm>이라고 합니다. Apache HTTP 서버 2.0 하에서, 이러한 server-pool을 생성 및 관리 책임은  <firstterm>MPMs</firstterm> (<firstterm>Multi-Processing Modules</firstterm>)이라는 모듈 그룹으로 추상화됩니다. 다른 모듈과 다르게, MPM 그룹에서 하나의 모듈만을 Apache HTTP 서버가 불러올 수 있습니다. </para> </blockquote>  "
 
 #. Tag: title
 #: Conventions.xml:132
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Pull-quote Conventions"
-msgstr "문서화 규정 "
+msgstr "인용문 규정 "
 
 #. Tag: para
 #: Conventions.xml:134
@@ -167,7 +185,7 @@ msgstr "문서화 규정 "
 msgid ""
 "Two, commonly multi-line, data types are set off visually from the "
 "surrounding text."
-msgstr ""
+msgstr "두 개의 일반적으로 여러 행으로된 데이터 유형은 주위의 문장에서 잘 보이는 위치에 설정됩니다.  "
 
 #. Tag: para
 #: Conventions.xml:138
@@ -176,6 +194,8 @@ msgid ""
 "Output sent to a terminal is set in <computeroutput>Mono-spaced Roman</"
 "computeroutput> and presented thus:"
 msgstr ""
+"터미널로 보내진 출력 결과는 <computeroutput>Mono-spaced Roman</"
+"computeroutput>에 설정되어 다음과 같이 나타납니다: "
 
 #. Tag: screen
 #: Conventions.xml:142
@@ -184,6 +204,8 @@ msgid ""
 "books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
 "books_tests  Desktop1  downloads      images  notes  scripts  svgs"
 msgstr ""
+"books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
+"books_tests  Desktop1  downloads      images  notes  scripts  svgs"
 
 #. Tag: para
 #: Conventions.xml:144
@@ -192,6 +214,8 @@ msgid ""
 "Source-code listings are also set in <computeroutput>Mono-spaced Roman</"
 "computeroutput> but are presented and highlighted as follows:"
 msgstr ""
+"소스 코드 목록은 <computeroutput>Mono-spaced Roman</"
+"computeroutput> 에서도 설정되어 있지만, 다음과 같이 나타나 강조됩니다: "
 
 #. Tag: programlisting
 #: Conventions.xml:148
@@ -218,12 +242,32 @@ msgid ""
 "   \n"
 "}"
 msgstr ""
+"package org.jboss.book.jca.ex1;\n"
+"\n"
+"import javax.naming.InitialContext;\n"
+"\n"
+"public class ExClient\n"
+"{\n"
+"   public static void main(String args[]) \n"
+"       throws Exception\n"
+"   {\n"
+"      InitialContext iniCtx = new InitialContext();\n"
+"      Object         ref    = iniCtx.lookup(\"EchoBean\");\n"
+"      EchoHome       home   = (EchoHome) ref;\n"
+"      Echo           echo   = home.create();\n"
+"\n"
+"      System.out.println(\"Created Echo\");\n"
+"\n"
+"      System.out.println(\"Echo.echo('Hello') = \" + echo.echo(\"Hello\"));\n"
+"   }\n"
+"   \n"
+"}"
 
 #. Tag: title
 #: Conventions.xml:153
 #, no-c-format
 msgid "Notes and Warnings"
-msgstr ""
+msgstr "알림 및 경고  "
 
 #. Tag: para
 #: Conventions.xml:155
@@ -231,7 +275,7 @@ msgstr ""
 msgid ""
 "Finally, we use three visual styles to draw attention to information that "
 "might otherwise be overlooked."
-msgstr ""
+msgstr "마지막으로, 3 종류의 시각적 스타일을 사용하여 간과될 수 있는 정보에 주의를 집중시킵니다. "
 
 #. Tag: title
 #: Conventions.xml:160
@@ -247,6 +291,8 @@ msgid ""
 "Ignoring a note should have no negative consequences, but you might miss out "
 "on a trick that makes your life easier."
 msgstr ""
+"알림에서는 현재 작업에 대한 도움말, 지름길 또는 대안적 방법을 제공합니다. "
+"알림 내용을 무시해도 상관없지만 효율적으로 작업할 수 있는 방법을 놓칠 수 있습니다.        "
 
 #. Tag: title
 #: Conventions.xml:167
@@ -262,7 +308,7 @@ msgid ""
 "that only apply to the current session, or services that need restarting "
 "before an update will apply. Ignoring Important boxes won't cause data loss "
 "but may cause irritation and frustration."
-msgstr ""
+msgstr "중요 상자에서는 현재 세션에만 적용되는 설정을 변경하거나 업데이트를 적용하기 전 다시 시작해야 하는 서비스와 같이 간과하기 쉬운 세부 사항을 제공합니다. 중요 상자를 무시해도 데이터를 손실하게 되지 않지만 문제를 일으킬 수 있습니다.     "
 
 #. Tag: title
 #: Conventions.xml:175
@@ -276,139 +322,5 @@ msgstr "경고"
 msgid ""
 "A Warning should not be ignored. Ignoring warnings will most likely cause "
 "data loss."
-msgstr ""
+msgstr "경고는 무시해서는 안됩니다. 경고를 무시할 경우 대부분 데이터가 손실될 수 있습니다. "
 
-#~ msgid ""
-#~ "Certain words in this manual are represented in different fonts, styles, "
-#~ "and weights. This highlighting indicates that the word is part of a "
-#~ "specific category. The categories include the following:"
-#~ msgstr ""
-#~ "이 메뉴얼에서 특정 단어는 다른 글꼴, 스타일, 크기로 되어 있습니다. 이러한 "
-#~ "강조 표시된 단어는 특정 범주 부분을 나타낼 때 사용됩니다. 특정 범주에는 다"
-#~ "음과 같은 것이 있습니다:"
-
-#~ msgid "Courier font"
-#~ msgstr "Courier 글꼴"
-
-#~ msgid ""
-#~ "Courier font represents <command>commands</command>, <filename>file names "
-#~ "and paths</filename>, and <prompt>prompts</prompt> ."
-#~ msgstr ""
-#~ "Courier 글꼴은 <command>명령어</command>, <filename>파일 이름 및 경로</"
-#~ "filename>, <prompt>프롬프트</prompt>를 나타낼 때 사용됩니다."
-
-#, fuzzy
-#~ msgid ""
-#~ "Desktop       about.html       logs      paulwesterberg.png\n"
-#~ "Mail          backupfiles      mail      reports"
-#~ msgstr ""
-#~ "컴퓨터 출력 결과는 아래와 같이 나타납니다: <screen>\n"
-#~ "Desktop       about.html       logs      paulwesterberg.png\n"
-#~ "Mail          backupfiles      mail      reports\n"
-#~ "</screen>"
-
-#~ msgid "bold Courier font"
-#~ msgstr "굵은 Courier 글꼴"
-
-#~ msgid ""
-#~ "Bold Courier font represents text that you are to type, such as: "
-#~ "<userinput>service jonas start</userinput>"
-#~ msgstr ""
-#~ "굵은 Courier 글꼴은 입력한 텍스트를 나타낼 때 사용됩니다. 예: "
-#~ "<userinput>service jonas start</userinput> "
-
-#~ msgid ""
-#~ "If you have to run a command as root, the root prompt (<literal>#</"
-#~ "literal>) precedes the command:"
-#~ msgstr ""
-#~ "root로 명령을 실행해야 할 경우, root 프롬프트 (<literal>#</literal>)를 해"
-#~ "당 명령 앞에 사용합니다:"
-
-#~ msgid "italic Courier font"
-#~ msgstr "이탤릭체 Courier 글꼴 "
-
-#, fuzzy
-#~ msgid ""
-#~ "Italic Courier font represents a variable, such as an installation "
-#~ "directory: <filename> <replaceable>install_dir</replaceable>/bin/</"
-#~ "filename>"
-#~ msgstr ""
-#~ "이탤릭체 Courier 글꼴은 설치 디렉토리와 같이 다양하게 사용됩니다. 예: "
-#~ "<filename><replaceable>install_dir</replaceable>/bin/</filename>"
-
-#~ msgid "bold font"
-#~ msgstr "굵은 글꼴 "
-
-#~ msgid ""
-#~ "Bold font represents <application>application programs</application> and "
-#~ "<guilabel>text found on a graphical interface</guilabel>."
-#~ msgstr ""
-#~ "굵은 글꼴은 <application>어플리케이션 프로그램</application> 및 <guilabel>"
-#~ "그래픽 인터페이스에 있는 텍스트</guilabel>를 나타낼 때 사용됩니다."
-
-#~ msgid ""
-#~ "When shown like this: <guibutton> OK </guibutton>, it indicates a button "
-#~ "on a graphical application interface."
-#~ msgstr ""
-#~ "<guibutton> OK </guibutton>와 같이 나타나면, 이는 그래픽 어플리케이션 인터"
-#~ "페이스에 있는 버튼을 가리키는 것입니다."
-
-#~ msgid ""
-#~ "Additionally, the manual uses different strategies to draw your attention "
-#~ "to pieces of information. In order of how critical the information is to "
-#~ "you, these items are marked as follows:"
-#~ msgstr ""
-#~ "또한, 메뉴얼에서는 주의를 집중시키기 위해 내용에 따라 다른 기호를 사용하"
-#~ "여 표시합니다.내용에 따라 이는 다음과 같은 기호로 표시됩니다:"
-
-#~ msgid ""
-#~ "A note is typically information that you need to understand the behavior "
-#~ "of the system."
-#~ msgstr ""
-#~ "알림은 시스템의 상태에 대해 알고 있어야 하는 일반적인 내용을 설명할 때 사"
-#~ "용됩니다."
-
-#~ msgid "A tip is typically an alternative way of performing a task."
-#~ msgstr "정보는 작업을 실행하기 위해 대안적인 방법을 설명할 때 사용됩니다."
-
-#~ msgid ""
-#~ "Important information is necessary, but possibly unexpected, such as a "
-#~ "configuration change that will not persist after a reboot."
-#~ msgstr ""
-#~ "재부팅 후 설정 변경 사항이 지속되지 않는 것과 같이 예상하지 못했던 상황이 "
-#~ "발생할 수 있는 알고 있어야 하는 중요한 정보를 나타낼 때 사용됩니다."
-
-#~ msgid "Caution"
-#~ msgstr "주의"
-
-#~ msgid ""
-#~ "A caution indicates an act that would violate your support agreement, "
-#~ "such as recompiling the kernel."
-#~ msgstr ""
-#~ "주의는 커널 재컴파일과 같이 지원 체계에 위반되는 작업임을 나타낼 때 사용됩"
-#~ "니다."
-
-#~ msgid ""
-#~ "A warning indicates potential data loss, as may happen when tuning "
-#~ "hardware for maximum performance."
-#~ msgstr ""
-#~ "경고는 하드웨어를 최대 성능 상태로 설정했을 때 발생할 수 있는 데이터 손실"
-#~ "을 나타낼 때 사용됩니다."
-
-#~ msgid "gconftool-2\n"
-#~ msgstr "gconftool-2\n"
-
-#~ msgid ""
-#~ "\n"
-#~ "# <placeholder-1/>\n"
-#~ "\t\t\t\t"
-#~ msgstr ""
-#~ "\n"
-#~ "# <placeholder-1/>\n"
-#~ "\t\t\t\t"
-
-#~ msgid "Tip"
-#~ msgstr "정보"
-
-#~ msgid "translator-credits"
-#~ msgstr "김은주 (eukim@redhat.com), 2006, 2007"
