--- a/publican/content/common/ml-IN/Conventions.po
+++ b/publican/content/common/ml-IN/Conventions.po
@@ -1,13 +1,13 @@
-# translation of Conventions.po to Malayalam
+# translation of Conventions.po to
 # Ani Peter <apeter@redhat.com>, 2007.
 msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2008-09-29 04:47+0000\n"
-"PO-Revision-Date: 2007-10-31 13:24+0530\n"
-"Last-Translator: Ani Peter <apeter@redhat.com>\n"
-"Language-Team: Malayalam\n"
+"PO-Revision-Date: 2008-10-07 12:19+0530\n"
+"Last-Translator: \n"
+"Language-Team:  <en@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -17,7 +17,7 @@ msgstr ""
 #: Conventions.xml:5
 #, no-c-format
 msgid "Document Conventions"
-msgstr "രേഖാ കീഴ്‌വഴക്കങ്ങള്‍"
+msgstr "രേഖയിലെ കീഴ്‌വഴക്കങ്ങള്‍"
 
 #. Tag: para
 #: Conventions.xml:7
@@ -26,6 +26,8 @@ msgid ""
 "This manual uses several conventions to highlight certain words and phrases "
 "and draw attention to specific pieces of information."
 msgstr ""
+"ഈ മാനുവലില്‍ ചില വാക്കുകള്‍, വാചകങ്ങള്‍, പ്രത്യേക ചില വിവരങ്ങള്‍ എന്നിവ നിങ്ങളുടെ "
+"ശ്രദ്ധയില്‍പ്പെടുത്തുന്നതിനായി അനവധി കീഴ്‌വഴക്കങ്ങള്‍ ഉപയോഗിച്ചിരിക്കുന്നു."
 
 #. Tag: para
 #: Conventions.xml:11
@@ -38,12 +40,18 @@ msgid ""
 "displayed. Note: Red Hat Enterprise Linux 5 and later includes the "
 "Liberation Fonts set by default."
 msgstr ""
+"പിഡിഎഫിലും പേപ്പര്‍ പതിപ്പുകളിലും, <ulink url=\"https://fedorahosted.org/liberation-fonts/\"> "
+"ലിബറേഷന്‍ അക്ഷരസഞ്ചയങ്ങളുടെ</ulink> സെറ്റില്‍ നിന്നുമുള്ള ടൈപ്പ്ഫെയിസുകള്‍ ഈ മാനുവലില്‍ "
+"ഉപയോഗിക്കുന്നു. ലിബറേഷന്‍ അക്ഷരസഞ്ചയങ്ങള്‍ നിങ്ങളുടെ സിസ്റ്റമില്‍ ഇന്‍സ്റ്റോള്‍ ചെയ്തിട്ടുണ്ടെങ്കില്‍ "
+"അവ എച്ടിഎംഎല്‍ പതിപ്പുകളിലും ഉപയോഗിക്കുന്നതാണു്. ഇവ ഇല്ലെങ്കില്‍, പകരമായുള്ള "
+"ടൈപ്പ്ഫെയിസുകള്‍ ലഭ്യമാകുന്നു. കുറിപ്പു്: Red Hat Enterprise Linux 5-ഉം അതിനു് ശേഷമുള്ളവയിലും "
+"സ്വതവേ ഈ ലിബറേഷന്‍ അക്ഷരസഞ്ചയം ഉള്‍പ്പെടുത്തിയിരിക്കുന്നു."
 
 #. Tag: title
 #: Conventions.xml:16
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Typographic Conventions"
-msgstr "രേഖാ കീഴ്‌വഴക്കങ്ങള്‍"
+msgstr "Typographic Conventions"
 
 #. Tag: para
 #: Conventions.xml:18
@@ -53,12 +61,15 @@ msgid ""
 "and phrases. These conventions, and the circumstances they apply to, are as "
 "follows."
 msgstr ""
+"Four typographic conventions are used to call attention to specific words "
+"and phrases. These conventions, and the circumstances they apply to, are as "
+"follows."
 
 #. Tag: literal
 #: Conventions.xml:23
 #, no-c-format
 msgid "Mono-spaced Bold"
-msgstr ""
+msgstr "മോണോ-സ്പെയിസ്ഡ് ബോള്‍ഡ്"
 
 #. Tag: para
 #: Conventions.xml:26
@@ -67,6 +78,8 @@ msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight key caps and key-combinations. For example:"
 msgstr ""
+"Used to highlight system input, including shell commands, file names and "
+"paths. Also used to highlight key caps and key-combinations. For example:"
 
 #. Tag: section
 #: Conventions.xml:28
@@ -154,12 +167,93 @@ msgid ""
 "firstterm>). Unlike other modules, only one module from the MPM group can be "
 "loaded by the Apache HTTP Server. </para> </blockquote>"
 msgstr ""
+"<blockquote> <para> To see the contents of the file "
+"<filename>my_next_bestselling_novel</filename> in your current working "
+"directory, enter the <command>cat my_next_bestselling_novel</command> "
+"command at the shell prompt and press <keycap>Enter</keycap> to execute the "
+"command. </para> </blockquote> <para> The above includes a file name, a "
+"shell command and a key cap, all presented in Mono-spaced Bold and all "
+"distinguishable thanks to context. </para> <para> Key-combinations can be "
+"distinguished from key caps by the hyphen connecting each part of a key-"
+"combination. For example: </para> <blockquote> <para> Press <keycap>Enter</"
+"keycap> to execute the command. </para> <para> Press <keycombo><keycap>Ctrl</"
+"keycap><keycap>Alt</keycap><keycap>F1</keycap></keycombo> to switch to the "
+"first virtual terminal. Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</"
+"keycap><keycap>F7</keycap></keycombo> to return to your X-Windows session. </"
+"para> </blockquote> <para> The first sentence highlights the particular key "
+"cap to press. The second highlights two sets of three key caps, each set "
+"pressed simultaneously. </para> <para> If source code is discussed, class "
+"names, methods, functions, variable names and returned values mentioned "
+"within a paragraph will be presented as above, in <literal>Mono-spaced Bold</"
+"literal>. For example: </para> <blockquote> <para> File-related classes "
+"include <classname>filesystem</classname> for file systems, <classname>file</"
+"classname> for files, and <classname>dir</classname> for directories. Each "
+"class has its own associated set of permissions. </para> </blockquote> "
+"<para> <application>Proportional Bold</application> </para> <para> This "
+"denotes words or phrases encountered on a system, including application "
+"names; dialogue box text; labelled buttons; check-box and radio button "
+"labels; menu titles and sub-menu titles. For example: </para> <blockquote> "
+"<para> Choose <guimenu>System > Preferences > Mouse</guimenu> from the main "
+"menu bar to launch <application>Mouse Preferences</application>. In the "
+"<guilabel>Buttons</guilabel> tab, click the <guilabel>Left-handed mouse</"
+"guilabel> check box and click <guibutton>Close</guibutton> to switch the "
+"primary mouse button from the left to the right (making the mouse suitable "
+"for use in the left hand). </para> <para> To insert a special character into "
+"a <application>gedit</application> file, choose <guimenu>Applications > "
+"Accessories > Character Map</guimenu> from the main menu bar. Next, choose "
+"<guimenu>Search > Find&hellip;</guimenu> from the <application>Character "
+"Map</application> menu bar, type the name of the character in the "
+"<guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The "
+"character you sought will be highlighted in the <guilabel>Character Table</"
+"guilabel>. Double-click this highlighted character to place it in the "
+"<guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</"
+"guibutton> button. Now switch back to your document and choose <guimenu>Edit "
+"> Paste</guimenu> from the <application>gedit</application> menu bar. </"
+"para> </blockquote> <para> The above text includes application names; system-"
+"wide menu names and items; application-specific menu names; and buttons and "
+"text found within a GUI interface, all presented in Proportional Bold and "
+"all distinguishable by context. </para> <para> Note the <guimenu>></guimenu> "
+"shorthand used to indicate traversal through a menu and its sub-menus. This "
+"is to avoid the difficult-to-follow 'Select <guimenuitem>Mouse</guimenuitem> "
+"from the <guimenu>Preferences</guimenu> sub-menu in the <guimenu>System</"
+"guimenu> menu of the main menu bar' approach. </para> <para> "
+"<command><replaceable>Mono-spaced Bold Italic</replaceable></command> or "
+"<application><replaceable>Proportional Bold Italic</replaceable></"
+"application> </para> <para> Whether Mono-spaced Bold or Proportional Bold, "
+"the addition of Italics indicates replaceable or variable text. Italics "
+"denotes text you do not input literally or displayed text that changes "
+"depending on circumstance. For example: </para> <blockquote> <para> To "
+"connect to a remote machine using ssh, type <command>ssh "
+"<replaceable>username</replaceable>@<replaceable>domain.name</replaceable></"
+"command> at a shell prompt. If the remote machine is <filename>example.com</"
+"filename> and your username on that machine is john, type <command>ssh "
+"john@example.com</command>. </para> <para> The <command>mount -o remount "
+"<replaceable>file-system</replaceable></command> command remounts the named "
+"file system. For example, to remount the <filename>/home</filename> file "
+"system, the command is <command>mount -o remount /home</command>. </para> "
+"<para> To see the version of a currently installed package, use the "
+"<command>rpm -q <replaceable>package</replaceable></command> command. It "
+"will return a result as follows: <command><replaceable>package-version-"
+"release</replaceable></command>. </para> </blockquote> <para> Note the words "
+"in bold italics above &mdash; username, domain.name, file-system, package, "
+"version and release. Each word is a placeholder, either for text you enter "
+"when issuing a command or for text displayed by the system. </para> <para> "
+"Aside from standard usage for presenting the title of a work, italics "
+"denotes the first use of a new and important term. For example: </para> "
+"<blockquote> <para> When the Apache HTTP Server accepts requests, it "
+"dispatches child processes or threads to handle them. This group of child "
+"processes or threads is known as a <firstterm>server-pool</firstterm>. Under "
+"Apache HTTP Server 2.0, the responsibility for creating and maintaining "
+"these server-pools has been abstracted to a group of modules called "
+"<firstterm>Multi-Processing Modules</firstterm> (<firstterm>MPMs</"
+"firstterm>). Unlike other modules, only one module from the MPM group can be "
+"loaded by the Apache HTTP Server. </para> </blockquote>"
 
 #. Tag: title
 #: Conventions.xml:132
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Pull-quote Conventions"
-msgstr "രേഖാ കീഴ്‌വഴക്കങ്ങള്‍"
+msgstr "Pull-quote Conventions"
 
 #. Tag: para
 #: Conventions.xml:134
@@ -168,6 +262,8 @@ msgid ""
 "Two, commonly multi-line, data types are set off visually from the "
 "surrounding text."
 msgstr ""
+"Two, commonly multi-line, data types are set off visually from the "
+"surrounding text."
 
 #. Tag: para
 #: Conventions.xml:138
@@ -176,6 +272,8 @@ msgid ""
 "Output sent to a terminal is set in <computeroutput>Mono-spaced Roman</"
 "computeroutput> and presented thus:"
 msgstr ""
+"ഒരു ടെര്‍മിനലിലേക്കുള്ള ഔട്ട്പുട്ടും <computeroutput>മോണോ-സ്പെയിസ്ഡ് റോമനില്‍</"
+"computeroutput> ക്രമികരിച്ചിരിക്കുന്നു. അവ നല്‍കിയിരിക്കുന്നതു് ഇപ്രകാരമാണു്:"
 
 #. Tag: screen
 #: Conventions.xml:142
@@ -184,6 +282,8 @@ msgid ""
 "books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
 "books_tests  Desktop1  downloads      images  notes  scripts  svgs"
 msgstr ""
+"books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
+"books_tests  Desktop1  downloads      images  notes  scripts  svgs"
 
 #. Tag: para
 #: Conventions.xml:144
@@ -192,6 +292,8 @@ msgid ""
 "Source-code listings are also set in <computeroutput>Mono-spaced Roman</"
 "computeroutput> but are presented and highlighted as follows:"
 msgstr ""
+"സോഴ്സ്-കോഡ് ലിസ്റ്റിങും <computeroutput>മോണോ-സ്പെയിസ്ഡ് റോമനില്‍</computeroutput> "
+"ക്രമികരിച്ചിട്ടുണ്ടു്, പക്ഷേ അവ ലഭ്യമാകുന്നതു് താഴെ പറയുന്ന രീതിയിലാണു്:"
 
 #. Tag: programlisting
 #: Conventions.xml:148
@@ -218,12 +320,32 @@ msgid ""
 "   \n"
 "}"
 msgstr ""
+"package org.jboss.book.jca.ex1;\n"
+"\n"
+"import javax.naming.InitialContext;\n"
+"\n"
+"public class ExClient\n"
+"{\n"
+"   public static void main(String args[]) \n"
+"       throws Exception\n"
+"   {\n"
+"      InitialContext iniCtx = new InitialContext();\n"
+"      Object         ref    = iniCtx.lookup(\"EchoBean\");\n"
+"      EchoHome       home   = (EchoHome) ref;\n"
+"      Echo           echo   = home.create();\n"
+"\n"
+"      System.out.println(\"Created Echo\");\n"
+"\n"
+"      System.out.println(\"Echo.echo('Hello') = \" + echo.echo(\"Hello\"));\n"
+"   }\n"
+"   \n"
+"}"
 
 #. Tag: title
 #: Conventions.xml:153
 #, no-c-format
 msgid "Notes and Warnings"
-msgstr ""
+msgstr "കുറിപ്പുകളും മുന്നറിയിപ്പുകളും"
 
 #. Tag: para
 #: Conventions.xml:155
@@ -232,6 +354,8 @@ msgid ""
 "Finally, we use three visual styles to draw attention to information that "
 "might otherwise be overlooked."
 msgstr ""
+"Finally, we use three visual styles to draw attention to information that "
+"might otherwise be overlooked."
 
 #. Tag: title
 #: Conventions.xml:160
@@ -247,12 +371,15 @@ msgid ""
 "Ignoring a note should have no negative consequences, but you might miss out "
 "on a trick that makes your life easier."
 msgstr ""
+"നിങ്ങള്‍ ചെയ്യുന്ന ജോലിയ്ക്കാവശ്യമുള്ള ഒരു സൂചന അല്ലെങ്കില്‍ ഒരു കുറുക്കുവഴി ആണു് "
+"കുറിപ്പുകള്‍. ഇവ അവഗണിക്കുന്നതു് വിവരങ്ങള്‍ നഷ്ടമാക്കുന്നില്ല എങ്കിലും നിങ്ങളുടെ ജോലി "
+"എളുപ്പമാക്കുന്ന ഒരു കുറുക്കുവഴി നിങ്ങള്‍ക്കു് നഷ്ടപ്പെട്ടേക്കാം."
 
 #. Tag: title
 #: Conventions.xml:167
 #, no-c-format
 msgid "Important"
-msgstr "പ്റധാനപ്പെട്ടത്"
+msgstr "പ്രധാനപ്പെട്ടതു്"
 
 #. Tag: para
 #: Conventions.xml:168
@@ -263,6 +390,11 @@ msgid ""
 "before an update will apply. Ignoring Important boxes won't cause data loss "
 "but may cause irritation and frustration."
 msgstr ""
+"നിലവിലുള്ള സെഷനു് മാത്രമുള്ള ക്രമികരണ മാറ്റങ്ങള്‍, ഒരു പരിഷ്കരണത്തിനു് മുമ്പ് "
+"വീണ്ടും ആരംഭിക്കേണ്ട സേവനങ്ങള്‍ എന്നിവപോലുള്ള എളുപ്പത്തില്‍ വിട്ടുപോകുന്ന "
+"തരത്തിലുള്ള കാര്യങ്ങളുടെ വിശദാംശങ്ങള്‍ പ്രധാനപ്പെട്ടികളില്‍ രേഖപ്പെടുത്തുന്നു. ഇവ "
+"അവഗണിച്ചാല്‍ നിങ്ങളുടെ ജോലിയില്‍ അസൌകര്യങ്ങള്‍ ഉണ്ടാക്കുന്നതാണു്, പക്ഷേ "
+"വിവരങ്ങളൊന്നും നഷ്ടമാവില്ല."
 
 #. Tag: title
 #: Conventions.xml:175
@@ -277,135 +409,6 @@ msgid ""
 "A Warning should not be ignored. Ignoring warnings will most likely cause "
 "data loss."
 msgstr ""
+"മുന്നറിയിപ്പുകള്‍ അവഗണിക്കുന്നതു് വിവരങ്ങള്‍ നഷ്ടപ്പെടുന്നതിനിടയാക്കുന്നു. "
+"അതിനാല്‍ അവ പ്രത്യേകം ശ്രദ്ധിക്കുക."
 
-#~ msgid ""
-#~ "Certain words in this manual are represented in different fonts, styles, "
-#~ "and weights. This highlighting indicates that the word is part of a "
-#~ "specific category. The categories include the following:"
-#~ msgstr ""
-#~ "ഈ രേഖയിലുള്ള ചില വാക്കുകള്‍ പ്റത്യേക ലിപിയിലും ശൈലിയിലും രൂപത്തിലുമാണ് എഴുതിയിരിക്കുന്നത്. "
-#~ "ഇവ പ്രത്യേക വിഭാഗത്തില്‍ പെട്ട വാക്കുകളാകുന്നു. താഴെ പറഞ്ഞിരിക്കുന്നവയാണ് വിഭാഗങ്ങള്‍:"
-
-#~ msgid "Courier font"
-#~ msgstr "കൊരിയര്‍ ലിപി"
-
-#~ msgid ""
-#~ "Courier font represents <command>commands</command>, <filename>file names "
-#~ "and paths</filename>, and <prompt>prompts</prompt> ."
-#~ msgstr ""
-#~ "<command>നിര്‍ദ്ദേശങ്ങള്‍ക്കും</command>, <filename>ഫയലിന്റെ പേരുകള്‍ക്കും പാഥുകള്‍ക്കും</"
-#~ "filename>, <prompt>പ്റോപ്റ്റുകള്‍ക്കും</prompt> കൊരിയറ്‍ ലിപി ഉപയോഗിക്കുന്നു."
-
-#, fuzzy
-#~ msgid ""
-#~ "Desktop       about.html       logs      paulwesterberg.png\n"
-#~ "Mail          backupfiles      mail      reports"
-#~ msgstr ""
-#~ "ഇങ്ങനെ ലഭ്യമായാല്‍, അത് കംപ്യൂട്ടറില്‍ നിന്നുള്ള ഔട്ട്പുട്ട് ആകുന്നു: <screen>\n"
-#~ "Desktop       about.html       logs      paulwesterberg.png\n"
-#~ "Mail          backupfiles      mail      reports\n"
-#~ "</screen>"
-
-#~ msgid "bold Courier font"
-#~ msgstr "ബോള്‍ഡ് കൊരിയറ്‍ ലിപി"
-
-#~ msgid ""
-#~ "Bold Courier font represents text that you are to type, such as: "
-#~ "<userinput>service jonas start</userinput>"
-#~ msgstr ""
-#~ "നിങ്ങള്‍ ടൈപ്പ് ചെയ്യേണ്ട വാചകങ്ങള്‍ക്കായി ബോള്‍ഡ് കൊരിയറ്‍ ലിപി ഉപയോഗിക്കുന്നു, ഉദാ: "
-#~ "<userinput>service jonas start</userinput>"
-
-#~ msgid ""
-#~ "If you have to run a command as root, the root prompt (<literal>#</"
-#~ "literal>) precedes the command:"
-#~ msgstr ""
-#~ "നിങ്ങള്‍ക്ക് റൂട്ടായി നിന്ന് ഏതെങ്കിലും നിറ്‍ദ്ദേശം പ്റവറ്‍ത്തിപ്പിക്കണമെങ്കില്‍, നിറ്‍ദ്ദേശങ്ങള്‍ക്ക് "
-#~ "മുമ്പേ റൂട്ട് പ്റോപ്റ്റ് (<literal>#</literal>) ഉണ്ടാകുന്നതാണ്:"
-
-#~ msgid "italic Courier font"
-#~ msgstr "ഇറ്റാലിക് കൊരിയറ്‍ ലിപി"
-
-#, fuzzy
-#~ msgid ""
-#~ "Italic Courier font represents a variable, such as an installation "
-#~ "directory: <filename> <replaceable>install_dir</replaceable>/bin/</"
-#~ "filename>"
-#~ msgstr ""
-#~ "ഒരു വേരിയബിളിനായി ഇറ്റാലിക് കൊരിയറ്‍ ലിപി ഉപയോഗിക്കുന്നു, ഉദാഹരണത്തിന് ഇന്‍സ്റ്റലേഷന്‍ "
-#~ "ഡയറക്ടറി: <filename><replaceable>install_dir</replaceable>/bin/</filename>"
-
-#~ msgid "bold font"
-#~ msgstr "ബോള്‍ഡ് ലിപി"
-
-#~ msgid ""
-#~ "Bold font represents <application>application programs</application> and "
-#~ "<guilabel>text found on a graphical interface</guilabel>."
-#~ msgstr ""
-#~ "<application>പ്റയോഗങ്ങള്‍ക്കുള്ള പ്റോഗ്രാമിനും</application> <guilabel>ഗ്രാഫിക്കല്‍ "
-#~ "ഇന്ററ്‍ഫെയിസിലുള്ള വാചകങ്ങള്‍ക്കും</guilabel> ബോള്‍ഡ് ലിപി ഉപയോഗിക്കുന്നു."
-
-#~ msgid ""
-#~ "When shown like this: <guibutton> OK </guibutton>, it indicates a button "
-#~ "on a graphical application interface."
-#~ msgstr ""
-#~ "ഇങ്ങനെ ലഭ്യമായാല്‍: <guibutton> ശരി </guibutton>, ഇത് ഗ്രാഫിക്കല്‍ പ്റയോഗത്തിനുള്ള "
-#~ "ഇന്ററ്‍ഫെയിസിലുള്ള ബട്ടണ്‍ എന്ന് സൂചിപ്പിക്കുന്നു."
-
-#~ msgid ""
-#~ "Additionally, the manual uses different strategies to draw your attention "
-#~ "to pieces of information. In order of how critical the information is to "
-#~ "you, these items are marked as follows:"
-#~ msgstr ""
-#~ "ഇവയ്ക്ക് പുറമേ, നിങ്ങളുടെ ശ്രദ്ധ പിടിച്ചുപറ്റുന്നതിനായി പല പ്റയോഗങ്ങളും ഈ മാനുവലില്‍ "
-#~ "ഉപയോഗിച്ചിരിക്കുന്നു. അവയുടെ പ്റധാന്യത്തിന്റെ ക്റമത്തില്‍, താഴെ വിശദീകരിച്ചിരിക്കുന്നു:"
-
-#~ msgid ""
-#~ "A note is typically information that you need to understand the behavior "
-#~ "of the system."
-#~ msgstr "സിസ്റ്റമിന്റെ പ്റവറ്‍ത്തനങ്ങള്‍ മനസ്സിലാക്കുന്നതിനായി നിങ്ങളെ ഒരു കുറിപ്പ് സഹായിക്കുന്നു."
-
-#~ msgid "A tip is typically an alternative way of performing a task."
-#~ msgstr "ഒരു ജോലി ശരിയായി ചെയ്യുന്നതിന് നിങ്ങളെ സൂചന സഹായിക്കുന്നു."
-
-#~ msgid ""
-#~ "Important information is necessary, but possibly unexpected, such as a "
-#~ "configuration change that will not persist after a reboot."
-#~ msgstr ""
-#~ "പ്റധാപ്പെട്ട വിവരങ്ങള്‍ അത്യാവശ്യമാണ്, പക്ഷേ അവ പലപ്പോഴും അപ്റതീക്ഷിതവുമാണ്. ഉദാഹരണത്തിന്, "
-#~ "റീബൂട്ടിന് ശേഷം നിലനില്‍ക്കാത്ത ക്റമികരണത്തില്‍ വരുത്തിയിരിക്കുന്ന മാറ്റം."
-
-#~ msgid "Caution"
-#~ msgstr "ശ്റദ്ധിക്കുക"
-
-#~ msgid ""
-#~ "A caution indicates an act that would violate your support agreement, "
-#~ "such as recompiling the kernel."
-#~ msgstr ""
-#~ "നിങ്ങള്‍ക്ക് പിന്തുണ ഏകുന്ന കരാറുകള്‍ക്ക് എതിരെയുള്ള പ്റവറ്‍ത്തികള്‍ സൂചിപ്പിക്കുന്നതിനായി നിങ്ങളെ "
-#~ "'ശ്രദ്ധിക്കുക' എന്നത് സഹായിക്കുന്നു. ഉദാഹരണത്തിന്, കേര്‍ണല്‍ വീണ്ടും കംപൈല്‍ ചെയ്യുക."
-
-#~ msgid ""
-#~ "A warning indicates potential data loss, as may happen when tuning "
-#~ "hardware for maximum performance."
-#~ msgstr ""
-#~ "ഏറ്റവും അധികം പ്റകടനത്തിനായി ഒരു ഹാര്‍ഡ്‌വെയറ്‍ ഉപയോഗിക്കുമ്പോള്‍ സംഭവിക്കുവാന്‍ സാധ്യതയുള്ള "
-#~ "ഡേറ്റാ നഷ്ടങ്ങള്‍ക്കായി മുന്നറിയിപ്പ് സഹായിക്കുന്നു."
-
-#~ msgid "gconftool-2\n"
-#~ msgstr "gconftool-2\n"
-
-#~ msgid ""
-#~ "\n"
-#~ "# <placeholder-1/>\n"
-#~ "\t\t\t\t"
-#~ msgstr ""
-#~ "\n"
-#~ "# <placeholder-1/>\n"
-#~ "\t\t\t\t"
-
-#~ msgid "Tip"
-#~ msgstr "സൂചന"
-
-#~ msgid "translator-credits"
-#~ msgstr "അനി പീറ്ററ്‍ <apeter@redhat.com>"
