--- a/publican/content/common/mr-IN/Conventions.po
+++ b/publican/content/common/mr-IN/Conventions.po
@@ -1,19 +1,19 @@
 # translation of Conventions.po to marathi
 # sandeep shedmake <sandeep.shedmake@gmail.com>, 2007.
+# Sandeep Shedmake <sandeep.shedmake@gmail.com>, 2008.
 msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2008-09-29 04:47+0000\n"
-"PO-Revision-Date: 2007-10-29 16:23+0530\n"
-"Last-Translator: sandeep shedmake <sandeep.shedmake@gmail.com>\n"
+"PO-Revision-Date: 2008-10-08 12:51+0530\n"
+"Last-Translator: Sandeep Shedmake <sandeep.shedmake@gmail.com>\n"
 "Language-Team: marathi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
-"Plural-Forms: Plural-Forms: nplurals=2; plural=(n!=1);\n"
-"\n"
+"Plural-Forms: nplurals=2; plural=(n!=1);\n"
 
 #. Tag: title
 #: Conventions.xml:5
@@ -27,7 +27,7 @@ msgstr "दस्तऐवज पध्दती"
 msgid ""
 "This manual uses several conventions to highlight certain words and phrases "
 "and draw attention to specific pieces of information."
-msgstr ""
+msgstr "ठराविक शब्द व वाक्यरचना ठळक करण्याकरीता व ठराविक माहितीकडे लक्ष वेधण्याकरीता ही पुस्तिका विविध पद्धती वापरते."
 
 #. Tag: para
 #: Conventions.xml:11
@@ -39,13 +39,13 @@ msgid ""
 "installed on your system. If not, alternative but equivalent typefaces are "
 "displayed. Note: Red Hat Enterprise Linux 5 and later includes the "
 "Liberation Fonts set by default."
-msgstr ""
+msgstr "PDF व पेपर आवृत्ती अंतर्गत, ही पुस्तिका <ulink url=\"https://fedorahosted.org/liberation-fonts/\">लिबरेशन फॉन्ट</ulink> संच पासूनचे टाइपफेसचा वापर करते. लिबरेशन फॉन्ट संच प्रणालीवर प्रतिष्ठापीत असल्यास त्याचा वापर HTML आवृत्तीतही केला जाऊ शकतो. तसे नसल्यास, वैक्लपिक परंतु समान टाइपफेस दर्शविले जाते. टिप: Red Hat Enterprise Linux 5 व पुढिल आवृत्ती अंतर्गत लिबरेशन फॉन्ट मुलभूतरित्या निश्चित केले जाते."
 
 #. Tag: title
 #: Conventions.xml:16
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Typographic Conventions"
-msgstr "दस्तऐवज पध्दती"
+msgstr "टायपोग्राफीक पद्धती"
 
 #. Tag: para
 #: Conventions.xml:18
@@ -54,13 +54,13 @@ msgid ""
 "Four typographic conventions are used to call attention to specific words "
 "and phrases. These conventions, and the circumstances they apply to, are as "
 "follows."
-msgstr ""
+msgstr "ठराविक शब्द व वाक्यरचना करीता लक्ष वेधण्याकरीता चार टायपोग्राफिक पद्धती वापरले जाते. या पद्धती, व त्याच्याशी संबंधीत लागू करण्याजोगी वातावरण, खालिल नुरूप आहेत."
 
 #. Tag: literal
 #: Conventions.xml:23
 #, no-c-format
 msgid "Mono-spaced Bold"
-msgstr ""
+msgstr "मोनो-स्पेस्ड् गडद"
 
 #. Tag: para
 #: Conventions.xml:26
@@ -68,7 +68,7 @@ msgstr ""
 msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight key caps and key-combinations. For example:"
-msgstr ""
+msgstr "प्रणाली इन्पुट, सर्व शेल आदेश, फाइल नाव व मार्ग ठळक करण्याकरीता वापरले जाते. कि कॅप व कि-प्रकार ठळक करण्याकरीता देखिल वापरले जाते. उदाहरणार्थ:"
 
 #. Tag: section
 #: Conventions.xml:28
@@ -156,12 +156,67 @@ msgid ""
 "firstterm>). Unlike other modules, only one module from the MPM group can be "
 "loaded by the Apache HTTP Server. </para> </blockquote>"
 msgstr ""
+"<blockquote> <para> वर्तमान कार्यरत संचयीका अंतर्गत <filename><filename>my_next_bestselling_novel</filename></filename> फाइलचे अनुक्रम पाहण्याकरीता, शेल प्रॉम्पट वर <command>cat my_next_bestselling_novel</command> "
+"प्रविष्ट करा व आदेश चालविण्याकरीता <keycap>Enter</keycap> आदेश चालवा. </para> </blockquote> <para> वरील अंतर्गत फाइल नाव, शेल आदेश व कि कॅप मोनो-स्पेस्ड् गडद फॉन्ट नुरूप समाविष्ठीत आहे. </para> <para> कि-जोडणी प्रकार कि कॅपशी विभिन्न आहे हे कि-जोडणीच्या हायफेन द्वारे ओळखले जाऊ शकते. उदाहरणार्थ: </para> <blockquote> <para> आदेश चालविण्याकरीता <keycap>Enter</keycap> दाबा. </para> <para> प्रथम आभासी टर्मिनलवर जाण्याकरीता <keycombo><keycap>Ctrl</"
+"keycap><keycap>Alt</keycap><keycap>F1</keycap></keycombo> दाबा. <keycombo>X-Windows सत्रकडे जाण्याकरीता<keycap>Ctrl</keycap><keycap>Alt</"
+"keycap><keycap>F7</keycap> दाबा </keycombo>. </"
+"para> </blockquote> <para> पहिली वाक्यरचना दाबण्याजोगी ठराविक किकॅप दर्शविते. दुसरी वाक्यरचना दाबण्याजोगी तीन कि कॅपचे दोन संच दर्शविते, प्रत्येक संच समवेळी दाबले जाते. </para> <para> स्त्रोत कोड संबंधित परिच्छेद अंतर्गत, क्लास् नाव, पद्धती, कार्यपद्धती, वेरियेबल नाव व रिटअर्न मुल्य, <literal>मोनो-स्पेस्ड् गडद</"
+"literal> नुरूप दर्शविले जातील. उदाहरणार्थ: </para> <blockquote> <para> फाइल-संबंधित वर्ग अंतर्गत "
+"फाइल प्रणाली करीता <classname>filesystem</classname>, फाइल करीता <classname>file</"
+"classname>, व संचयीका करीता <classname>dir</classname> समाविष्टीत आहे. प्रत्येक वर्गकाकडे संबंधित परवानगी संच समाविष्ठीत आहे. </para> </blockquote> "
+"<para> <application>प्रपोशनल गडद</application> </para> <para> हे प्रणाली वरील शब्द किंवा वाक्यरचना दर्शविते, ज्यात"
+"अनुप्रयोग नाव; संवाद चौकोन पाठ्य; लेबल बटन; चेक-बॉक्स् व रेडिओ बटन लेबल; मेन्यू शिर्षक व उप-मेन्यू शिर्षक समाविष्टीत आहे. उदाहरणार्थ: </para> <blockquote> "
+"<para><application>माऊस प्राधान्यता</application> दाखल करण्याकरीता मुख्य मेन्यू पट्टी पासून <guimenu>प्रणाली > प्राधान्यता > माऊस</guimenu> निवडा.  <guilabel>बटन</guilabel> टॅब अंतर्गत, <guilabel>डावी-हाताळणी माऊस</guilabel> चेक बॉक्सवर क्लिक करा व प्राथमिक माऊस बटण बदलविण्याकरीता किंवा डावी पासून उजवीकडे जाण्याकरीता <guibutton>बंद करा</guibutton> यावर क्लिक् करा (डावी हाथाळणी करीता माऊसचा वापर सुलभ होते "
+"). </para> <para><application>gedit</application> फाइल अंतर्गत विशेष अक्षर प्रविष्ट करायचे असल्यास, मुख्य मेन्यू पट्टी पासून <guimenu>अनुप्रयोग > "
+"अगाऊ उपकरण > अक्षर मॅप</guimenu> वापरा. पुढे, <application>अक्षर मॅप "
+"Map</application> मेन्यू पट्टी पासून <guimenu>शोधा > शोधा&hellip;</guimenu> निवडा, "
+"<guilabel>शोधा</guilabel> गुणविशेष अंतर्गत अक्षराचे नाव प्रविष्ट करा व <guibutton>पुढिल</guibutton> यावर क्लिक करा. प्रविष्ट अक्षर <guilabel>अक्षर तक्ता</guilabel> अंतर्गत ठळकरित्या दर्शविले जाईल. ठळक अक्षरावर दोनवेळा क्लिक करून यांस "
+"<guilabel>प्रतिकृतजोगी पाठ्य</guilabel> गुणविशेष येथे स्थानांतरीत करा व <guibutton>प्रतिकृत करा</"
+"guibutton> बटनावर क्लिक करा. आता दस्तऐवजाकडे जा व <application>gedit</application> मेन्यू पट्टीतून <guimenu>संपादन "
+"> चिकटवा</guimenu> निवडा. </"
+"para> </blockquote> <para> वरील पाठ्य अंतर्गत अनुप्रयोग नाव; प्रणाली-क्षेत्र"
+"मेन्यू नाव व घटक; अनुप्रयोग-निर्देशीत मेन्यू नाव; व बटन व"
+"GUI संवाद अंतर्गत आढळलेले पाठ्य समाविष्टीत आहे, सर्व Proportional Bold अंतर्ग व संबंधित संदर्भशी निगडीत. "
+" </para> <para> लक्षात घ्या <guimenu>></guimenu> "
+"मेन्यू व उप-मेन्यू अंतर्गत संचारन दर्शविते. यामुळे "
+"लागू करण्याजोगी कठीण '"
+"मुख्य मेन्यू पट्टी अतंर्गत <guimenu>प्रणाली</"
+"guimenu> उप-मेन्यू <guimenu>प्राधान्यता</guimenu> पासून <guimenuitem>माऊस</guimenuitem> निवडा' दृष्टीकोण टाळले जाऊ शकते. </para> <para> "
+"<command><replaceable>Mono-spaced Bold Italic</replaceable></command> किंवा "
+"<application><replaceable>Proportional Bold Italic</replaceable></"
+"application> </para> <para> Mono-spaced Bold किंवा Proportional Bold, "
+"इटॅलीक्स् बदलविण्याजोगी किंवा बदलाव पाठ्य दर्शविते. इटॅलीक्स् तुम्ही इच्छिकरित्या प्रविष्ट न केलेले"
+"किंवा परस्पर स्थिती नुरूप बदलणारे पाठ्य दर्शविते."
+" उदाहरणार्थ: </para> <blockquote> <para> "
+"दूर्रस्थ मशीनशी ssh द्वारे जुळवणी स्थापीत करायचे असल्यास, शेल प्रॉम्पटवर <command>ssh "
+"<replaceable>वापरकर्तानाव</replaceable>@<replaceable>क्षेत्र.नाव</replaceable></"
+"command> टाइप करा. दूर्रस्थ मशीन <filename>example.com</"
+"filename> असल्यास व वापरकर्त्याचे नाव john असल्यास, <command>ssh "
+"john@example.com</command> टाइप करा. </para> <para><command>mount -o remount "
+"<replaceable>फाइल-प्रणली</replaceable></command> आदेश, नामांकीत फाइल प्रणालीस पुन्ह आरोहीत करते. उदाहरणार्थ, <filename>/home</filename> फाइल "
+"प्रणाली पुन्हा आरोहीत करण्याकरीत, <command>mount -o remount /home</command> असे आदेश आहे. </para> "
+"<para> वर्तमानरित्या प्रतिष्ठापीत संकुलाची आवृत्ती पहाची असल्यावर, "
+"<command>rpm -q <replaceable>संकुल</replaceable></command> आदेश वापरा. परिणाम "
+"खालिल नुरूप दर्शविले जातील: <command><replaceable>संकुल-आवृत्ती-"
+"प्रकाशन</replaceable></command>. </para> </blockquote> <para> वरील ठळक"
+"इटॅलीक् नुरूप शब्द जसे की &mdash; वापरकर्तानाव, क्षेत्र.नाव, फाइल-प्रणाली, संकुल, "
+"आवृत्ती व प्रकाशन यांस स्मर्णास ठेवा. आदेश प्रविष्ट करतेवेळीचे पाठ्य करीता"
+"किंवा प्रणाली द्वारे दर्शविलेले पाठ्य करीता, प्रत्येक शब्द हा प्लेसहोल्डर आहे. </para> <para> "
+"कार्य शिर्षक करीता मानक वापर याच्या व्यतिरिक्त, इटॅलीक्स्चा वापर"
+"प्रथम किंवा महत्वाची संज्ञा दर्शविण्याकरीता केला जातो. उदाहरणार्थ: </para> "
+"<blockquote> <para> Apache HTTP सर्वर जेव्हा विनंती स्वीकारतो, तेव्हा हाताळणीकरीता उप कार्य किंवा थ्रेडचा "
+"वापर केला जातो. या उपकार्य किंवा थ्रेड गटास"
+"<firstterm>सर्वर-संग्रह</firstterm> असे म्हटले जाते. "
+"Apache HTTP सर्वर 2.0 वरील, सर्वर-संग्रह बनविण्याची व सुस्थीत करण्याचे काम "
+"<firstterm>Multi-Processing Modules</firstterm> (<firstterm>MPMs</"
+"firstterm>) या विभाग गट द्वारे हाताळले जाते. अन्य विभागपेक्षा, MPM गट पासूनचे फक्त एकच विभाग"
+"Apache HTTP सर्वर द्वारे दाखल केले जाऊ शकते. </para> </blockquote>"
 
 #. Tag: title
 #: Conventions.xml:132
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Pull-quote Conventions"
-msgstr "दस्तऐवज पध्दती"
+msgstr "पूल्ल-कोट् पद्धती"
 
 #. Tag: para
 #: Conventions.xml:134
@@ -169,7 +224,7 @@ msgstr "दस्तऐवज पध्दती"
 msgid ""
 "Two, commonly multi-line, data types are set off visually from the "
 "surrounding text."
-msgstr ""
+msgstr "आजूबाजूचे पाठ्य पासून दोन, सर्वसाधारणरिती बहु-ओळ, माहिती प्रकार दृश्यास्परित्या निश्चित केले जाते."
 
 #. Tag: para
 #: Conventions.xml:138
@@ -178,6 +233,8 @@ msgid ""
 "Output sent to a terminal is set in <computeroutput>Mono-spaced Roman</"
 "computeroutput> and presented thus:"
 msgstr ""
+"टर्मिनल करीता पाठविलेले आऊटपुट <computeroutput>Mono-spaced Roman</"
+"computeroutput> अतंर्गत निश्चित केले जाते व खालिलरित्या प्रस्तुत केले जाते:"
 
 #. Tag: screen
 #: Conventions.xml:142
@@ -186,6 +243,8 @@ msgid ""
 "books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
 "books_tests  Desktop1  downloads      images  notes  scripts  svgs"
 msgstr ""
+"पुस्तक        डेस्कटॉप   दस्तऐवज  ड्राफ्ट  mss    चित्र   इत्यादी  svn\n"
+"पुस्तक_चाचणी  डेसक्टॉप1  डाऊनलोडस्      प्रतिमा  टिप  स्क्रिप्ट  svgs"
 
 #. Tag: para
 #: Conventions.xml:144
@@ -193,7 +252,7 @@ msgstr ""
 msgid ""
 "Source-code listings are also set in <computeroutput>Mono-spaced Roman</"
 "computeroutput> but are presented and highlighted as follows:"
-msgstr ""
+msgstr "<computeroutput>मोनो-स्पेस्ड् रोमन</computeroutput> अंतर्गत स्त्रोत-कोड यादी सुद्धता निश्चित केली जाते:"
 
 #. Tag: programlisting
 #: Conventions.xml:148
@@ -220,12 +279,32 @@ msgid ""
 "   \n"
 "}"
 msgstr ""
+"package org.jboss.book.jca.ex1;\n"
+"\n"
+"import javax.naming.InitialContext;\n"
+"\n"
+"public class ExClient\n"
+"{\n"
+"   public static void main(String args[]) \n"
+"       throws Exception\n"
+"   {\n"
+"      InitialContext iniCtx = new InitialContext();\n"
+"      Object         ref    = iniCtx.lookup(\"EchoBean\");\n"
+"      EchoHome       home   = (EchoHome) ref;\n"
+"      Echo           echo   = home.create();\n"
+"\n"
+"      System.out.println(\"Created Echo\");\n"
+"\n"
+"      System.out.println(\"Echo.echo('Hello') = \" + echo.echo(\"Hello\"));\n"
+"   }\n"
+"   \n"
+"}"
 
 #. Tag: title
 #: Conventions.xml:153
 #, no-c-format
 msgid "Notes and Warnings"
-msgstr ""
+msgstr "टिप व सावधानता"
 
 #. Tag: para
 #: Conventions.xml:155
@@ -233,7 +312,7 @@ msgstr ""
 msgid ""
 "Finally, we use three visual styles to draw attention to information that "
 "might otherwise be overlooked."
-msgstr ""
+msgstr "शेवटी, दुर्लक्ष करण्याजोगी माहितीकडे लक्ष वेधण्याकरीता तीन दृश्यास्पद शैली वापरली जाते."
 
 #. Tag: title
 #: Conventions.xml:160
@@ -249,6 +328,8 @@ msgid ""
 "Ignoring a note should have no negative consequences, but you might miss out "
 "on a trick that makes your life easier."
 msgstr ""
+"टिपण्णी टिप किंवा शार्टकट किंवा ठराविक कार्य करीता वैकल्पिक दृष्टीकोण आहे. "
+"टिपण्णीकडे दुर्लक्ष केल्यास नकारात्मक परिणाम आढळत नाही, परंतु तुम्ही सुलभ व सोपे पद्धत पासून वंचीत होऊ शकता."
 
 #. Tag: title
 #: Conventions.xml:167
@@ -264,7 +345,7 @@ msgid ""
 "that only apply to the current session, or services that need restarting "
 "before an update will apply. Ignoring Important boxes won't cause data loss "
 "but may cause irritation and frustration."
-msgstr ""
+msgstr "सहज न आढळणाऱ्या गोष्टी महत्वाचे चौकोन द्वारे दर्शविले जाते: संयोजना बदल फक्त वर्तमान सत्र, किंवा सेवा ज्यांस अद्ययावतपूर्वी पुन्हप्रारंभची आवश्यकता आहे त्यांस लागू होते. महत्वाचे चौकोनकडे दुर्लक्ष केल्यास माहिती लुप्त होत नाही पण उगाच त्रास वाढू शकतो."
 
 #. Tag: title
 #: Conventions.xml:175
@@ -278,137 +359,5 @@ msgstr "सावधानता"
 msgid ""
 "A Warning should not be ignored. Ignoring warnings will most likely cause "
 "data loss."
-msgstr ""
+msgstr "सावधानता दुर्लक्ष करू नका. सावधानताकडे दुर्लक्ष केल्यास माहिती लुप्त होऊ शकते."
 
-#~ msgid ""
-#~ "Certain words in this manual are represented in different fonts, styles, "
-#~ "and weights. This highlighting indicates that the word is part of a "
-#~ "specific category. The categories include the following:"
-#~ msgstr ""
-#~ "काहीक शब्द ह्या पुस्तिकेत वेगळ्या फॉन्ट, शैली, व गुणांनुसारे प्रस्तुत केले आहे. हे ठळकरित्या "
-#~ "दिसणे म्हणजेच शब्द एका विशिष्ट वर्गचा भाग आहे. वर्गांमध्ये खालिल समाविष्ट आहे:"
-
-#~ msgid "Courier font"
-#~ msgstr "कुरियर फॉन्ट"
-
-#~ msgid ""
-#~ "Courier font represents <command>commands</command>, <filename>file names "
-#~ "and paths</filename>, and <prompt>prompts</prompt> ."
-#~ msgstr ""
-#~ "कुरियर फॉन्ट <command>आदेश</command>, <filename>फाइल नाव व मार्ग</filename>, "
-#~ "व <prompt>प्रॉम्ट</prompt> दर्शविते."
-
-#, fuzzy
-#~ msgid ""
-#~ "Desktop       about.html       logs      paulwesterberg.png\n"
-#~ "Mail          backupfiles      mail      reports"
-#~ msgstr ""
-#~ "खालिल दर्शविल्यानुसारे, संगणकाचे परिणाम: <screen>\n"
-#~ "डेस्कटॉप       about.html       लॉग      paulwesterberg.png\n"
-#~ "मेल          प्रतिकृती फाइल      मेल      अहवाल\n"
-#~ "</screen>"
-
-#~ msgid "bold Courier font"
-#~ msgstr "ठळक कुरियर फॉन्ट"
-
-#~ msgid ""
-#~ "Bold Courier font represents text that you are to type, such as: "
-#~ "<userinput>service jonas start</userinput>"
-#~ msgstr ""
-#~ "ठळक कुरियर फॉन्ट तुम्ही लिहीलेले मजकुर दर्शविते, उदहरणार्थ: <userinput>service "
-#~ "jonas start</userinput>"
-
-#~ msgid ""
-#~ "If you have to run a command as root, the root prompt (<literal>#</"
-#~ "literal>) precedes the command:"
-#~ msgstr ""
-#~ "आदेशास रूटच्या स्वरूपास कार्यरत करण्यास, रूट प्रॉमप्ट (<literal>#</literal>) "
-#~ "आदेशाच्या पहिले येते:"
-
-#~ msgid "italic Courier font"
-#~ msgstr "इटालीक कुरीयर फॉन्ट"
-
-#, fuzzy
-#~ msgid ""
-#~ "Italic Courier font represents a variable, such as an installation "
-#~ "directory: <filename> <replaceable>install_dir</replaceable>/bin/</"
-#~ "filename>"
-#~ msgstr ""
-#~ "इटालीक कुरियर फॉन्ट एका परिवर्तकसारखे आहे, उदहरणार्थ स्थापन संचयीकेचे स्वरूप दर्शविते: "
-#~ "<filename><replaceable>install_dir</replaceable>/bin/</filename>"
-
-#~ msgid "bold font"
-#~ msgstr "ठळक फॉन्ट"
-
-#~ msgid ""
-#~ "Bold font represents <application>application programs</application> and "
-#~ "<guilabel>text found on a graphical interface</guilabel>."
-#~ msgstr ""
-#~ "ठळक फॉन्ट <application>अनुप्रयोग कार्यक्रमे</application> व <guilabel>चित्रलेख "
-#~ "संवादपटावरील आढळणारे मजकुर</guilabel> दर्शविते."
-
-#~ msgid ""
-#~ "When shown like this: <guibutton> OK </guibutton>, it indicates a button "
-#~ "on a graphical application interface."
-#~ msgstr ""
-#~ "<guibutton> ठिक आहे </guibutton>: असे दर्शविल्यास, चित्रलेख अनुप्रयोग संवादपटावरील "
-#~ "बटणास सुचवते."
-
-#~ msgid ""
-#~ "Additionally, the manual uses different strategies to draw your attention "
-#~ "to pieces of information. In order of how critical the information is to "
-#~ "you, these items are marked as follows:"
-#~ msgstr ""
-#~ "याच्याव्यतिरिक्त, पुस्तिका विविध व्युरचना आपले लक्ष्य वेधण्याकरिता वापरते. आपल्याला ही "
-#~ "माहिती किती विशेष असु शकते, त्या क्रमानुसारे घटकांना खालिलरित्या ओळखचिन्हे लावल्यागेले "
-#~ "आहेत:"
-
-#~ msgid ""
-#~ "A note is typically information that you need to understand the behavior "
-#~ "of the system."
-#~ msgstr "टिप्पणी विशेषतः प्रणालीची वागणुक समजण्याकरीता माहिती प्रदान करण्यास असते."
-
-#~ msgid "A tip is typically an alternative way of performing a task."
-#~ msgstr "टिप कार्य इतर रिती कार्यान्वीत करण्याकरीता आहे."
-
-#~ msgid ""
-#~ "Important information is necessary, but possibly unexpected, such as a "
-#~ "configuration change that will not persist after a reboot."
-#~ msgstr ""
-#~ "महत्वाची माहिती जरुरी आहे, पण अपेक्षित नाही, जसे उदाहरणार्थ प्रणाली पुनः सुरू "
-#~ "केल्यावरही संरचना टिकुण राहणे शक्य नाही."
-
-#~ msgid "Caution"
-#~ msgstr "धोका"
-
-#~ msgid ""
-#~ "A caution indicates an act that would violate your support agreement, "
-#~ "such as recompiling the kernel."
-#~ msgstr ""
-#~ "धोका आपले आधार करार भंग होणार नाही हे दर्शवितो, उदाहरणार्थ कर्नल पुनःकंपाईल "
-#~ "होण्यापासून आपल्याला सावध करतो."
-
-#~ msgid ""
-#~ "A warning indicates potential data loss, as may happen when tuning "
-#~ "hardware for maximum performance."
-#~ msgstr ""
-#~ "सावधानता माहिती नष्ट होणे दर्शवितो, जसे की हार्डवेअरला कमाल कामगिरीकरीता "
-#~ "गरजेपेक्षा जास्त वेळ चालवणे."
-
-#~ msgid "gconftool-2\n"
-#~ msgstr "gconftool-2\n"
-
-#~ msgid ""
-#~ "\n"
-#~ "# <placeholder-1/>\n"
-#~ "\t\t\t\t"
-#~ msgstr ""
-#~ "\n"
-#~ "# <placeholder-1/>\n"
-#~ "\t\t\t\t"
-
-#~ msgid "Tip"
-#~ msgstr "टिप"
-
-#~ msgid "translator-credits"
-#~ msgstr "sandeep shedmake <sshedmak@redhat.com> 2007"
