--- a/publican/content/common/pt-BR/Conventions.po
+++ b/publican/content/common/pt-BR/Conventions.po
@@ -1,13 +1,14 @@
-# translation of Conventions.po to Brazilian Portuguese
+# translation of Conventions.po to Portuguese
 # Leticia de Lima <ldelima@redhat.com>, 2007.
+# Glaucia Cintra <gcintra@redhat.com>, 2008.
 msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2008-09-29 04:47+0000\n"
-"PO-Revision-Date: 2007-10-23 14:15+1000\n"
-"Last-Translator: Leticia de Lima <ldelima@redhat.com>\n"
-"Language-Team: Brazilian Portuguese <en@li.org>\n"
+"PO-Revision-Date: 2008-10-10 17:30+1000\n"
+"Last-Translator: Glaucia Cintra <gcintra@redhat.com>\n"
+"Language-Team: Portuguese <en@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -25,7 +26,7 @@ msgstr "Convenções de Documentos"
 msgid ""
 "This manual uses several conventions to highlight certain words and phrases "
 "and draw attention to specific pieces of information."
-msgstr ""
+msgstr "Este manual usa diversas convenções para destacar certas palavras e frases e chamar a atenção para informações específicas."
 
 #. Tag: para
 #: Conventions.xml:11
@@ -37,13 +38,13 @@ msgid ""
 "installed on your system. If not, alternative but equivalent typefaces are "
 "displayed. Note: Red Hat Enterprise Linux 5 and later includes the "
 "Liberation Fonts set by default."
-msgstr ""
+msgstr "Em PDF e edições de texto, este manual usa tipos de letras retiradas do conjunto de Fontes <ulink url=\"https://fedorahosted.org/liberation-fonts/\">Liberation Fonts</ulink>. O conjunto de Fontes Liberation Fonts, também é usado em formato HTML, caso o conjunto esteja instalado em seu sistema. Caso ainda não esteja, como forma alternativa, estão disponíveis tipos de letras equivalentes. Nota: O Red Hat Enterprise Linux 5 e versões mais recentes do mesmo, incluem o conjunto Liberation Fonts por padrão."
 
 #. Tag: title
 #: Conventions.xml:16
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Typographic Conventions"
-msgstr "Convenções de Documentos"
+msgstr "Convenções Tipográficas"
 
 #. Tag: para
 #: Conventions.xml:18
@@ -52,13 +53,13 @@ msgid ""
 "Four typographic conventions are used to call attention to specific words "
 "and phrases. These conventions, and the circumstances they apply to, are as "
 "follows."
-msgstr ""
+msgstr "São usadas quatro convenções tipográficas para realçar palavras e frases específicas. Estas convenções, e circunstâncias a que se aplicam, são as seguintes:"
 
 #. Tag: literal
 #: Conventions.xml:23
 #, no-c-format
 msgid "Mono-spaced Bold"
-msgstr ""
+msgstr "Negrito Espaço Único (Mono-spaced Bold)"
 
 #. Tag: para
 #: Conventions.xml:26
@@ -66,7 +67,7 @@ msgstr ""
 msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight key caps and key-combinations. For example:"
-msgstr ""
+msgstr "Usada para realçar entradas do sistema, incluindo comandos de shell, nomes de arquivos e caminhos. São também usadas para realçar tecla de Maiúsculas/Minúsculas e as combinações de teclas. Por exemplo:"
 
 #. Tag: section
 #: Conventions.xml:28
@@ -154,12 +155,38 @@ msgid ""
 "firstterm>). Unlike other modules, only one module from the MPM group can be "
 "loaded by the Apache HTTP Server. </para> </blockquote>"
 msgstr ""
+"<blockquote> <para> Para ver o conteúdo do arquivo <filename>my_next_bestselling_novel</filename> em sua pasta de trabalho atual, insira o comando <command>cat my_next_bestselling_novel</command> na janela de solicitação e pressione <keycap>Enter</keycap> para executar o comando. </para> </blockquote> <para> O comando acima inclui um nome de arquivo, um comando de shell e uma tecla cap, todos apresentados em Negrito Espaço Único (Mono-spaced Bold) e todos distintos, graças ao conteúdo. </para> <para> As combinações de Teclas podem ser diferenciadas da tecla Caps Lock por um hífen, conectando cada parte de uma combinação de teclas. Por exemplo: </para> <blockquote> <para> Pressione <keycap>Enter</"
+"keycap> para executar o comando </para> <para> Pressione <keycombo><keycap>Ctrl</"
+"keycap><keycap>Alt</keycap><keycap>F1</keycap></keycombo> para mudar para o primeiro terminal virtual. Pressione <keycombo><keycap>Ctrl</keycap><keycap>Alt</"
+"keycap><keycap>F7</keycap></keycombo> para voltar para sua sessão do  X-Windows. </"
+"para> </blockquote> <para> A primeira sentença, destaca uma tecla específica a ser pressionada. A segunda destaca dois conjuntos de três teclas, pressionadas simultaneamente. </para> <para> Caso o código fonte seja discutido, serão apresentados os nomes de classe, métodos, funções, nomes de variantes e valores retornados mencionados em um parágrafo, em <literal>Negrito de Espaço Único (Mono-spaced Bold)</"
+"literal>. Por exemplo: </para> <blockquote> <para> Classes baseadas em arquivo, incluem <classname>filesystem</classname> para sistemas de arquivo, <classname>file</"
+"classname> para arquivos, e <classname>dir</classname> para diretórios. Cada classe possui seu conjunto próprio de permissões associadas. </para> </blockquote> <para> <application>Negrito Proporcional</application> </para> <para> Esta representa as palavras e frases encontradas no sistema, incluindo os nomes de aplicativos, texto de caixa de diálogo, botões rotulados, caixa de seleção e rótulos de botão de opção, títulos de menus e sub-menus. Por exemplo: </para> <blockquote> "
+"<para> Escolha <guimenu>Sistema > Preferências > Mouse</guimenu> a partir da barra de menu para obter <application>Preferências de Mouse</application>. Na aba <guilabel>Botões</guilabel>, clique na caixa de seleção  <guilabel>Mouse para mão esquerda</guilabel> e clique em <guibutton>Fechar</guibutton> para mudar o botão do mouse anterior da esquerda para a direita (deixando-o assim, mais adequado para o uso do canhoto). </para> <para> Para inserir um caractere especial em um arquivo <application>gedit</application>, escolha <guimenu>Aplicativos > Acessórios > Mapa de Caracteres</guimenu> a partir da barra de menu principal. Depois, escolha a opção <guimenu>Pesquisar > Encontrar&hellip;</guimenu> a partir da barra de menu <application>Mapa de Caracteres </application>, digite o nome do caractere no campo "
+"<guilabel>Pesquisar</guilabel> e clique em <guibutton>Próximo</guibutton>. O caractere que você buscou estará em destaque na <guilabel>Tabela de Caracteres</guilabel>. Clique novamente nestes caracteres realçados para colocá-los no campo "
+"<guilabel>Texto para cópia</guilabel> e depois clique em  <guibutton>Copiar</guibutton>. Agora mude novamente para seu documento e escolha <guimenu>Editar > Colar</guimenu> a partir da barra de menu do <application>gedit</application>. </"
+"para> </blockquote> <para> O texto acima inclui nomes de aplicativos, nomes de menu e itens de todo o sistema, nomes de menu específicos do aplicativo, e botões e textos encontrados na Interface Gráfica GUI, todos apresentados em Negrito Proporcional (Proportional Bold) e todos diferenciados de acordo com o  contexto. </para> <para> Observe o símbolo <guimenu>></guimenu> usado para indicar a passagem entre um menu e seus sub-menus. Isto acontece para evitar dificuldades de manuseio do 'Selecione  <guimenuitem>Mouse</guimenuitem> a partir do submenu  <guimenu>Preferências</guimenu> no menu  <guimenu>Sistema</"
+"guimenu> da barra de menu principal'. </para> <para> "
+"<command><replaceable>Itálico em Negrito de Espaço Único (Mono-spaced Bold Italic)</replaceable></command> ou"
+"<application><replaceable>Itálico em Negrito Proporcional (Proportional Bold Italic)</replaceable></"
+"application> </para> <para> Sendo o Negrito Espaço Único (Mono-spaced Bold) ou Negrito Proporcional (Proportional Bold), os itálicos extras indicam textos substituíveis ou variáveis. O Itálico denota o texto que você não inseriu literalmente ou textos exibidos que mudam dependendo das circunstâncias. Por exemplo: </para> <blockquote> <para> Para conectar-se à uma máquina remota usando o ssh, digite <command>ssh "
+"<replaceable>nome do usuário</replaceable>@<replaceable>domain.name</replaceable></"
+"command> na janela de comandos. Por exemplo, considre que a máquina remota seja  <filename>example.com</filename> e seu nome de usuário nesta máquina seja john, digite <command>ssh "
+"john@example.com</command>. </para> <para> O comando <command>mount -o remount <replaceable>file-system</replaceable></command> remonta o sistema de arquivo nomeado. Por exemplo, para remontar o sistema de arquivo  <filename>/home</filename>, o comando é  <command>mount -o remount /home</command>. </para> "
+"<para> Para ver a versão de um pacote instalado, use o comando "
+"<command>rpm -q <replaceable>package</replaceable></command>. Ele retornará um resultado como este: <command><replaceable>package-version-"
+"release</replaceable></command>. </para> </blockquote> <para> Observe as palavras em negrito e itálicas acima &mdash; nome de usuário, nome do domínio, sistema de arquivo, pacote, versão e lançamento. Cada palavra é um espaço reservado, tanto para o texto que você inseriu ao emitir um comando ou para o texto exibido pelo sistema. </para> <para> "
+"Além de uso padrão para apresentar o título de um trabalho, os itálicos denotam a primeira vez que um termo novo e importante é usado. Por exemplo: </para> "
+"<blockquote> <para> Quando o Servidor Apache HTTP aceita as requisições, ele despacha os processos filhos ou verificações para que possa manuseá-los. Este grupo de processos filhos ou verificações é conhecido como um  <firstterm>server-pool</firstterm>. No "
+"Apache HTTP Server 2.0, a responsabilidade de criar e manter estes server-pools foram obtidas de um grupo de módulos chamado "
+"<firstterm>Multi-Processing Modules</firstterm> (<firstterm>MPMs</"
+"firstterm>). Diferenciando de outros módulos, somente um módulo do grupo MPM pode ser carregado pelo Servidor Apache HTTP. </para> </blockquote>"
 
 #. Tag: title
 #: Conventions.xml:132
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Pull-quote Conventions"
-msgstr "Convenções de Documentos"
+msgstr "Convenções de Pull-Quote "
 
 #. Tag: para
 #: Conventions.xml:134
@@ -167,7 +194,7 @@ msgstr "Convenções de Documentos"
 msgid ""
 "Two, commonly multi-line, data types are set off visually from the "
 "surrounding text."
-msgstr ""
+msgstr "Dois tipos de dados, geralmente com múltiplas linhas, são estabelecidos com base no contexto."
 
 #. Tag: para
 #: Conventions.xml:138
@@ -176,6 +203,8 @@ msgid ""
 "Output sent to a terminal is set in <computeroutput>Mono-spaced Roman</"
 "computeroutput> and presented thus:"
 msgstr ""
+"O resultado enviado à um terminal é configurado em <computeroutput>Romano de Espaço Único (Mono-spaced Roman)</"
+"computeroutput> e apresentado assim:"
 
 #. Tag: screen
 #: Conventions.xml:142
@@ -184,6 +213,8 @@ msgid ""
 "books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
 "books_tests  Desktop1  downloads      images  notes  scripts  svgs"
 msgstr ""
+"books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
+"books_tests  Desktop1  downloads      images  notes  scripts  svgs"
 
 #. Tag: para
 #: Conventions.xml:144
@@ -192,6 +223,8 @@ msgid ""
 "Source-code listings are also set in <computeroutput>Mono-spaced Roman</"
 "computeroutput> but are presented and highlighted as follows:"
 msgstr ""
+"As listas de código fonte também são configuradas em <computeroutput>Romano de Espaço Único (Mono-spaced Roman)</"
+"computeroutput>, porém são apresentadas e realçadas como a seguir:"
 
 #. Tag: programlisting
 #: Conventions.xml:148
@@ -218,12 +251,32 @@ msgid ""
 "   \n"
 "}"
 msgstr ""
+"package org.jboss.book.jca.ex1;\n"
+"\n"
+"import javax.naming.InitialContext;\n"
+"\n"
+"public class ExClient\n"
+"{\n"
+"   public static void main(String args[]) \n"
+"       throws Exception\n"
+"   {\n"
+"      InitialContext iniCtx = new InitialContext();\n"
+"      Object         ref    = iniCtx.lookup(\"EchoBean\");\n"
+"      EchoHome       home   = (EchoHome) ref;\n"
+"      Echo           echo   = home.create();\n"
+"\n"
+"      System.out.println(\"Created Echo\");\n"
+"\n"
+"      System.out.println(\"Echo.echo('Hello') = \" + echo.echo(\"Hello\"));\n"
+"   }\n"
+"   \n"
+"}"
 
 #. Tag: title
 #: Conventions.xml:153
 #, no-c-format
 msgid "Notes and Warnings"
-msgstr ""
+msgstr "Notas e Avisos"
 
 #. Tag: para
 #: Conventions.xml:155
@@ -231,7 +284,7 @@ msgstr ""
 msgid ""
 "Finally, we use three visual styles to draw attention to information that "
 "might otherwise be overlooked."
-msgstr ""
+msgstr "E por fim, usamos três estilos visuais para chamar a atenção para informações que possam passar despercebidas."
 
 #. Tag: title
 #: Conventions.xml:160
@@ -246,7 +299,7 @@ msgid ""
 "A note is a tip or shortcut or alternative approach to the task at hand. "
 "Ignoring a note should have no negative consequences, but you might miss out "
 "on a trick that makes your life easier."
-msgstr ""
+msgstr "Uma nota é uma dica ou símbolo, ou ainda uma opção alternativa para a tarefa em questão. Se você ignorar uma nota, provavelmente não resultará em más consequências, porém poderá deixar passar uma dica importante que tornará sua vida mais fácil."
 
 #. Tag: title
 #: Conventions.xml:167
@@ -262,7 +315,7 @@ msgid ""
 "that only apply to the current session, or services that need restarting "
 "before an update will apply. Ignoring Important boxes won't cause data loss "
 "but may cause irritation and frustration."
-msgstr ""
+msgstr "Caixas importantes detalham coisas que são geralmente fáceis de passarem despercebidas: mudanças de configuração que somente se aplicam à sessão atual, ou serviços que precisam ser reiniciados antes que uma atualização seja efetuada. Se você ignorar estas caixas importantes, não perderá dados, porém isto poderá causar irritação e frustração."
 
 #. Tag: title
 #: Conventions.xml:175
@@ -276,146 +329,5 @@ msgstr "Aviso"
 msgid ""
 "A Warning should not be ignored. Ignoring warnings will most likely cause "
 "data loss."
-msgstr ""
+msgstr "Um Aviso não deve ser ignorado. Se você ignorar avisos, muito provavelmente perderá dados."
 
-#~ msgid ""
-#~ "Certain words in this manual are represented in different fonts, styles, "
-#~ "and weights. This highlighting indicates that the word is part of a "
-#~ "specific category. The categories include the following:"
-#~ msgstr ""
-#~ "Algumas palavras neste manual são apresentadas em diferentes fontes, "
-#~ "estilos e tamanhos. Este destaque indica que a palavra é parte de uma "
-#~ "categoria específica. As categorias incluem o seguinte:"
-
-#~ msgid "Courier font"
-#~ msgstr "Fonte enviada"
-
-#~ msgid ""
-#~ "Courier font represents <command>commands</command>, <filename>file names "
-#~ "and paths</filename>, and <prompt>prompts</prompt> ."
-#~ msgstr ""
-#~ "A fonte Courier representa os <command>comandos</command>, "
-#~ "<filename>nomes e caminhos do arquivo</filename>, e <prompt>avisos</"
-#~ "prompt>"
-
-#, fuzzy
-#~ msgid ""
-#~ "Desktop       about.html       logs      paulwesterberg.png\n"
-#~ "Mail          backupfiles      mail      reports"
-#~ msgstr ""
-#~ "Uma vez demonstrado como abaixo, isto significa que o computador "
-#~ "demonstra: <screen>\n"
-#~ "Desktop       about.html       logs      paulwesterberg.png\n"
-#~ "Mail          backupfiles      mail      reports\n"
-#~ "</screen>."
-
-#~ msgid "bold Courier font"
-#~ msgstr "Fonte Courier em negrito"
-
-#~ msgid ""
-#~ "Bold Courier font represents text that you are to type, such as: "
-#~ "<userinput>service jonas start</userinput>"
-#~ msgstr ""
-#~ "A fonte Courier em negrito representa o texto que você irá digitar, como "
-#~ "por exemplo: <userinput>service jonas start</userinput> "
-
-#~ msgid ""
-#~ "If you have to run a command as root, the root prompt (<literal>#</"
-#~ "literal>) precedes the command:"
-#~ msgstr ""
-#~ "Caso você execute um comando como o root, o root de aviso ( <literal>#</"
-#~ "literal> ) precederá o comando; "
-
-#~ msgid "italic Courier font"
-#~ msgstr "Fonte Courier itálica"
-
-#, fuzzy
-#~ msgid ""
-#~ "Italic Courier font represents a variable, such as an installation "
-#~ "directory: <filename> <replaceable>install_dir</replaceable>/bin/</"
-#~ "filename>"
-#~ msgstr ""
-#~ "A fonte Courier itálica representa a variável, como também um diretório "
-#~ "de instalação: <filename><replaceable>install_dir</replaceable>/bin/</"
-#~ "filename>"
-
-#~ msgid "bold font"
-#~ msgstr "fonte em negrito"
-
-#~ msgid ""
-#~ "Bold font represents <application>application programs</application> and "
-#~ "<guilabel>text found on a graphical interface</guilabel>."
-#~ msgstr ""
-#~ "A fonte em negrito representa os <application>programas de aplicação</"
-#~ "application> e o <guilabel>texto encontrado na interface gráfica</"
-#~ "guilabel>."
-
-#~ msgid ""
-#~ "When shown like this: <guibutton> OK </guibutton>, it indicates a button "
-#~ "on a graphical application interface."
-#~ msgstr ""
-#~ "Quando apresentado como: <guibutton> OK </guibutton>, isto indicará um "
-#~ "botão na aplicação de interface gráfica."
-
-#~ msgid ""
-#~ "Additionally, the manual uses different strategies to draw your attention "
-#~ "to pieces of information. In order of how critical the information is to "
-#~ "you, these items are marked as follows:"
-#~ msgstr ""
-#~ "Além disso, o manual usa estratégias diferentes para atrair sua atenção "
-#~ "aos pedaços de informação. Estes ítens são marcados por ordem de "
-#~ "importância em que a informação se apresenta a você, como segue abaixo:"
-
-#~ msgid ""
-#~ "A note is typically information that you need to understand the behavior "
-#~ "of the system."
-#~ msgstr ""
-#~ "A nota é tipicamente a informação que você precisa para entender o "
-#~ "comportamento do sistema."
-
-#~ msgid "A tip is typically an alternative way of performing a task."
-#~ msgstr ""
-#~ "A dica é tipicamente uma forma alternativa de desempenhar uma tarefa."
-
-#~ msgid ""
-#~ "Important information is necessary, but possibly unexpected, such as a "
-#~ "configuration change that will not persist after a reboot."
-#~ msgstr ""
-#~ "A informação importante é necessária, mas provavelmente inesperada, assim "
-#~ "como uma configuração de mudança da qual não persistirá após a "
-#~ "reinicialização"
-
-#~ msgid "Caution"
-#~ msgstr "Cautela"
-
-#~ msgid ""
-#~ "A caution indicates an act that would violate your support agreement, "
-#~ "such as recompiling the kernel."
-#~ msgstr ""
-#~ "A cautela indica uma atuação que poderia violar seu suporte de "
-#~ "entendimento, assim como a recompilação do kernel."
-
-#~ msgid ""
-#~ "A warning indicates potential data loss, as may happen when tuning "
-#~ "hardware for maximum performance."
-#~ msgstr ""
-#~ "Um aviso indica o potencial de dados perdidos, assim como é possível "
-#~ "ocorrer quando direcionando o hardware para o desempenho máximo."
-
-#~ msgid "gconftool-2\n"
-#~ msgstr "gconftool-2\n"
-
-#~ msgid ""
-#~ "\n"
-#~ "# <placeholder-1/>\n"
-#~ "\t\t\t\t"
-#~ msgstr ""
-#~ "\n"
-#~ "# <placeholder-1/>\n"
-#~ "\t\t\t\t"
-
-#~ msgid "Tip"
-#~ msgstr "Dica"
-
-#~ msgid "translator-credits"
-#~ msgstr "créditos do tradutor"
