--- a/publican/content/common/pt-BR/Feedback.po
+++ b/publican/content/common/pt-BR/Feedback.po
@@ -1,13 +1,14 @@
-# translation of Feedback.po to Brazilian Portuguese
+# translation of Feedback.po to Portuguese
 # Leticia de Lima <ldelima@redhat.com>, 2007.
+# Glaucia Cintra <gcintra@redhat.com>, 2008.
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2008-01-02 06:17+0000\n"
-"PO-Revision-Date: 2007-10-23 14:26+1000\n"
-"Last-Translator: Leticia de Lima <ldelima@redhat.com>\n"
-"Language-Team: Brazilian Portuguese <en@li.org>\n"
+"PO-Revision-Date: 2008-10-09 11:34+1000\n"
+"Last-Translator: Glaucia Cintra <gcintra@redhat.com>\n"
+"Language-Team: Portuguese <en@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -35,38 +36,5 @@ msgstr "contato de informação para este manual"
 #: Feedback.xml:11
 #, no-c-format
 msgid "You should over ride this by creating your own local Feedback.xml file."
-msgstr ""
+msgstr "Sobrescreva isto criando seu próprio arquivo Feedback.xml local."
 
-#~ msgid ""
-#~ "If you find a typographical error in this manual, or if you have thought "
-#~ "of a way to make this manual better, we would love to hear from you! "
-#~ "Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat."
-#~ "com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the "
-#~ "product <application>&PRODUCT;.</application>"
-#~ msgstr ""
-#~ "Se você encontrar erro ortográfico neste manual, ou se você tem uma "
-#~ "sugestão para melhoramento deste manual, nós gostaríamos muito de ouvir "
-#~ "sua opinião! Por favor submita um relatório em Bugzilla:<ulink url="
-#~ "\"http://bugzilla.redhat.com/ bugzilla/\">http://bugzilla.redhat.com/"
-#~ "bugzilla/</ulink> contra o produto <application>&PRODUCT;.</application>."
-
-#~ msgid ""
-#~ "When submitting a bug report, be sure to mention the manual's identifier: "
-#~ "<citetitle>&BOOKID;</citetitle>"
-#~ msgstr ""
-#~ "Uma vez submetendo um relatório de bug, por favor mencione a "
-#~ "identificação do manual:<citetitle>&BOOKID;</citetitle>."
-
-#~ msgid ""
-#~ "If you have a suggestion for improving the documentation, try to be as "
-#~ "specific as possible when describing it. If you have found an error, "
-#~ "please include the section number and some of the surrounding text so we "
-#~ "can find it easily."
-#~ msgstr ""
-#~ "Se você tiver uma sugestão para o melhoramento deste documento, por favor "
-#~ "tente ser o mais específico possível em sua descrição. Caso você tenha "
-#~ "encontrado um erro, por favor inclua o número da seção e alguns detalhes "
-#~ "a respeito do texto para a nossa melhor identificação."
-
-#~ msgid "translator-credits"
-#~ msgstr "créditos do tradutor"
