--- a/publican/content/common/ta-IN/Conventions.po
+++ b/publican/content/common/ta-IN/Conventions.po
@@ -1,18 +1,20 @@
 # translation of Conventions.po to Tamil
-# I. Felix <ifelix@redhat.com>, 2007.
+# I. Felix <ifelix@redhat.com>, 2007, 2008.
 msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2008-09-29 04:47+0000\n"
-"PO-Revision-Date: 2007-10-29 16:42+0530\n"
+"PO-Revision-Date: 2008-10-07 16:34+0530\n"
 "Last-Translator: I. Felix <ifelix@redhat.com>\n"
 "Language-Team: Tamil <fedora-trans-ta@redhat.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
-"Plural-Forms: nplurals=2; plural=(n!=1);\n"
+"Plural-Forms: nplurals=2; plural=(n!=1);\\n\n"
+"\n"
+"\n"
 "\n"
 "\n"
 "\n"
@@ -30,7 +32,7 @@ msgstr "ஆவண பெயரிடல்கள்"
 msgid ""
 "This manual uses several conventions to highlight certain words and phrases "
 "and draw attention to specific pieces of information."
-msgstr ""
+msgstr "இந்த கையேடு பல்வேறு பெயரிடல்களை சில வார்த்தைகள் மற்றும் வாக்கியங்களை முன்னிலைப்படுத்தவும் குறிப்பிட்ட தகவலுக்கு கவனம் கொடுக்கவும் பயன்படுகிறது."
 
 #. Tag: para
 #: Conventions.xml:11
@@ -42,13 +44,13 @@ msgid ""
 "installed on your system. If not, alternative but equivalent typefaces are "
 "displayed. Note: Red Hat Enterprise Linux 5 and later includes the "
 "Liberation Fonts set by default."
-msgstr ""
+msgstr "PDF மற்றும் தாள் பதிப்புகளில், இந்த கையேடு <ulink url=\"https://fedorahosted.org/liberation-fonts/\">லிபரேஷன் எழுத்துருக்களை</ulink> செட்டிலிருந்து வரையப்பட்ட எழுத்துருக்களை பயன்படுத்துகிறது. இந்த செட் உங்கள் கணினியில் நிறுவப்பட்டிருந்தால், லிபரேஷன் எழுத்துருக்கள் செட் HTML பதிப்புகளிலும் பயன்படுத்தப்படும். அப்படி இல்லையெனில், மாற்றாக ஆனால் அதற்கு சமமான எழுத்துருக்கள் காட்டப்படும். குறிப்பு: Red Hat Enterprise Linux 5 மற்றும் அதற்கு அடுத்த பதிப்பில் முன்னிருப்பாக லிபரேஷன் எழுத்துருக்கள் சேர்க்கப்பட்டுள்ளன."
 
 #. Tag: title
 #: Conventions.xml:16
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Typographic Conventions"
-msgstr "ஆவண பெயரிடல்கள்"
+msgstr "டைப்போகிராஃபிக் பெயரிடல்கள்"
 
 #. Tag: para
 #: Conventions.xml:18
@@ -57,13 +59,13 @@ msgid ""
 "Four typographic conventions are used to call attention to specific words "
 "and phrases. These conventions, and the circumstances they apply to, are as "
 "follows."
-msgstr ""
+msgstr "நான்கு டைப்போகிராபி பெயரிடல்கள் குறிப்பிட்ட வார்த்தைகள் அல்லது வாக்கியங்களை குறிப்பிட அழைக்க பயன்படுகிறது. இந்த பெயரிடல்கள் மற்றும் சூழ்நிலைகள் பின்வரும் இருக்கும்."
 
 #. Tag: literal
 #: Conventions.xml:23
 #, no-c-format
 msgid "Mono-spaced Bold"
-msgstr ""
+msgstr "மோனோ-இடைவெளி தடிமன்"
 
 #. Tag: para
 #: Conventions.xml:26
@@ -71,7 +73,7 @@ msgstr ""
 msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight key caps and key-combinations. For example:"
-msgstr ""
+msgstr "கணினி உள்ளீடு, ஷெல் கட்டளைகள், கோப்பு பெயர்கள் மற்றும் பாதையுகளையும் சேர்த்து முன்னிலைப்படுத்த உதவுகிறது. மேலும் தலைப்பெழுத்து விசை மற்றும் விசை கலவைகளையும் முன்னிலைப்படுத்த பயன்படுகிறது. எடுத்துக்காட்டாக:"
 
 #. Tag: section
 #: Conventions.xml:28
@@ -159,12 +161,14 @@ msgid ""
 "firstterm>). Unlike other modules, only one module from the MPM group can be "
 "loaded by the Apache HTTP Server. </para> </blockquote>"
 msgstr ""
+"<blockquote> <para> உங்கள் நடப்பு வேலை செய்யும் அடைவில் <filename>my_next_bestselling_novel</filename> கோப்பு உள்ளடக்கத்தைப் பார்க்க <command>cat my_next_bestselling_novel</command> கட்டளையை கட்டளைவரியில் உள்ளிட்டு <keycap>Enter</keycap> ஐ அழுத்தி இதனை இயக்கவும். </para> </blockquote> <para> மேலே உள்ளது ஒரு கோப்பு பெயர், ஒரு ஷெல் கட்டளை மற்றும் ஒரு விசையை மோனோ இடைவெளி தடிமனாகவும் உள்ளிடும் மற்றும் இதர வேறுபடுத்தும் உரைகளுக்கு நன்றி. </para> <para> விசை கலவைகள் விசைகளிலிருந்து இடைகோடுகளாக இணைப்பது மூலம் வேறுபடுத்தும். எடுத்துக்காட்டாக: </para> <blockquote> <para> <keycap>Enter</keycap>ஐ அழுத்தி கட்டளையை இயக்கவும். </para> <para> <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></keycombo> ஐ அழுத்தி முதல் மெய்நிகர் முனையத்திற்கு மாற்றவும். <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></keycombo> ஐ அழுத்தி X-Windows அமர்வுக்குத் திரும்பவும். </para> </blockquote> <para> முதல் வாக்கியம் குறிப்பிட்ட விசையை அழுத்த முன்னிலைப்படுத்தப்படுகிறது. இரண்டாவது இரண்டு செட்கள் மூன்று விசைகளை முன்னிலைப்படுத்துகிறது, ஒவ்வொரு செட்டும் ஒரே நேரத்தில் அழுத்தப்பட்டது. </para> <para> மூலக்குறியீடு விவாதிக்கப்பட்டால், வகுப்பு பெயர்கள், முறைகள், செயல்பாடுகள், மாறி பெயர்கள் மற்றும் கொடுக்கப்பட்ட மதிப்புகள் ஒரு பத்திக்குள் மேல் <literal>Mono-spaced Bold</literal>இல் குறிப்பிட்டது போல கொடுக்கப்பட்டிருக்கும். எடுத்துக்காட்டாக: </para> <blockquote> <para> கோப்பு தொடர்பான வகுப்புகள் <classname>filesystem</classname> ஐ கோப்பு முறைமைக்கும், <classname>file</classname> ஐ கோப்புகளுக்கும் மற்றும் <classname>dir</classname>ஐ அடைவுகளுக்கும் கொண்டிருக்கும். ஒவ்வொரு வகுப்பும் அதன் சொந்த செட் அனுமதிகளை கொண்டிருக்கும். </para> </blockquote> <para> <application>Proportional Bold</application> </para> <para> இது ஒரு கணினியிலுள்ள வார்த்தைகள் அல்லது வாக்கியங்களை குறிக்கும், இது பயன்பாடு பெயர்கள்; உரையாடல் பெட்டி உரை; பெயரிடப்பட்ட பொத்தான்கள்; சோதனை பெட்டி மற்றும் ரேடியோ பொத்தான் பெயர்கள் மெனு தலைப்புகள் மற்றும் துணை மெனு தலைப்புகளை கொண்டிருக்கும். எடுத்துக்காட்டாக: </para> <blockquote> <para> <guimenu>கணினி > முன்னுரிமைகள் > சுட்டி</guimenu> என்பதிலிருந்து <application>சுட்டி முன்னுரிமைகளை</application> தேர்ந்தெடுக்கலாம். <guilabel>பொத்தான்கள்</guilabel> தத்தலில், <guilabel>இடது கை சுட்டி</guilabel> சோதனை பெட்டியை சொடுக்கி  <guibutton>மூடு</guibutton> பொத்தனை சொடுக்கி முதன்மை சுட்டி பொத்தானான இடப்பக்கத்திலிருந்து வலப்பக்கத்திற்கு மாற்றவும் (இடது கை பழக்கமுள்ளவர்களுக்கு ஏற்றவாறு மாற்றலாம்). </para> <para> <application>gedit</application> கோப்பில் சிறப்பு எழுத்துக்களை நுழைக்க, <guimenu>நிரல்கள் > துணைப்பொருட்களை > எழுத்துரு மேப்</guimenu> என்பதை முதன்மை மெனு பட்டியிலிருந்து தேர்ந்தெடுக்கவும். அடுத்து <guimenu>தேடு > கண்டுபிடி&hellip;</guimenu> என்பதை <application>எழுத்துரு மேப்</application> மெனு பட்டியில் தேர்ந்தெடுத்து, <guilabel>தேடு</guilabel> புலத்தில் உள்ளிட்டு <guibutton>அடுத்து</guibutton> என்பதை சொடுக்கவும். <guilabel>எழுத்து அட்டவணையில்</guilabel> நீங்கள் வரிசைப்படுத்திய எழுத்துக்களை முன்னிலைப்படும். இந்த முன்னிலைப்படுத்தப்பட்ட எழுத்தை <guilabel>நகலெடுக்க உரை</guilabel> புலத்தில் வைத்து <guibutton>நகல்</guibutton> பொத்தானை சொடுக்கவும். பின் உங்கள் ஆவணத்திற்கு சென்று <guimenu>திருத்து > ஒட்டு</guimenu> என்பதை <application>gedit</application> மெனு பட்டையில் தேர்ந்தெடுக்கவும். </para> </blockquote> <para> மேலே உள்ள உரை பயன்பாடு பெயர்கள்; கணினி மெனு பெயர்கள் மற்றும் உருப்படிகள்; பயன்பாடு குறிப்பிடும் மெனு பெயர்கள் மற்றும் பொத்தான்கள் மற்றும் வரைகலை முகப்பில் இருக்கும் உரைகள் ஆகியவற்றை கொண்டிருக்கும். </para> <para> <guimenu>></guimenu> என்பது ஒரு மெனு மட்டும் துணை மெனுவுக்கும் இடையே குறிப்பிடப்படும் குறுக்கு வழியாகும். கடினமாக பின்பற்றுவதை தவிர்க்க <guimenuitem>சுட்டி</guimenuitem> என்பதை <guimenu>முன்னுரிமைகள்</guimenu> துணை மெனுவில் <guimenu>கணினி</guimenu> பட்டியிலிருந்து தேர்ந்தெடுகவும் என்பது கடினமான வழியாகும். </para> <para> <command><replaceable>Mono-spaced Bold Italic</replaceable></command> அல்லது <application><replaceable>Proportional Bold Italic</replaceable></application> </para> <para> மோனோ இடைவெளியிடப்பட்ட தடிமன் அல்லது தலைகீழ் தடிமன், சாய்வு மாற்றக்கூடிய அல்லது மாறி உரையை குறிக்கிறது. சாய்வு நீங்கள் உள்ளிடும் உரையை அல்லது சூழ்நிலைக்கு ஏற்றவாறு காட்டப்படும் உரையை குறிக்கிறது. எடுத்துக்காட்டாக: </para> <blockquote> <para> sshஐ பயன்படுத்தி தொலை கணினியை இணைக்க, <command>ssh <replaceable>username</replaceable>@<replaceable>domain.name</replaceable></command> என கட்டளை வரியில் தட்டச்சு செய்யவும். தொலை கணினி <filename>example.com</filename> என்றும் பயனர் பெயல் john என்றால், <command>ssh john@example.com</command> என தட்டச்சு செய்யவும். </para> <para> <command>mount -o remount <replaceable>file-system</replaceable></command> கட்டளை பெயரிடப்பட்ட கோப்பு முறைமையை மறு ஏற்றம் செய்யும். எடுத்துக்காட்டாக, <filename>/home</filename> கோப்பு முறைமையை மறு ஏற்றம் செய்ய <command>mount -o remount /home</command> கட்டளையாகும். </para> <para> தற்போது நிறுவப்பட்ட தொகுப்புகளின் பதிப்பை பார்க்க,"
+"<command>rpm -q <replaceable>package</replaceable></command> கட்டளையை பயன்படுத்தவும். இது பின்வரும் தீர்வை கொடுக்கும்: <command><replaceable>package-version-release</replaceable></command>. </para> </blockquote> <para> மேலே குறிப்பிட்டப்பட்ட சாய்ந்த தடிமன் வார்த்தைகளை குறிக்கவும் &mdash; பயனர் பெயர், domain.name, கோப்பு முறைமை, தொகுப்பு, பதிப்பு மற்றும் வெளியீடு. ஒவ்வொரு வார்த்தையும் இடவைப்பி, நீங்கள் உள்ளீட்ட கட்டளை அல்லது கணினி காட்டும் உரையாகும். </para><para> தரப்படுத்தப்பட்ட பயன்பாட்டிலிருந்து ஒரு வேலைக்கு தலைப்பு, சாய்வாக குறிக்கப்படுவது ஒரு புதிய மற்றும் முக்கியமான சொல்லாகும். எடுத்துக்காட்டாக: </para> <blockquote> <para> Apache HTTP சேவையகம் கோரிக்கையை ஏற்கும் போது, சேவையகம் சேய் செயல்கள் அல்லது த்ரட்களை கையாள வெளியிடப்படுகிறது. இந்த சேய் செயல்கள் அல்லது த்ரட்கள் <firstterm>server-pool</firstterm> எனப்படுகிறது. Apache HTTP Server 2.0இன் கீழ், இந்த server-poolகளை உருவாக்கி பரிமாறிப்பது ஒரு தொகுதி குழுவை கொண்டதாக <firstterm>Multi-Processing Modules</firstterm> என (<firstterm>MPMs</firstterm>) இருக்கும். இது மற்ற தொகுதிகளை போல் இல்லாமல், MPM குழுவிலிருந்து Apache HTTP Serverக்கு ஒரே ஒரு தொகுதி மட்டுமே ஏற்றப்படும். </para> </blockquote>"
 
 #. Tag: title
 #: Conventions.xml:132
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Pull-quote Conventions"
-msgstr "ஆவண பெயரிடல்கள்"
+msgstr "புல்-கோட் பெயரிடல்கள்"
 
 #. Tag: para
 #: Conventions.xml:134
@@ -172,7 +176,7 @@ msgstr "ஆவண பெயரிடல்கள்"
 msgid ""
 "Two, commonly multi-line, data types are set off visually from the "
 "surrounding text."
-msgstr ""
+msgstr "இரண்டு, பொதுவாக பல வரி, தரவு வகைகள் சுற்றியுள்ள உரையிலிருந்து பார்வை நீக்கப்படுகிறது."
 
 #. Tag: para
 #: Conventions.xml:138
@@ -180,7 +184,7 @@ msgstr ""
 msgid ""
 "Output sent to a terminal is set in <computeroutput>Mono-spaced Roman</"
 "computeroutput> and presented thus:"
-msgstr ""
+msgstr "ஒரு முனையத்திற்கு அனுப்பப்பட்ட வெளிப்பாடு <computeroutput>Mono-spaced Roman</computeroutput> இல் அமைப்பட்ட அங்கிருக்கும்:"
 
 #. Tag: screen
 #: Conventions.xml:142
@@ -189,6 +193,8 @@ msgid ""
 "books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
 "books_tests  Desktop1  downloads      images  notes  scripts  svgs"
 msgstr ""
+"books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
+"books_tests  Desktop1  downloads      images  notes  scripts  svgs"
 
 #. Tag: para
 #: Conventions.xml:144
@@ -196,7 +202,7 @@ msgstr ""
 msgid ""
 "Source-code listings are also set in <computeroutput>Mono-spaced Roman</"
 "computeroutput> but are presented and highlighted as follows:"
-msgstr ""
+msgstr "மூலக்குறியீடு பட்டியலிடப்பட்டிருப்பதும் <computeroutput>Mono-spaced Roman</computeroutput>இல் அமைக்கப்பட்டிருக்கும் ஆனால் பின்வருவது போல முன்னிலைப்படுத்தப்பட்டிருக்கும்:"
 
 #. Tag: programlisting
 #: Conventions.xml:148
@@ -223,12 +229,32 @@ msgid ""
 "   \n"
 "}"
 msgstr ""
+"package org.jboss.book.jca.ex1;\n"
+"\n"
+"import javax.naming.InitialContext;\n"
+"\n"
+"public class ExClient\n"
+"{\n"
+"   public static void main(String args[]) \n"
+"       throws Exception\n"
+"   {\n"
+"      InitialContext iniCtx = new InitialContext();\n"
+"      Object         ref    = iniCtx.lookup(\"EchoBean\");\n"
+"      EchoHome       home   = (EchoHome) ref;\n"
+"      Echo           echo   = home.create();\n"
+"\n"
+"      System.out.println(\"Created Echo\");\n"
+"\n"
+"      System.out.println(\"Echo.echo('Hello') = \" + echo.echo(\"Hello\"));\n"
+"   }\n"
+"   \n"
+"}"
 
 #. Tag: title
 #: Conventions.xml:153
 #, no-c-format
 msgid "Notes and Warnings"
-msgstr ""
+msgstr "குறிப்புகள் மற்றும் எச்சரிக்கைகள்"
 
 #. Tag: para
 #: Conventions.xml:155
@@ -236,7 +262,7 @@ msgstr ""
 msgid ""
 "Finally, we use three visual styles to draw attention to information that "
 "might otherwise be overlooked."
-msgstr ""
+msgstr "கடைசியாக, நாம் மூன்று விசுவல் தோற்றங்களை ஒரு தகவலை பெற கவனம் செலுத்த வேண்டும் அல்லது அது தவிர்க்கப்படும்."
 
 #. Tag: title
 #: Conventions.xml:160
@@ -251,7 +277,7 @@ msgid ""
 "A note is a tip or shortcut or alternative approach to the task at hand. "
 "Ignoring a note should have no negative consequences, but you might miss out "
 "on a trick that makes your life easier."
-msgstr ""
+msgstr "ஒரு குறிப்பு என்பது ஒரு துணுக்கு அல்லது குறுக்குவழி அல்லது பணிக்கான மாற்று வழியாகும். ஒரு குறிப்பை தவிர்த்தால் எந்த பாதிப்பும் ஏற்படாது ஆனால் எளிதாக செய்ய வேண்டியதை இழக்க வேண்டியதிருக்கும்."
 
 #. Tag: title
 #: Conventions.xml:167
@@ -267,7 +293,7 @@ msgid ""
 "that only apply to the current session, or services that need restarting "
 "before an update will apply. Ignoring Important boxes won't cause data loss "
 "but may cause irritation and frustration."
-msgstr ""
+msgstr "முக்கியமான பெட்டிகள் விவர பொருட்கள் எளிதாக விடுப்பட்டது: கட்டமைப்பு மாற்றங்கள் மட்டுமே நடப்பு அமர்வில் செயல்படுத்தப்படும் அல்லது சேவைகள் மேம்படுத்துவதற்கு முன் மறுதுவக்கப்பட வேண்டும். முக்கியமான பெட்டிகளை தவிர்த்தல் தரவு இழப்பை ஏற்படுத்தாது ஆனால் மன உளச்சலை ஏற்படுத்தும்."
 
 #. Tag: title
 #: Conventions.xml:175
@@ -281,136 +307,5 @@ msgstr "எச்சரிக்கை"
 msgid ""
 "A Warning should not be ignored. Ignoring warnings will most likely cause "
 "data loss."
-msgstr ""
+msgstr "ஒரு எச்சரிக்கை தவிர்க்கப்பட கூடாது. எச்சரிக்கைகள் தவிர்த்தல் தரவு இழத்தலை ஏற்படுத்தும்."
 
-#~ msgid ""
-#~ "Certain words in this manual are represented in different fonts, styles, "
-#~ "and weights. This highlighting indicates that the word is part of a "
-#~ "specific category. The categories include the following:"
-#~ msgstr ""
-#~ "இந்த கையேட்டில் சில சொற்கள் வேறு எழுத்துரு, தோற்றம் மற்றும் அளவுகளில் "
-#~ "குறிக்கப்பட்டிருக்கும். இவ்வாறு முன்னிலைப்படுத்தப்பட்டிருப்பது ஒரு குறிப்பிட்ட வகையின் "
-#~ "பகுதியை குறிக்கும். அவை பின்வருமாறு இருக்கும்:"
-
-#~ msgid "Courier font"
-#~ msgstr "கொரியர் எழுத்துரு"
-
-#~ msgid ""
-#~ "Courier font represents <command>commands</command>, <filename>file names "
-#~ "and paths</filename>, and <prompt>prompts</prompt> ."
-#~ msgstr ""
-#~ "கொரியர் எழுத்துரு <command>commands</command>, <filename>file names மற்றும் "
-#~ "paths</filename>, மற்றும் <prompt>prompts</prompt> ஐ குறிக்கும்."
-
-#, fuzzy
-#~ msgid ""
-#~ "Desktop       about.html       logs      paulwesterberg.png\n"
-#~ "Mail          backupfiles      mail      reports"
-#~ msgstr ""
-#~ "கீழேயுள்ளது போல காட்டப்பட்டால், அது கணினி வெளிப்பாட்டை குறிக்கும்: <screen>\n"
-#~ "Desktop       about.html       logs      paulwesterberg.png\n"
-#~ "Mail          backupfiles      mail      reports\n"
-#~ "</screen>"
-
-#~ msgid "bold Courier font"
-#~ msgstr "தடிமனான கொரியர் எழுத்துரு"
-
-#~ msgid ""
-#~ "Bold Courier font represents text that you are to type, such as: "
-#~ "<userinput>service jonas start</userinput>"
-#~ msgstr ""
-#~ "தடிமனான கொரியர் எழுத்துரு நீங்கள் தட்டச்சு செய்யும் உரையை கீழேயுள்ளது போல காட்டும்: "
-#~ "<userinput>service jonas start</userinput>"
-
-#~ msgid ""
-#~ "If you have to run a command as root, the root prompt (<literal>#</"
-#~ "literal>) precedes the command:"
-#~ msgstr ""
-#~ "நீங்கள் ஒரு கட்டளையை ரூட்டாக இருந்து இயக்கினால், ரூட் கட்டளை வரி (<literal>#</"
-#~ "literal>) இவ்வாறாக கட்டளையை இயக்கும்:"
-
-#~ msgid "italic Courier font"
-#~ msgstr "சாய்வான கொரியர் எழுத்துரு"
-
-#, fuzzy
-#~ msgid ""
-#~ "Italic Courier font represents a variable, such as an installation "
-#~ "directory: <filename> <replaceable>install_dir</replaceable>/bin/</"
-#~ "filename>"
-#~ msgstr ""
-#~ "சாய்வான கொரியர் எழுத்துரு ஒரு மாறியை குறிக்கும், அதாவது ஒரு நிறுவல் அடைவை போல: "
-#~ "<filename><replaceable>install_dir</replaceable>/bin/</filename>"
-
-#~ msgid "bold font"
-#~ msgstr "தடித்த எழுத்துரு"
-
-#~ msgid ""
-#~ "Bold font represents <application>application programs</application> and "
-#~ "<guilabel>text found on a graphical interface</guilabel>."
-#~ msgstr ""
-#~ "தடித்த எழுத்துரு <application>பயன்பாட்டு நிரல்கள்</application> மற்றும் "
-#~ "<guilabel>வரைகலை முகப்பில் உள்ள உரையை</guilabel> குறிக்கிறது."
-
-#~ msgid ""
-#~ "When shown like this: <guibutton> OK </guibutton>, it indicates a button "
-#~ "on a graphical application interface."
-#~ msgstr ""
-#~ "இவ்வாறு கட்டப்படும் போது: <guibutton> OK </guibutton>என்பது ஒரு வரைகலை "
-#~ "பயன்பாட்டின் முகப்பில் பொத்தானாக குறிக்கும்."
-
-#~ msgid ""
-#~ "Additionally, the manual uses different strategies to draw your attention "
-#~ "to pieces of information. In order of how critical the information is to "
-#~ "you, these items are marked as follows:"
-#~ msgstr ""
-#~ "கூடுதலாக, இந்த கையேடு பல்வேறு வியூகங்களை கொண்டு ஒரு சிறிய விஷயத்தை உங்கள் "
-#~ "கவனத்திற்கு கொண்டு வர பயன்படுகிறது. அந்த தகவல்கள் எவ்வளவு அவசியமானது என்பது "
-#~ "பின்வருமாறு குறிக்கப்பட்டிருக்கும்"
-
-#~ msgid ""
-#~ "A note is typically information that you need to understand the behavior "
-#~ "of the system."
-#~ msgstr "ஒரு குறிப்பு என்பது ஒரு அமைப்பை பற்றி அறிய உதவும் தகவலாகும்."
-
-#~ msgid "A tip is typically an alternative way of performing a task."
-#~ msgstr "ஒரு பணியை செய்யும் போது துணுக்கு ஒரு மாற்று வழியாகும்."
-
-#~ msgid ""
-#~ "Important information is necessary, but possibly unexpected, such as a "
-#~ "configuration change that will not persist after a reboot."
-#~ msgstr ""
-#~ "முக்கியமான தகவல் தேவையானது, ஒரு மறுதுவக்கத்திற்குப் பின் கட்டமைப்பு மாற்றம் "
-#~ "எதிர்பார்க்காமல் எதுவும் நடக்கலாம்."
-
-#~ msgid "Caution"
-#~ msgstr "அபாயம்"
-
-#~ msgid ""
-#~ "A caution indicates an act that would violate your support agreement, "
-#~ "such as recompiling the kernel."
-#~ msgstr "ஒரு அபாயம் கர்னலை மீண்டும் நிறுவும் போது உங்கள் சேவை ஒப்பந்தத்தை மீறுகிறது."
-
-#~ msgid ""
-#~ "A warning indicates potential data loss, as may happen when tuning "
-#~ "hardware for maximum performance."
-#~ msgstr ""
-#~ "ஒரு எச்சரிக்கை வன்பொருளை அதிகபட்ச செயல்திறனுக்கு கூட்டும் போது தரவு இழப்பை "
-#~ "குறிக்கிறது."
-
-#~ msgid "gconftool-2\n"
-#~ msgstr "gconftool-2\n"
-
-#~ msgid ""
-#~ "\n"
-#~ "# <placeholder-1/>\n"
-#~ "\t\t\t\t"
-#~ msgstr ""
-#~ "\n"
-#~ "# <placeholder-1/>\n"
-#~ "\t\t\t\t"
-
-#~ msgid "Tip"
-#~ msgstr "துணுக்கு"
-
-#~ msgid "translator-credits"
-#~ msgstr "I. Felix <ifelix@redhat.com> 2007"
