--- a/publican/content/common/te-IN/Feedback.po
+++ b/publican/content/common/te-IN/Feedback.po
@@ -1,17 +1,18 @@
 # translation of Feedback.po to Telugu
-# Krishna Babu K <kkrothap@redhat.com>, 2007.
+# Krishna Babu K <kkrothap@redhat.com>, 2007, 2008.
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2008-01-02 06:17+0000\n"
-"PO-Revision-Date: 2007-10-29 17:40+0530\n"
+"PO-Revision-Date: 2008-10-06 21:17+0530\n"
 "Last-Translator: Krishna Babu K <kkrothap@redhat.com>\n"
 "Language-Team: Telugu <en@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
+"Plural-Forms: nplurals=2; plural=(n!=1);\n\n"
 
 #. Tag: title
 #: Feedback.xml:6
@@ -29,43 +30,11 @@ msgstr "ప్రతిస్పందన"
 #: Feedback.xml:9
 #, no-c-format
 msgid "contact information for this manual"
-msgstr "ఈ చేతి పుస్తకం కొరకు సంభందిత సమాచారం"
+msgstr "ఈ మాన్యువల్ కొరకు సంప్రదింపు సమాచారం"
 
 #. Tag: para
 #: Feedback.xml:11
 #, no-c-format
 msgid "You should over ride this by creating your own local Feedback.xml file."
-msgstr ""
+msgstr "మీరు మీస్వంత స్థానిక Feedback.xml ఫైలును సృష్టించుట ద్వారా దీనిని ఓవర్‌రైడ్ చేయాలి."
 
-#~ msgid ""
-#~ "If you find a typographical error in this manual, or if you have thought "
-#~ "of a way to make this manual better, we would love to hear from you! "
-#~ "Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat."
-#~ "com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the "
-#~ "product <application>&PRODUCT;.</application>"
-#~ msgstr ""
-#~ "మీరు ఈ చేతి పుస్తకం నందు టైపోగ్రాఫికల్ దోషాన్ని గాని, లేదా మీరు ఈ చేతిపుస్తకం ను ఇంకా బాగా తయారుచేసే "
-#~ "మార్గం ఆలోచించిన, మీరు చెప్పింది వినుటకు మేము ఇష్టపడతాము.దయచేసి నివేదికను Bugzilla లో ఉంచండి: "
-#~ "<ulink url=\"http://bugzilla.redhat.com/bugzilla/\">http://bugzilla."
-#~ "redhat.com/bugzilla/</ulink>ఉత్పత్తి కి విరుద్దంగా<application>&PRODUCT;.</"
-#~ "application>"
-
-#~ msgid ""
-#~ "When submitting a bug report, be sure to mention the manual's identifier: "
-#~ "<citetitle>&BOOKID;</citetitle>"
-#~ msgstr ""
-#~ "బగ్ ను అప్పగించు నప్పుడు,ఖచ్చితంగా చేతిపుస్తకం గుర్తింపును తెలియపరుచుట మరువవద్దు: "
-#~ "<citetitle>&BOOKID;</citetitle>"
-
-#~ msgid ""
-#~ "If you have a suggestion for improving the documentation, try to be as "
-#~ "specific as possible when describing it. If you have found an error, "
-#~ "please include the section number and some of the surrounding text so we "
-#~ "can find it easily."
-#~ msgstr ""
-#~ "మీరు పత్రికీకరణ మెరుగుదల కొరకు సలహా కలిగిఉంటే,దానిని వివరించేటప్పుడు సాద్యమైనంత వరకు ప్రత్యేకంగా "
-#~ "ప్రయత్నించండి.మీరు ఒక దోషాన్ని కనుగొన్నట్లైతే,దయచేసి విభాగం సంఖ్య మరియు దాని చుట్టూఉన్న టెక్స్టును "
-#~ "కలపండి అప్పుడు మేము సులభంగా కనుగొనకలుగుతాము."
-
-#~ msgid "translator-credits"
-#~ msgstr "KrishnaBabu k <kkrothap@redhat.com> 2007"
