--- a/publican/content/common/zh-CN/Feedback.po
+++ b/publican/content/common/zh-CN/Feedback.po
@@ -1,13 +1,15 @@
-# translation of Feedback.po to
+# translation of Feedback.po to Simplified Chinese
 # Xi HUANG <xhuang@redhat.com>, 2007.
+# Leah Liu <lliu@redhat.com>, 2008.
+# translation of Feedback.po to
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2008-01-02 06:17+0000\n"
-"PO-Revision-Date: 2007-10-23 09:58+1000\n"
-"Last-Translator: Xi HUANG <xhuang@redhat.com>\n"
-"Language-Team:  <en@li.org>\n"
+"PO-Revision-Date: 2008-10-09 10:33+1000\n"
+"Last-Translator: Leah Liu <lliu@redhat.com>\n"
+"Language-Team: Simplified Chinese <zh@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -17,7 +19,7 @@ msgstr ""
 #: Feedback.xml:6
 #, no-c-format
 msgid "We Need Feedback!"
-msgstr "我们需要您的反馈！"
+msgstr "我们需要您的反馈意见！"
 
 #. Tag: primary
 #: Feedback.xml:8
@@ -29,39 +31,11 @@ msgstr "反馈"
 #: Feedback.xml:9
 #, no-c-format
 msgid "contact information for this manual"
-msgstr "本手册的联系人"
+msgstr "本手册联系人信息"
 
 #. Tag: para
 #: Feedback.xml:11
 #, no-c-format
 msgid "You should over ride this by creating your own local Feedback.xml file."
-msgstr ""
+msgstr "您应该创建您自己的本地 Feedback.xml 文件来覆盖这个文件。"
 
-#~ msgid ""
-#~ "If you find a typographical error in this manual, or if you have thought "
-#~ "of a way to make this manual better, we would love to hear from you! "
-#~ "Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat."
-#~ "com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the "
-#~ "product <application>&PRODUCT;.</application>"
-#~ msgstr ""
-#~ "如​果​你​发​现​了​排​印​错​误​或​者​有​改​进​本​文​档​的​建​议​，我​们​希​望​能​听​取​你​的​意​见​。​请​在 "
-#~ "Bugzilla <ulink url=\"http://bugzilla.redhat.com/bugzilla/\">http://"
-#~ "bugzilla.redhat.com/bugzilla/</ulink> 里​提​交​关​于产品 "
-#~ "<application>&PRODUCT;.</application> 的​报​告​。​"
-
-#~ msgid ""
-#~ "When submitting a bug report, be sure to mention the manual's identifier: "
-#~ "<citetitle>&BOOKID;</citetitle>"
-#~ msgstr "提交报告时，请​记​得​提​及​文​档​的​标​识​符​：<citetitle>&BOOKID;</citetitle>"
-
-#~ msgid ""
-#~ "If you have a suggestion for improving the documentation, try to be as "
-#~ "specific as possible when describing it. If you have found an error, "
-#~ "please include the section number and some of the surrounding text so we "
-#~ "can find it easily."
-#~ msgstr ""
-#~ "如​果​你​有​改​进​本​文​档​的​建​议​，请​尽​量​将​其​明​确​化​。​如​果​你​发​现​了​错​误​，请​指​出​章​节​号​"
-#~ "以​及​其​周​围​的​相​关​文​字​，以​便​我​们​尽​快​找​到​并​更​正​该​错​误​。​"
-
-#~ msgid "translator-credits"
-#~ msgstr "translator-credits"
